@@ -19,120 +19,148 @@ package com.facebook.buck.android.aapt;
 import com.facebook.buck.android.AaptStep;
 import com.facebook.buck.android.aapt.RDotTxtEntry.IdType;
 import com.facebook.buck.android.aapt.RDotTxtEntry.RType;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
 import com.facebook.buck.event.BuckEventBus;
 import com.facebook.buck.event.ConsoleEvent;
-import com.facebook.buck.io.ProjectFilesystem;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.SourcePathResolver;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.ProjectFilesystemView;
 import com.facebook.buck.step.ExecutionContext;
 import com.facebook.buck.step.Step;
 import com.facebook.buck.step.StepExecutionResult;
-import com.facebook.buck.util.MoreStrings;
-import com.facebook.buck.util.XmlDomParser;
+import com.facebook.buck.step.StepExecutionResults;
+import com.facebook.buck.util.ThrowingPrintWriter;
+import com.facebook.buck.util.json.ObjectMappers;
+import com.facebook.buck.util.xml.DocumentLocation;
+import com.facebook.buck.util.xml.PositionalXmlHandler;
+import com.facebook.buck.util.xml.XmlDomParserWithLineNumbers;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Joiner;
-import com.google.common.base.Optional;
 import com.google.common.base.Preconditions;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
+import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.ImmutableSortedSet;
 import com.google.common.collect.Ordering;
-
+import java.io.IOException;
+import java.io.InputStream;
+import java.nio.file.FileVisitOption;
+import java.nio.file.Path;
+import java.util.Collection;
+import java.util.EnumSet;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
+import javax.xml.xpath.XPathConstants;
+import javax.xml.xpath.XPathExpression;
+import javax.xml.xpath.XPathExpressionException;
+import javax.xml.xpath.XPathFactory;
+import org.w3c.dom.Attr;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.PrintWriter;
-import java.nio.file.Path;
-import java.util.Collection;
-import java.util.Set;
-
-import javax.xml.xpath.XPathConstants;
-import javax.xml.xpath.XPathExpression;
-import javax.xml.xpath.XPathExpressionException;
-import javax.xml.xpath.XPathFactory;
-
 /**
- * Step which parses resources in an android {@code res} directory and compiles them into a
- * {@code R.txt} file, following the exact same format as the Android build tool {@code aapt}.
+ * Step which parses resources in an android {@code res} directory and compiles them into a {@code
+ * R.txt} file, following the exact same format as the Android build tool {@code aapt}.
+ *
  * <p>
  */
 public class MiniAapt implements Step {
 
-  /**
-   * See {@link com.facebook.buck.android.AaptStep} for a list of files that we ignore.
-   */
+  /** See {@link com.facebook.buck.android.AaptStep} for a list of files that we ignore. */
   public static final ImmutableList<String> IGNORED_FILE_EXTENSIONS = ImmutableList.of("orig");
 
   private static final String ID_DEFINITION_PREFIX = "@+id/";
   private static final String ITEM_TAG = "item";
+  private static final String PUBLIC_TAG = "public";
+  private static final String PUBLIC_FILENAME = "public.xml";
   private static final String CUSTOM_DRAWABLE_PREFIX = "app-";
 
   private static final XPathExpression ANDROID_ID_USAGE =
-      createExpression("//@*[starts-with(., '@') and " +
-              "not(starts-with(., '@+')) and " +
-              "not(starts-with(., '@android:')) and " +
-              "not(starts-with(., '@null'))]");
+      createExpression(
+          "//@*[starts-with(., '@') and "
+              + "not(starts-with(., '@+')) and "
+              + "not(starts-with(., '@android:')) and "
+              + "not(starts-with(., '@null'))]");
 
   private static final XPathExpression ANDROID_ID_DEFINITION =
-      createExpression("//@*[starts-with(., '@+') and " +
-              "not(starts-with(., '@+android:id'))]");
+      createExpression("//@*[starts-with(., '@+') and " + "not(starts-with(., '@+android:id'))]");
 
   private static final ImmutableMap<String, RType> RESOURCE_TYPES = getResourceTypes();
-  private static final ImmutableSet<String> IGNORED_TAGS = ImmutableSet.of(
-      "eat-comment",
-      "skip");
 
-  private static final Predicate<Path> ENDS_WITH_XML = new Predicate<Path>() {
-    @Override
-    public boolean apply(Path input) {
-      return input.toString().endsWith(".xml");
-    }
-  };
+  /**
+   * {@code <public>} is a special type of resource that is not be handled by aapt, but can be
+   * analyzed by Android Lint.
+   *
+   * @see <a
+   *     href="https://developer.android.com/studio/projects/android-library#PrivateResources">Private
+   *     resources</a>
+   */
+  private static final ImmutableSet<String> IGNORED_TAGS =
+      ImmutableSet.of("eat-comment", "skip", PUBLIC_TAG);
+
+  public enum ResourceCollectionType {
+    R_DOT_TXT,
+    ANDROID_RESOURCE_INDEX,
+  }
 
   private final SourcePathResolver resolver;
   private final ProjectFilesystem filesystem;
   private final SourcePath resDirectory;
-  private final Path pathToTextSymbolsFile;
-  private final ImmutableSet<Path> pathsToSymblolsOfDeps;
-  private final AaptResourceCollector resourceCollector;
-  private final boolean resourceUnion;
+  private final Path pathToOutputFile;
+  private final ImmutableSet<Path> pathsToSymbolsOfDeps;
+  private final ResourceCollector resourceCollector;
+  private final boolean isGrayscaleImageProcessingEnabled;
+  private final ResourceCollectionType resourceCollectionType;
 
   public MiniAapt(
       SourcePathResolver resolver,
       ProjectFilesystem filesystem,
       SourcePath resDirectory,
       Path pathToTextSymbolsFile,
-      ImmutableSet<Path> pathsToSymblolsOfDeps) {
+      ImmutableSet<Path> pathsToSymbolsOfDeps) {
     this(
         resolver,
         filesystem,
         resDirectory,
         pathToTextSymbolsFile,
-        pathsToSymblolsOfDeps,
-        false);
+        pathsToSymbolsOfDeps,
+        /* isGrayscaleImageProcessingEnabled */ false,
+        ResourceCollectionType.R_DOT_TXT);
   }
 
   public MiniAapt(
       SourcePathResolver resolver,
       ProjectFilesystem filesystem,
       SourcePath resDirectory,
-      Path pathToTextSymbolsFile,
-      ImmutableSet<Path> pathsToSymblolsOfDeps,
-      boolean resourceUnion) {
+      Path pathToOutputFile,
+      ImmutableSet<Path> pathsToSymbolsOfDeps,
+      boolean isGrayscaleImageProcessingEnabled,
+      ResourceCollectionType resourceCollectionType) {
     this.resolver = resolver;
     this.filesystem = filesystem;
     this.resDirectory = resDirectory;
-    this.pathToTextSymbolsFile = pathToTextSymbolsFile;
-    this.pathsToSymblolsOfDeps = pathsToSymblolsOfDeps;
-    this.resourceCollector = new AaptResourceCollector();
-    this.resourceUnion = resourceUnion;
+    this.pathToOutputFile = pathToOutputFile;
+    this.pathsToSymbolsOfDeps = pathsToSymbolsOfDeps;
+    this.isGrayscaleImageProcessingEnabled = isGrayscaleImageProcessingEnabled;
+    this.resourceCollectionType = resourceCollectionType;
+
+    switch (resourceCollectionType) {
+      case R_DOT_TXT:
+        this.resourceCollector = new RDotTxtResourceCollector();
+        break;
+      case ANDROID_RESOURCE_INDEX:
+        this.resourceCollector = new AndroidResourceIndexCollector(filesystem);
+        break;
+      default:
+        throw new IllegalArgumentException(
+            "Invalid resource collector type: " + resourceCollectionType);
+    }
   }
 
   private static XPathExpression createExpression(String expressionStr) {
@@ -155,81 +183,64 @@ public class MiniAapt implements Step {
   }
 
   @VisibleForTesting
-  AaptResourceCollector getResourceCollector() {
+  ResourceCollector getResourceCollector() {
     return resourceCollector;
   }
 
   @Override
-  public StepExecutionResult execute(ExecutionContext context) throws InterruptedException {
+  public StepExecutionResult execute(ExecutionContext context) throws IOException {
     ImmutableSet.Builder<RDotTxtEntry> references = ImmutableSet.builder();
 
+    ProjectFilesystemView filesystemViewWithoutIgnores = filesystem.asView();
     try {
-      collectResources(filesystem, context.getBuckEventBus());
-      processXmlFilesForIds(filesystem, references);
-    } catch (IOException | XPathExpressionException | ResourceParseException e) {
+      collectResources(filesystemViewWithoutIgnores, context.getBuckEventBus());
+      processXmlFilesForIds(filesystemViewWithoutIgnores, references);
+    } catch (XPathExpressionException | ResourceParseException e) {
       context.logError(e, "Error parsing resources to generate resource IDs for %s.", resDirectory);
-      return StepExecutionResult.ERROR;
+      return StepExecutionResults.ERROR;
     }
 
-    try {
-      Set<RDotTxtEntry> missing = verifyReferences(filesystem, references.build());
-      if (!missing.isEmpty()) {
-        context.getBuckEventBus().post(ConsoleEvent.severe(
-            "The following resources were not found when processing %s: \n%s\n",
-            resDirectory,
-            Joiner.on('\n').join(missing)));
-        return StepExecutionResult.ERROR;
-      }
-    } catch (IOException e) {
-      context.logError(e, "Error verifying resources for %s.", resDirectory);
-      return StepExecutionResult.ERROR;
+    Set<RDotTxtEntry> missing = verifyReferences(filesystem, references.build());
+    if (!missing.isEmpty()) {
+      context
+          .getBuckEventBus()
+          .post(
+              ConsoleEvent.severe(
+                  "The following resources were not found when processing %s: \n%s\n",
+                  resDirectory, Joiner.on('\n').join(missing)));
+      return StepExecutionResults.ERROR;
     }
 
-    if (resourceUnion) {
-      try {
-        resourceUnion();
-      } catch (IOException e) {
-        context.logError(e, "Error performing resource union for %s.", resDirectory);
-        return StepExecutionResult.ERROR;
-      }
-    }
-
-    try (PrintWriter writer =
-             new PrintWriter(filesystem.newFileOutputStream(pathToTextSymbolsFile))) {
-      Set<RDotTxtEntry> sortedResources =
-          FluentIterable.from(resourceCollector.getResources()).toSortedSet(Ordering.natural());
-      for (RDotTxtEntry entry : sortedResources) {
-        writer.printf("%s %s %s %s\n", entry.idType, entry.type, entry.name, entry.idValue);
-      }
-    } catch (IOException e) {
-      context.logError(e, "Error writing file: %s", pathToTextSymbolsFile);
-      return StepExecutionResult.ERROR;
-    }
-
-    return StepExecutionResult.SUCCESS;
-  }
-
-  /**
-   * Collect resource information from R.txt for each dep and perform a resource union.
-   * @throws IOException
-   */
-  public void resourceUnion() throws IOException {
-    for (Path depRTxt : pathsToSymblolsOfDeps) {
-      Iterable<String> lines = FluentIterable.from(filesystem.readLines(depRTxt))
-          .filter(MoreStrings.NON_EMPTY)
-          .toList();
-      for (String line : lines) {
-        Optional<RDotTxtEntry> entry = RDotTxtEntry.parse(line);
-        Preconditions.checkState(entry.isPresent());
-        resourceCollector.addResourceIfNotPresent(entry.get());
+    if (resourceCollectionType == ResourceCollectionType.R_DOT_TXT) {
+      RDotTxtResourceCollector rDotTxtResourceCollector =
+          (RDotTxtResourceCollector) resourceCollector;
+      try (ThrowingPrintWriter writer =
+          new ThrowingPrintWriter(filesystem.newFileOutputStream(pathToOutputFile))) {
+        Set<RDotTxtEntry> sortedResources =
+            ImmutableSortedSet.copyOf(Ordering.natural(), rDotTxtResourceCollector.getResources());
+        for (RDotTxtEntry entry : sortedResources) {
+          writer.printf("%s %s %s %s\n", entry.idType, entry.type, entry.name, entry.idValue);
+        }
       }
     }
+    if (resourceCollectionType == ResourceCollectionType.ANDROID_RESOURCE_INDEX) {
+      AndroidResourceIndexCollector androidResourceIndexCollector =
+          (AndroidResourceIndexCollector) resourceCollector;
+
+      ObjectMappers.WRITER.writeValue(
+          filesystem.newFileOutputStream(pathToOutputFile),
+          androidResourceIndexCollector.getResourceIndex());
+    }
+
+    return StepExecutionResults.SUCCESS;
   }
 
   /**
    * Collects file names under the {@code res} directory, except those under directories starting
    * with {@code values}, as resources based on their parent directory.
-   * <p>So for instance, if the directory structure is something like:</p>
+   *
+   * <p>So for instance, if the directory structure is something like:
+   *
    * <pre>
    *   res/
    *       values/ ...
@@ -241,21 +252,23 @@ public class MiniAapt implements Step {
    *              my_view.xml
    *              another_view.xml
    * </pre>
+   *
    * the resulting resources would contain:
+   *
    * <ul>
-   *   <li>R.drawable.image</li>
-   *   <li>R.drawable.nine_patch</li>
-   *   <li>R.layout.my_view</li>
-   *   <li>R.layout.another_view</li>
+   *   <li>R.drawable.image
+   *   <li>R.drawable.nine_patch
+   *   <li>R.layout.my_view
+   *   <li>R.layout.another_view
    * </ul>
-   * <p>
-   * For files under the {@code values*} directories, see
-   * {@link #processValuesFile(ProjectFilesystem, Path)}
+   *
+   * <p>For files under the {@code values*} directories, see {@link
+   * #processValuesFile(ProjectFilesystem, Path)}
    */
-  private void collectResources(ProjectFilesystem filesystem, BuckEventBus eventBus)
+  private void collectResources(ProjectFilesystemView filesystemView, BuckEventBus eventBus)
       throws IOException, ResourceParseException {
-    Collection<Path> contents = filesystem.getDirectoryContents(
-        resolver.getAbsolutePath(resDirectory));
+    Collection<Path> contents =
+        filesystemView.getDirectoryContents(resolver.getRelativePath(resDirectory));
     for (Path dir : contents) {
       if (!filesystem.isDirectory(dir) && !filesystem.isIgnored(dir)) {
         if (!shouldIgnoreFile(dir, filesystem)) {
@@ -269,15 +282,14 @@ public class MiniAapt implements Step {
         if (!isAValuesDir(dirname)) {
           throw new ResourceParseException("'%s' is not a valid values directory.", dir);
         }
-        processValues(filesystem, eventBus, dir);
+        processValues(filesystemView, eventBus, dir);
       } else {
-        processFileNamesInDirectory(filesystem, dir);
+        processFileNamesInDirectory(filesystemView, dir);
       }
-
     }
   }
 
-  void processFileNamesInDirectory(ProjectFilesystem filesystem, Path dir)
+  void processFileNamesInDirectory(ProjectFilesystemView filesystemView, Path dir)
       throws IOException, ResourceParseException {
     String dirname = dir.getFileName().toString();
     int dashIndex = dirname.indexOf('-');
@@ -289,7 +301,7 @@ public class MiniAapt implements Step {
       throw new ResourceParseException("'%s' is not a valid resource sub-directory.", dir);
     }
 
-    for (Path resourceFile : filesystem.getDirectoryContents(dir)) {
+    for (Path resourceFile : filesystemView.getDirectoryContents(dir)) {
       if (shouldIgnoreFile(resourceFile, filesystem)) {
         continue;
       }
@@ -298,13 +310,12 @@ public class MiniAapt implements Step {
       int dotIndex = filename.indexOf('.');
       String resourceName = dotIndex != -1 ? filename.substring(0, dotIndex) : filename;
 
-      RType rType = Preconditions.checkNotNull(RESOURCE_TYPES.get(dirname));
+      RType rType = Objects.requireNonNull(RESOURCE_TYPES.get(dirname));
       if (rType == RType.DRAWABLE) {
         processDrawables(filesystem, resourceFile);
       } else {
         resourceCollector.addIntResourceIfNotPresent(
-            rType,
-            resourceName);
+            rType, resourceName, resourceFile, DocumentLocation.of(0, 0));
       }
     }
   }
@@ -316,6 +327,7 @@ public class MiniAapt implements Step {
     String resourceName = dotIndex != -1 ? filename.substring(0, dotIndex) : filename;
 
     // Look into the XML file.
+    boolean isGrayscaleImage = false;
     boolean isCustomDrawable = false;
     if (filename.endsWith(".xml")) {
       try (InputStream stream = filesystem.newFileInputStream(resourceFile)) {
@@ -323,22 +335,27 @@ public class MiniAapt implements Step {
         Element root = dom.getDocumentElement();
         isCustomDrawable = root.getNodeName().startsWith(CUSTOM_DRAWABLE_PREFIX);
       }
+    } else if (isGrayscaleImageProcessingEnabled) {
+      isGrayscaleImage = filename.endsWith(".g.png");
     }
 
+    DocumentLocation location = DocumentLocation.of(0, 0);
     if (isCustomDrawable) {
       resourceCollector.addCustomDrawableResourceIfNotPresent(
-          RType.DRAWABLE,
-          resourceName);
+          RType.DRAWABLE, resourceName, resourceFile, location);
+    } else if (isGrayscaleImage) {
+      resourceCollector.addGrayscaleImageResourceIfNotPresent(
+          RType.DRAWABLE, resourceName, resourceFile, location);
     } else {
       resourceCollector.addIntResourceIfNotPresent(
-          RType.DRAWABLE,
-          resourceName);
+          RType.DRAWABLE, resourceName, resourceFile, location);
     }
   }
 
-  void processValues(ProjectFilesystem filesystem, BuckEventBus eventBus, Path valuesDir)
+  void processValues(ProjectFilesystemView filesystemView, BuckEventBus eventBus, Path valuesDir)
       throws IOException, ResourceParseException {
-    for (Path path : filesystem.getFilesUnderPath(valuesDir)) {
+    for (Path path :
+        filesystemView.getFilesUnderPath(valuesDir, EnumSet.of(FileVisitOption.FOLLOW_LINKS))) {
       if (shouldIgnoreFile(path, filesystem)) {
         continue;
       }
@@ -351,11 +368,12 @@ public class MiniAapt implements Step {
   }
 
   /**
-   * Processes an {@code xml} file immediately under a {@code values} directory. See
-   * <a href="http://developer.android.com/guide/topics/resources/more-resources.html>More Resource
+   * Processes an {@code xml} file immediately under a {@code values} directory. See <a
+   * href="http://developer.android.com/guide/topics/resources/more-resources.html>More Resource
    * Types</a> to find out more about how resources are defined.
-   * <p>
-   * For an input file with contents like:
+   *
+   * <p>For an input file with contents like:
+   *
    * <pre>
    *   <?xml version="1.0" encoding="utf-8"?>
    *   <resources>
@@ -365,12 +383,14 @@ public class MiniAapt implements Step {
    *     <item name="my_fraction" type="fraction">1.5</item>
    *   </resources>
    * </pre>
+   *
    * the resulting resources would be:
+   *
    * <ul>
-   *   <li>R.integer.number</li>
-   *   <li>R.dimen.dimension</li>
-   *   <li>R.string.hello</li>
-   *   <li>R.fraction.my_fraction</li>
+   *   <li>R.integer.number
+   *   <li>R.dimen.dimension
+   *   <li>R.string.hello
+   *   <li>R.fraction.my_fraction
    * </ul>
    */
   @VisibleForTesting
@@ -395,14 +415,28 @@ public class MiniAapt implements Step {
 
         String resourceType = node.getNodeName();
         if (resourceType.equals(ITEM_TAG)) {
-          Node typeNode = node.getAttributes().getNamedItem("type");
-          if (typeNode == null) {
-            throw new ResourceParseException(
-                "Error parsing file '%s', expected a 'type' attribute in: \n'%s'\n",
-                valuesFile,
-                node.toString());
-          }
+          Node typeNode = verifyNodeHasTypeAttribute(valuesFile, node);
           resourceType = typeNode.getNodeValue();
+        } else if (resourceType.equals(PUBLIC_TAG)) {
+          Node nameAttribute = node.getAttributes().getNamedItem("name");
+          if (nameAttribute == null || nameAttribute.getNodeValue().isEmpty()) {
+            throw new ResourceParseException(
+                "Error parsing file '%s', expected a 'name' attribute in \n'%s'\n",
+                valuesFile, node.toString());
+          }
+          String type = verifyNodeHasTypeAttribute(valuesFile, node).getNodeValue();
+
+          if (!RESOURCE_TYPES.containsKey(type)) {
+            throw new ResourceParseException(
+                "Invalid resource type '%s' in <public> resource '%s' in file '%s'.",
+                type, nameAttribute.getNodeValue(), valuesFile);
+          }
+
+          if (!PUBLIC_FILENAME.equals(valuesFile.getFileName().toString())) {
+            throw new ResourceParseException(
+                "<public> resource '%s' must be declared in res/values/public.xml, but was declared in '%s'",
+                nameAttribute.getNodeValue(), valuesFile);
+          }
         }
 
         if (IGNORED_TAGS.contains(resourceType)) {
@@ -411,27 +445,37 @@ public class MiniAapt implements Step {
 
         if (!RESOURCE_TYPES.containsKey(resourceType)) {
           throw new ResourceParseException(
-              "Invalid resource type '<%s>' in '%s'.",
-              resourceType,
-              valuesFile);
+              "Invalid resource type '<%s>' in '%s'.", resourceType, valuesFile);
         }
 
-        RType rType = Preconditions.checkNotNull(RESOURCE_TYPES.get(resourceType));
-        addToResourceCollector(node, rType);
+        RType rType = Objects.requireNonNull(RESOURCE_TYPES.get(resourceType));
+        addToResourceCollector(node, rType, valuesFile);
       }
     }
   }
 
-  private void addToResourceCollector(Node node, RType rType) throws ResourceParseException {
-    String resourceName = sanitizeName(extractNameAttribute(node));
-    if (rType.equals(RType.STYLEABLE)) {
+  private Node verifyNodeHasTypeAttribute(Path valuesFile, Node node)
+      throws ResourceParseException {
+    Node typeNode = node.getAttributes().getNamedItem("type");
+    if (typeNode == null || typeNode.getNodeValue().isEmpty()) {
+      throw new ResourceParseException(
+          "Error parsing file '%s', expected a 'type' attribute in: \n'%s'\n",
+          valuesFile, node.toString());
+    }
+    return typeNode;
+  }
 
+  private void addToResourceCollector(Node node, RType rType, Path file)
+      throws ResourceParseException {
+    String resourceName = sanitizeName(extractNameAttribute(node));
+    DocumentLocation location = extractDocumentLocation(node);
+
+    if (rType.equals(RType.STYLEABLE)) {
       int count = 0;
       for (Node attrNode = node.getFirstChild();
-           attrNode != null;
-           attrNode = attrNode.getNextSibling()) {
-        if (attrNode.getNodeType() != Node.ELEMENT_NODE ||
-            !attrNode.getNodeName().equals("attr")) {
+          attrNode != null;
+          attrNode = attrNode.getNextSibling()) {
+        if (attrNode.getNodeType() != Node.ELEMENT_NODE || !attrNode.getNodeName().equals("attr")) {
           continue;
         }
 
@@ -440,44 +484,46 @@ public class MiniAapt implements Step {
         resourceCollector.addResource(
             RType.STYLEABLE,
             IdType.INT,
-            String.format(
-                "%s_%s",
-                resourceName,
-                attrName),
-            Integer.toString(count++));
+            String.format("%s_%s", resourceName, attrName),
+            Integer.toString(count++),
+            resourceName,
+            file,
+            extractDocumentLocation(node));
 
         if (!rawAttrName.startsWith("android:")) {
-          resourceCollector.addIntResourceIfNotPresent(RType.ATTR, attrName);
+          resourceCollector.addIntResourceIfNotPresent(
+              RType.ATTR, attrName, file, extractDocumentLocation(node));
         }
       }
 
-      resourceCollector.addIntArrayResourceIfNotPresent(rType, resourceName, count);
+      resourceCollector.addIntArrayResourceIfNotPresent(rType, resourceName, count, file, location);
     } else {
-      resourceCollector.addIntResourceIfNotPresent(rType, resourceName);
+      resourceCollector.addIntResourceIfNotPresent(rType, resourceName, file, location);
     }
   }
 
   void processXmlFilesForIds(
-      ProjectFilesystem filesystem,
-      ImmutableSet.Builder<RDotTxtEntry> references)
+      ProjectFilesystemView filesystemView, ImmutableSet.Builder<RDotTxtEntry> references)
       throws IOException, XPathExpressionException, ResourceParseException {
     Path absoluteResDir = resolver.getAbsolutePath(resDirectory);
     Path relativeResDir = resolver.getRelativePath(resDirectory);
-    for (Path path : filesystem.getFilesUnderPath(absoluteResDir, ENDS_WITH_XML)) {
+    for (Path path :
+        filesystemView.getFilesUnderPath(
+            absoluteResDir,
+            input -> input.toString().endsWith(".xml"),
+            EnumSet.of(FileVisitOption.FOLLOW_LINKS))) {
       String dirname = relativeResDir.relativize(path).getName(0).toString();
       if (isAValuesDir(dirname)) {
         // Ignore files under values* directories.
         continue;
       }
-      processXmlFile(filesystem, path, references);
+      processXmlFile(this.filesystem, path, references);
     }
   }
 
   @VisibleForTesting
   void processXmlFile(
-      ProjectFilesystem filesystem,
-      Path xmlFile,
-      ImmutableSet.Builder<RDotTxtEntry> references)
+      ProjectFilesystem filesystem, Path xmlFile, ImmutableSet.Builder<RDotTxtEntry> references)
       throws IOException, XPathExpressionException, ResourceParseException {
     try (InputStream stream = filesystem.newFileInputStream(xmlFile)) {
       Document dom = parseXml(xmlFile, stream);
@@ -490,13 +536,13 @@ public class MiniAapt implements Step {
         }
         Preconditions.checkState(resourceName.startsWith(ID_DEFINITION_PREFIX));
 
+        Element ownerElement = ((Attr) nodesWithIds.item(i)).getOwnerElement();
+        DocumentLocation location = extractDocumentLocation(ownerElement);
         resourceCollector.addIntResourceIfNotPresent(
-            RType.ID,
-            resourceName.substring(ID_DEFINITION_PREFIX.length()));
+            RType.ID, resourceName.substring(ID_DEFINITION_PREFIX.length()), xmlFile, location);
       }
 
-      NodeList nodesUsingIds =
-          (NodeList) ANDROID_ID_USAGE.evaluate(dom, XPathConstants.NODESET);
+      NodeList nodesUsingIds = (NodeList) ANDROID_ID_USAGE.evaluate(dom, XPathConstants.NODESET);
       for (int i = 0; i < nodesUsingIds.getLength(); i++) {
         String resourceName = nodesUsingIds.item(i).getNodeValue();
         int slashPosition = resourceName.indexOf('/');
@@ -514,8 +560,7 @@ public class MiniAapt implements Step {
         if (!RESOURCE_TYPES.containsKey(rawRType)) {
           throw new ResourceParseException("Invalid reference '%s' in '%s'", resourceName, xmlFile);
         }
-        RType rType = Preconditions.checkNotNull(RESOURCE_TYPES.get(rawRType));
-
+        RType rType = Objects.requireNonNull(RESOURCE_TYPES.get(rawRType));
 
         references.add(new FakeRDotTxtEntry(IdType.INT, rType, sanitizeName(name)));
       }
@@ -525,12 +570,10 @@ public class MiniAapt implements Step {
   private static Document parseXml(Path filepath, InputStream inputStream)
       throws IOException, ResourceParseException {
     try {
-      return XmlDomParser.parse(inputStream);
+      return XmlDomParserWithLineNumbers.parse(inputStream);
     } catch (SAXException e) {
       throw new ResourceParseException(
-          "Error parsing xml file '%s': %s.",
-          filepath,
-          e.getMessage());
+          "Error parsing xml file '%s': %s.", filepath, e.getMessage());
     }
   }
 
@@ -539,8 +582,7 @@ public class MiniAapt implements Step {
     if (attribute == null) {
       throw new ResourceParseException(
           "Error: expected a 'name' attribute in node '%s' with value '%s'",
-          node.getNodeName(),
-          node.getTextContent());
+          node.getNodeName(), node.getTextContent());
     }
     return attribute.getNodeValue();
   }
@@ -554,24 +596,41 @@ public class MiniAapt implements Step {
   }
 
   private static boolean shouldIgnoreFile(Path path, ProjectFilesystem filesystem)
-      throws IOException{
-    return filesystem.isHidden(path) ||
-        IGNORED_FILE_EXTENSIONS.contains(
-            com.google.common.io.Files.getFileExtension(path.getFileName().toString())) ||
-        AaptStep.isSilentlyIgnored(path);
+      throws IOException {
+    return filesystem.isHidden(path)
+        || IGNORED_FILE_EXTENSIONS.contains(
+            com.google.common.io.Files.getFileExtension(path.getFileName().toString()))
+        || AaptStep.isSilentlyIgnored(path);
+  }
+
+  /**
+   * Extracts document location saved by XmlDomParserWithLineNumbers
+   *
+   * @param node a DOM node
+   * @return the document location stored in node
+   */
+  private DocumentLocation extractDocumentLocation(Node node) {
+    return (DocumentLocation) node.getUserData(PositionalXmlHandler.LOCATION_USER_DATA_KEY);
   }
 
   @VisibleForTesting
   ImmutableSet<RDotTxtEntry> verifyReferences(
-      ProjectFilesystem filesystem,
-      ImmutableSet<RDotTxtEntry> references) throws IOException {
+      ProjectFilesystem filesystem, ImmutableSet<RDotTxtEntry> references) throws IOException {
+    if (resourceCollectionType == ResourceCollectionType.ANDROID_RESOURCE_INDEX) {
+      return ImmutableSet.of(); // we don't check dependencies to generate this index
+    }
+
+    RDotTxtResourceCollector castResourceCollector = (RDotTxtResourceCollector) resourceCollector;
     ImmutableSet.Builder<RDotTxtEntry> unresolved = ImmutableSet.builder();
     ImmutableSet.Builder<RDotTxtEntry> definitionsBuilder = ImmutableSet.builder();
-    definitionsBuilder.addAll(resourceCollector.getResources());
-    for (Path depRTxt : pathsToSymblolsOfDeps) {
-      Iterable<String> lines = FluentIterable.from(filesystem.readLines(depRTxt))
-          .filter(MoreStrings.NON_EMPTY)
-          .toList();
+    definitionsBuilder.addAll(castResourceCollector.getResources());
+    for (Path depRTxt : pathsToSymbolsOfDeps) {
+      Iterable<String> lines =
+          filesystem
+              .readLines(depRTxt)
+              .stream()
+              .filter(input -> !Strings.isNullOrEmpty(input))
+              .collect(Collectors.toList());
       for (String line : lines) {
         Optional<RDotTxtEntry> entry = RDotTxtEntry.parse(line);
         Preconditions.checkState(entry.isPresent());
@@ -598,7 +657,6 @@ public class MiniAapt implements Step {
     return getShortName() + " " + resDirectory;
   }
 
-  @SuppressWarnings("serial")
   @VisibleForTesting
   static class ResourceParseException extends Exception {
 
