@@ -19,266 +19,198 @@ package com.facebook.buck.android;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
 
-import com.facebook.buck.android.AndroidResource.BuildOutput;
-import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
-import com.facebook.buck.io.ProjectFilesystem;
-import com.facebook.buck.model.BuildTarget;
-import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.rules.BuildContext;
-import com.facebook.buck.rules.BuildRule;
-import com.facebook.buck.rules.BuildRuleParams;
-import com.facebook.buck.rules.BuildRuleResolver;
-import com.facebook.buck.rules.FakeBuildRuleParamsBuilder;
-import com.facebook.buck.rules.FakeBuildableContext;
-import com.facebook.buck.rules.FakeOnDiskBuildInfo;
-import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.PathSourcePath;
-import com.facebook.buck.rules.RuleKey;
-import com.facebook.buck.rules.Sha1HashCode;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.SourcePathResolver;
-import com.facebook.buck.rules.TargetGraph;
-import com.facebook.buck.rules.keys.DefaultRuleKeyBuilderFactory;
-import com.facebook.buck.rules.keys.InputBasedRuleKeyBuilderFactory;
+import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.BuildTargetFactory;
+import com.facebook.buck.core.model.targetgraph.TargetGraph;
+import com.facebook.buck.core.model.targetgraph.TargetGraphFactory;
+import com.facebook.buck.core.model.targetgraph.TargetNode;
+import com.facebook.buck.core.rulekey.RuleKey;
+import com.facebook.buck.core.rules.ActionGraphBuilder;
+import com.facebook.buck.core.rules.BuildRule;
+import com.facebook.buck.core.rules.BuildRuleParams;
+import com.facebook.buck.core.rules.SourcePathRuleFinder;
+import com.facebook.buck.core.rules.TestBuildRuleParams;
+import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
+import com.facebook.buck.core.sourcepath.FakeSourcePath;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
+import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.rules.keys.TestDefaultRuleKeyFactory;
+import com.facebook.buck.rules.keys.TestInputBasedRuleKeyFactory;
 import com.facebook.buck.testutil.FakeFileHashCache;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
-import com.facebook.buck.util.cache.DefaultFileHashCache;
-import com.google.common.base.Optional;
-import com.google.common.base.Strings;
+import com.facebook.buck.util.cache.FileHashCache;
+import com.facebook.buck.util.cache.FileHashCacheMode;
+import com.facebook.buck.util.cache.impl.StackedFileHashCache;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSortedMap;
 import com.google.common.collect.ImmutableSortedSet;
-import com.google.common.hash.Hashing;
-
-import org.easymock.EasyMock;
+import java.io.IOException;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.function.Function;
 import org.hamcrest.Matchers;
 import org.junit.Test;
-
-import java.io.IOException;
-import java.nio.file.Paths;
-
 
 public class AndroidResourceTest {
 
   @Test
-  public void testRuleKeyForDifferentInputFilenames() throws IOException {
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    SourcePathResolver pathResolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-    );
-
+  public void testRuleKeyForDifferentInputFilenames() {
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//java/src/com/facebook/base:res");
-    BuildRuleParams params = new FakeBuildRuleParamsBuilder(buildTarget).build();
+    Function<Path, ActionGraphBuilder> createResourceRule =
+        (Path resourcePath) -> {
+          FakeProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
+          projectFilesystem.createNewFile(resourcePath);
+          projectFilesystem.createNewFile(
+              Paths.get("java/src/com/facebook/base/assets/drawable/B.xml"));
 
-    AndroidResource androidResource1 = AndroidResourceRuleBuilder.newBuilder()
-        .setResolver(pathResolver)
-        .setBuildRuleParams(params)
-        .setRes(new FakeSourcePath("java/src/com/facebook/base/res"))
-        .setResSrcs(
-            ImmutableSortedSet.of(
-                new FakeSourcePath(
-                    params.getProjectFilesystem(),
-                    "java/src/com/facebook/base/res/drawable/A.xml")))
-        .setRDotJavaPackage("com.facebook")
-        .setAssets(new FakeSourcePath("java/src/com/facebook/base/assets"))
-        .setAssetsSrcs(
-            ImmutableSortedSet.of(
-                new FakeSourcePath(
-                    params.getProjectFilesystem(),
-                    "java/src/com/facebook/base/assets/drawable/B.xml")))
-        .setManifest(
-            new PathSourcePath(
-                projectFilesystem,
-                Paths.get("java/src/com/facebook/base/AndroidManifest.xml")))
-        .build();
+          TargetNode<?> resourceNode =
+              AndroidResourceBuilder.createBuilder(buildTarget, projectFilesystem)
+                  .setRes(FakeSourcePath.of(projectFilesystem, "java/src/com/facebook/base/res"))
+                  .setRDotJavaPackage("com.facebook")
+                  .setAssets(
+                      FakeSourcePath.of(projectFilesystem, "java/src/com/facebook/base/assets"))
+                  .setManifest(
+                      FakeSourcePath.of(
+                          projectFilesystem, "java/src/com/facebook/base/AndroidManifest.xml"))
+                  .build();
 
-    AndroidResource androidResource2 = AndroidResourceRuleBuilder.newBuilder()
-        .setResolver(pathResolver)
-        .setBuildRuleParams(params)
-        .setRes(new FakeSourcePath("java/src/com/facebook/base/res"))
-        .setResSrcs(
-            ImmutableSortedSet.of(
-                new FakeSourcePath(
-                    params.getProjectFilesystem(),
-                    "java/src/com/facebook/base/res/drawable/C.xml")))
-        .setRDotJavaPackage("com.facebook")
-        .setAssets(new FakeSourcePath("java/src/com/facebook/base/assets"))
-        .setAssetsSrcs(
-            ImmutableSortedSet.of(
-                new FakeSourcePath(
-                    params.getProjectFilesystem(),
-                    "java/src/com/facebook/base/assets/drawable/B.xml")))
-        .setManifest(
-            new PathSourcePath(
-                projectFilesystem,
-                Paths.get("java/src/com/facebook/base/AndroidManifest.xml")))
-        .build();
+          TargetGraph targetGraph = TargetGraphFactory.newInstance(resourceNode);
+          return new TestActionGraphBuilder(targetGraph);
+        };
 
-    FakeFileHashCache hashCache = FakeFileHashCache.createFromStrings(
-        ImmutableMap.of(
-            "java/src/com/facebook/base/AndroidManifest.xml", "bbbbbbbbbb",
-            "java/src/com/facebook/base/assets/drawable/A.xml", "cccccccccccc",
-            "java/src/com/facebook/base/assets/drawable/B.xml", "aaaaaaaaaaaa",
-            "java/src/com/facebook/base/res/drawable/A.xml", "dddddddddd",
-            "java/src/com/facebook/base/res/drawable/C.xml", "eeeeeeeeee"
-        ));
-    RuleKey ruleKey1 = new DefaultRuleKeyBuilderFactory(0, hashCache, pathResolver).build(
-        androidResource1);
-    RuleKey ruleKey2 = new DefaultRuleKeyBuilderFactory(0, hashCache, pathResolver).build(
-        androidResource2);
+    FakeFileHashCache hashCache =
+        FakeFileHashCache.createFromStrings(
+            ImmutableMap.of(
+                "java/src/com/facebook/base/AndroidManifest.xml", "bbbbbbbbbb",
+                "java/src/com/facebook/base/assets/drawable/B.xml", "aaaaaaaaaaaa",
+                "java/src/com/facebook/base/res/drawable/A.xml", "dddddddddd",
+                "java/src/com/facebook/base/res/drawable/C.xml", "eeeeeeeeee"));
+
+    ActionGraphBuilder builder1 =
+        createResourceRule.apply(Paths.get("java/src/com/facebook/base/res/drawable/A.xml"));
+    ActionGraphBuilder builder2 =
+        createResourceRule.apply(Paths.get("java/src/com/facebook/base/res/drawable/C.xml"));
+
+    BuildRule androidResource1 = builder1.requireRule(buildTarget);
+    SourcePathRuleFinder ruleFinder1 = new SourcePathRuleFinder(builder1);
+    SourcePathResolver pathResolver1 = DefaultSourcePathResolver.from(ruleFinder1);
+
+    BuildRule androidResource2 = builder2.requireRule(buildTarget);
+    SourcePathRuleFinder ruleFinder2 = new SourcePathRuleFinder(builder2);
+    SourcePathResolver pathResolver2 = DefaultSourcePathResolver.from(ruleFinder2);
+
+    RuleKey ruleKey1 =
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver1, ruleFinder1)
+            .build(androidResource1);
+    RuleKey ruleKey2 =
+        new TestDefaultRuleKeyFactory(hashCache, pathResolver2, ruleFinder2)
+            .build(androidResource2);
 
     assertNotEquals(
-        "The two android_resource rules should have different rule keys.",
-        ruleKey1,
-        ruleKey2);
+        "The two android_resource rules should have different rule keys.", ruleKey1, ruleKey2);
   }
 
   @Test
-  public void testAbiKeyExcludesEmptyResources() throws IOException {
-    BuildRuleResolver ruleResolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    SourcePathResolver pathResolver = new SourcePathResolver(ruleResolver);
-
-    BuildRule resourceRule1 = ruleResolver.addToIndex(
-        AndroidResourceRuleBuilder.newBuilder()
-            .setResolver(pathResolver)
-            .setBuildTarget(BuildTargetFactory.newInstance("//android_res/com/example:res1"))
-            .setRDotJavaPackage("com.facebook")
-            .setRes(new FakeSourcePath("android_res/com/example/res1"))
-            .build());
-    setAndroidResourceBuildOutput(resourceRule1, "a");
-    BuildRule resourceRule2 = ruleResolver.addToIndex(
-        AndroidResourceRuleBuilder.newBuilder()
-            .setResolver(pathResolver)
-            .setBuildTarget(BuildTargetFactory.newInstance("//android_res/com/example:res2"))
-            .setRDotJavaPackage("com.facebook")
-            .build());
-    setAndroidResourceBuildOutput(resourceRule2, "b");
-    BuildTarget target = BuildTargetFactory.newInstance("//android_res/com/example:res3");
-    ImmutableSortedSet<BuildRule> deps = ImmutableSortedSet.of(resourceRule1, resourceRule2);
-    BuildRule resourceRule3 = ruleResolver.addToIndex(
-        AndroidResourceRuleBuilder.newBuilder()
-            .setResolver(pathResolver)
-            .setBuildTarget(BuildTargetFactory.newInstance("//android_res/com/example:res3"))
-            .setDeps(deps)
-            .setBuildRuleParams(
-                new FakeBuildRuleParamsBuilder(target)
-                    .setDeclaredDeps(deps)
-                    .build())
-            .build());
-
-    FakeBuildableContext buildableContext = new FakeBuildableContext();
-    assertTrue(
-        resourceRule3
-            .getBuildSteps(
-                EasyMock.createMock(BuildContext.class),
-                buildableContext)
-            .isEmpty());
-
-    buildableContext.assertContainsMetadataMapping(
-        AndroidResource.METADATA_KEY_FOR_ABI,
-        Hashing.sha1().newHasher().hash().toString());
-  }
-
-  @Test
-  public void testGetRDotJavaPackageWhenPackageIsSpecified() {
-    AndroidResource androidResource = new AndroidResource(
-        new FakeBuildRuleParamsBuilder("//foo:bar").build(),
-        new SourcePathResolver(
-            new BuildRuleResolver(
-              TargetGraph.EMPTY,
-              new DefaultTargetNodeToBuildRuleTransformer())
-        ),
-        /* deps */ ImmutableSortedSet.<BuildRule>of(),
-        new FakeSourcePath("foo/res"),
-        ImmutableSortedSet.of((SourcePath) new FakeSourcePath("foo/res/values/strings.xml")),
-        Optional.<SourcePath>absent(),
-        /* rDotJavaPackage */ "com.example.android",
-        /* assets */ null,
-        /* assetsSrcs */ ImmutableSortedSet.<SourcePath>of(),
-        Optional.<SourcePath>absent(),
-        /* manifestFile */ null,
-        /* hasWhitelistedStrings */ false);
+  public void testGetRDotJavaPackageWhenPackageIsSpecified() throws IOException {
+    ProjectFilesystem projectFilesystem = FakeProjectFilesystem.createRealTempFilesystem();
+    BuildTarget buildTarget =
+        BuildTargetFactory.newInstance(
+            projectFilesystem.getRootPath(), "//java/src/com/facebook/base:res");
+    BuildRuleParams params = TestBuildRuleParams.create();
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
+    SourcePathResolver resolver = DefaultSourcePathResolver.from(ruleFinder);
+    AndroidResource androidResource =
+        new AndroidResource(
+            buildTarget,
+            projectFilesystem,
+            params,
+            ruleFinder,
+            /* deps */ ImmutableSortedSet.of(),
+            FakeSourcePath.of("foo/res"),
+            ImmutableSortedMap.of(
+                Paths.get("values/strings.xml"), FakeSourcePath.of("foo/res/values/strings.xml")),
+            /* rDotJavaPackage */ "com.example.android",
+            /* assets */ null,
+            /* assetsSrcs */ ImmutableSortedMap.of(),
+            /* manifestFile */ null,
+            /* hasWhitelistedStrings */ false);
+    projectFilesystem.writeContentsToPath(
+        "com.example.android" + System.lineSeparator(),
+        resolver.getRelativePath(androidResource.getPathToRDotJavaPackageFile()));
+    androidResource.initializeFromDisk(resolver);
     assertEquals("com.example.android", androidResource.getRDotJavaPackage());
   }
 
   @Test
-  public void testGetRDotJavaPackageWhenPackageIsNotSpecified() {
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    AndroidResource androidResource = new AndroidResource(
-        new FakeBuildRuleParamsBuilder("//foo:bar").build(),
-        new SourcePathResolver(
-            new BuildRuleResolver(
-              TargetGraph.EMPTY,
-              new DefaultTargetNodeToBuildRuleTransformer())
-        ),
-        /* deps */ ImmutableSortedSet.<BuildRule>of(),
-        new FakeSourcePath("foo/res"),
-        ImmutableSortedSet.of((SourcePath) new FakeSourcePath("foo/res/values/strings.xml")),
-        Optional.<SourcePath>absent(),
-        /* rDotJavaPackage */ null,
-        /* assets */ null,
-        /* assetsSrcs */ ImmutableSortedSet.<SourcePath>of(),
-        Optional.<SourcePath>absent(),
-        /* manifestFile */ new PathSourcePath(
+  public void testGetRDotJavaPackageWhenPackageIsNotSpecified() throws IOException {
+    ProjectFilesystem projectFilesystem = FakeProjectFilesystem.createRealTempFilesystem();
+    BuildTarget buildTarget =
+        BuildTargetFactory.newInstance(
+            projectFilesystem.getRootPath(), "//java/src/com/facebook/base:res");
+    BuildRuleParams params = TestBuildRuleParams.create();
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
+    SourcePathResolver resolver = DefaultSourcePathResolver.from(ruleFinder);
+    AndroidResource androidResource =
+        new AndroidResource(
+            buildTarget,
             projectFilesystem,
-            Paths.get("foo/AndroidManifest.xml")),
-        /* hasWhitelistedStrings */ false);
-    FakeOnDiskBuildInfo onDiskBuildInfo = new FakeOnDiskBuildInfo();
-    onDiskBuildInfo.putMetadata(AndroidResource.METADATA_KEY_FOR_ABI, Strings.repeat("a", 40));
-    onDiskBuildInfo.putMetadata(AndroidResource.METADATA_KEY_FOR_R_DOT_JAVA_PACKAGE, "com.ex.pkg");
-    androidResource.initializeFromDisk(onDiskBuildInfo);
+            params,
+            ruleFinder,
+            /* deps */ ImmutableSortedSet.of(),
+            FakeSourcePath.of("foo/res"),
+            ImmutableSortedMap.of(
+                Paths.get("values/strings.xml"), FakeSourcePath.of("foo/res/values/strings.xml")),
+            /* rDotJavaPackage */ null,
+            /* assets */ null,
+            /* assetsSrcs */ ImmutableSortedMap.of(),
+            /* manifestFile */ FakeSourcePath.of(projectFilesystem, "foo/AndroidManifest.xml"),
+            /* hasWhitelistedStrings */ false);
+    projectFilesystem.writeContentsToPath(
+        "com.ex.pkg" + System.lineSeparator(),
+        resolver.getRelativePath(androidResource.getPathToRDotJavaPackageFile()));
+    androidResource.initializeFromDisk(resolver);
     assertEquals("com.ex.pkg", androidResource.getRDotJavaPackage());
   }
 
   @Test
   public void testInputRuleKeyChangesIfDependencySymbolsChanges() throws Exception {
-    BuildRuleResolver resolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    SourcePathResolver pathResolver = new SourcePathResolver(resolver);
     ProjectFilesystem filesystem = new FakeProjectFilesystem();
-    DefaultFileHashCache fileHashCache = new DefaultFileHashCache(filesystem);
-    AndroidResource dep =
-        (AndroidResource) AndroidResourceBuilder
-            .createBuilder(BuildTargetFactory.newInstance("//:dep"))
-            .setManifest(new FakeSourcePath("manifest"))
-            .setRes(Paths.get("res"))
-            .build(resolver, filesystem);
-    AndroidResource resource =
-        (AndroidResource) AndroidResourceBuilder
-            .createBuilder(BuildTargetFactory.newInstance("//:rule"))
-            .setDeps(ImmutableSortedSet.of(dep.getBuildTarget()))
-            .build(resolver, filesystem);
 
+    TargetNode<?> depNode =
+        AndroidResourceBuilder.createBuilder(BuildTargetFactory.newInstance("//:dep"), filesystem)
+            .setManifest(FakeSourcePath.of("manifest"))
+            .setRes(Paths.get("res"))
+            .build();
+    TargetNode<?> resourceNode =
+        AndroidResourceBuilder.createBuilder(BuildTargetFactory.newInstance("//:rule"), filesystem)
+            .setDeps(ImmutableSortedSet.of(depNode.getBuildTarget()))
+            .build();
+
+    TargetGraph targetGraph = TargetGraphFactory.newInstance(depNode, resourceNode);
+    ActionGraphBuilder graphBuilder = new TestActionGraphBuilder(targetGraph);
+
+    AndroidResource dep = (AndroidResource) graphBuilder.requireRule(depNode.getBuildTarget());
+    AndroidResource resource =
+        (AndroidResource) graphBuilder.requireRule(resourceNode.getBuildTarget());
+
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
+    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+    FileHashCache fileHashCache =
+        StackedFileHashCache.createDefaultHashCaches(filesystem, FileHashCacheMode.DEFAULT);
     filesystem.writeContentsToPath(
-        "something",
-        pathResolver.getRelativePath(dep.getPathToTextSymbolsFile()));
-    RuleKey original = new InputBasedRuleKeyBuilderFactory(
-        0,
-        fileHashCache,
-        pathResolver)
-        .build(resource).get();
+        "something", pathResolver.getRelativePath(dep.getPathToTextSymbolsFile()));
+    RuleKey original =
+        new TestInputBasedRuleKeyFactory(fileHashCache, pathResolver, ruleFinder).build(resource);
 
     fileHashCache.invalidateAll();
 
     filesystem.writeContentsToPath(
-        "something else",
-        pathResolver.getRelativePath(dep.getPathToTextSymbolsFile()));
-    RuleKey changed = new InputBasedRuleKeyBuilderFactory(
-        0,
-        fileHashCache,
-        pathResolver)
-        .build(resource).get();
+        "something else", pathResolver.getRelativePath(dep.getPathToTextSymbolsFile()));
+    RuleKey changed =
+        new TestInputBasedRuleKeyFactory(fileHashCache, pathResolver, ruleFinder).build(resource);
 
     assertThat(original, Matchers.not(Matchers.equalTo(changed)));
-  }
-
-  private void setAndroidResourceBuildOutput(BuildRule resourceRule, String hashChar) {
-    if (resourceRule instanceof AndroidResource) {
-      ((AndroidResource) resourceRule)
-          .getBuildOutputInitializer()
-          .setBuildOutput(new BuildOutput(Sha1HashCode.of(Strings.repeat(hashChar, 40))));
-    }
   }
 }
