@@ -17,250 +17,265 @@
 package com.facebook.buck.android;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 
-import com.facebook.buck.artifact_cache.ArtifactCache;
-import com.facebook.buck.event.BuckEventBusFactory;
-import com.facebook.buck.io.ProjectFilesystem;
-import com.facebook.buck.jvm.core.JavaPackageFinder;
+import com.facebook.buck.core.build.buildable.context.FakeBuildableContext;
+import com.facebook.buck.core.build.context.BuildContext;
+import com.facebook.buck.core.build.context.FakeBuildContext;
+import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.BuildTargetFactory;
+import com.facebook.buck.core.model.impl.BuildTargetPaths;
+import com.facebook.buck.core.model.targetgraph.TestBuildRuleCreationContextFactory;
+import com.facebook.buck.core.rules.ActionGraphBuilder;
+import com.facebook.buck.core.rules.BuildRule;
+import com.facebook.buck.core.rules.BuildRuleParams;
+import com.facebook.buck.core.rules.SourcePathRuleFinder;
+import com.facebook.buck.core.rules.TestBuildRuleParams;
+import com.facebook.buck.core.rules.impl.FakeBuildRule;
+import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
+import com.facebook.buck.core.sourcepath.FakeSourcePath;
+import com.facebook.buck.core.sourcepath.PathSourcePath;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
+import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
+import com.facebook.buck.core.toolchain.ToolchainProvider;
+import com.facebook.buck.core.toolchain.impl.ToolchainProviderBuilder;
+import com.facebook.buck.io.BuildCellRelativePath;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.jvm.java.JavaLibraryBuilder;
 import com.facebook.buck.jvm.java.Keystore;
 import com.facebook.buck.jvm.java.KeystoreBuilder;
-import com.facebook.buck.model.BuildId;
-import com.facebook.buck.model.BuildTarget;
-import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.model.BuildTargets;
-import com.facebook.buck.parser.BuildTargetParser;
-import com.facebook.buck.parser.BuildTargetPatternParser;
-import com.facebook.buck.parser.NoSuchBuildTargetException;
-import com.facebook.buck.rules.ActionGraph;
-import com.facebook.buck.rules.BuildContext;
-import com.facebook.buck.rules.BuildRule;
-import com.facebook.buck.rules.BuildRuleParams;
-import com.facebook.buck.rules.BuildRuleResolver;
-import com.facebook.buck.rules.CellPathResolver;
-import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
-import com.facebook.buck.rules.ExopackageInfo;
-import com.facebook.buck.rules.FakeBuildRule;
-import com.facebook.buck.rules.FakeBuildRuleParamsBuilder;
-import com.facebook.buck.rules.FakeBuildableContext;
-import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.ImmutableBuildContext;
-import com.facebook.buck.rules.InstallableApk;
-import com.facebook.buck.rules.PathSourcePath;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.SourcePathResolver;
-import com.facebook.buck.rules.TargetGraph;
-import com.facebook.buck.shell.ShellStep;
+import com.facebook.buck.parser.exceptions.NoSuchBuildTargetException;
+import com.facebook.buck.rules.coercer.SourceSet;
+import com.facebook.buck.rules.macros.StringWithMacrosUtils;
+import com.facebook.buck.sandbox.NoSandboxExecutionStrategy;
+import com.facebook.buck.shell.AbstractGenruleStep;
 import com.facebook.buck.step.ExecutionContext;
 import com.facebook.buck.step.Step;
-import com.facebook.buck.step.StepRunner;
 import com.facebook.buck.step.TestExecutionContext;
-import com.facebook.buck.step.fs.MakeCleanDirectoryStep;
-import com.facebook.buck.step.fs.MkdirAndSymlinkFileStep;
 import com.facebook.buck.step.fs.MkdirStep;
 import com.facebook.buck.step.fs.RmStep;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
+import com.facebook.buck.step.fs.SymlinkTreeStep;
 import com.facebook.buck.testutil.MoreAsserts;
-import com.facebook.buck.timing.Clock;
-import com.facebook.buck.util.ObjectMappers;
 import com.facebook.buck.util.environment.Platform;
-import com.google.common.base.Functions;
-import com.google.common.base.Optional;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.ImmutableSortedSet;
-
-import org.easymock.EasyMock;
-import org.junit.Test;
-
 import java.io.IOException;
 import java.nio.file.FileSystem;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
+import org.hamcrest.Matchers;
+import org.junit.Test;
 
 public class ApkGenruleTest {
 
   private void createSampleAndroidBinaryRule(
-      BuildRuleResolver ruleResolver,
-      ProjectFilesystem filesystem) throws NoSuchBuildTargetException {
+      ActionGraphBuilder graphBuilder, ProjectFilesystem filesystem)
+      throws NoSuchBuildTargetException {
     // Create a java_binary that depends on a java_library so it is possible to create a
     // java_binary rule with a classpath entry and a main class.
     BuildTarget libAndroidTarget =
         BuildTargetFactory.newInstance(filesystem.getRootPath(), "//:lib-android");
-    BuildRule androidLibRule = JavaLibraryBuilder.createBuilder(libAndroidTarget)
-        .addSrc(Paths.get("java/com/facebook/util/Facebook.java"))
-        .build(ruleResolver, filesystem);
+    BuildRule androidLibRule =
+        JavaLibraryBuilder.createBuilder(libAndroidTarget)
+            .addSrc(Paths.get("java/com/facebook/util/Facebook.java"))
+            .build(graphBuilder, filesystem);
 
     BuildTarget keystoreTarget =
         BuildTargetFactory.newInstance(filesystem.getRootPath(), "//keystore:debug");
-    Keystore keystore = (Keystore) KeystoreBuilder.createBuilder(keystoreTarget)
-        .setStore(new FakeSourcePath(filesystem, "keystore/debug.keystore"))
-        .setProperties(new FakeSourcePath(filesystem, "keystore/debug.keystore.properties"))
-        .build(ruleResolver, filesystem);
+    Keystore keystore =
+        KeystoreBuilder.createBuilder(keystoreTarget)
+            .setStore(FakeSourcePath.of(filesystem, "keystore/debug.keystore"))
+            .setProperties(FakeSourcePath.of(filesystem, "keystore/debug.keystore.properties"))
+            .build(graphBuilder, filesystem);
 
-    AndroidBinaryBuilder
-        .createBuilder(BuildTargetFactory.newInstance(filesystem.getRootPath(), "//:fb4a"))
-        .setManifest(new FakeSourcePath("AndroidManifest.xml"))
+    AndroidBinaryBuilder.createBuilder(
+            BuildTargetFactory.newInstance(filesystem.getRootPath(), "//:fb4a"))
+        .setManifest(FakeSourcePath.of("AndroidManifest.xml"))
         .setOriginalDeps(ImmutableSortedSet.of(androidLibRule.getBuildTarget()))
         .setKeystore(keystore.getBuildTarget())
-        .build(ruleResolver, filesystem);
+        .build(graphBuilder, filesystem);
   }
 
   @Test
   @SuppressWarnings("PMD.AvoidUsingHardCodedIP")
   public void testCreateAndRunApkGenrule() throws IOException, NoSuchBuildTargetException {
-    ProjectFilesystem projectFilesystem = FakeProjectFilesystem.createJavaOnlyFilesystem();
+    ProjectFilesystem projectFilesystem = FakeProjectFilesystem.createRealTempFilesystem();
     FileSystem fileSystem = projectFilesystem.getRootPath().getFileSystem();
-    BuildRuleResolver ruleResolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    createSampleAndroidBinaryRule(ruleResolver, projectFilesystem);
+    ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+    createSampleAndroidBinaryRule(graphBuilder, projectFilesystem);
 
     // From the Python object, create a ApkGenruleBuildRuleFactory to create a ApkGenrule.Builder
     // that builds a ApkGenrule from the Python object.
-    BuildTargetParser parser = EasyMock.createNiceMock(BuildTargetParser.class);
-    final BuildTarget apkTarget =
+    BuildTarget apkTarget =
         BuildTargetFactory.newInstance(projectFilesystem.getRootPath(), "//:fb4a");
 
-    EasyMock.expect(
-        parser.parse(
-            EasyMock.eq(":fb4a"),
-            EasyMock.anyObject(BuildTargetPatternParser.class),
-            EasyMock.<CellPathResolver>anyObject()))
-        .andStubReturn(apkTarget);
-    EasyMock.replay(parser);
     BuildTarget buildTarget =
         BuildTargetFactory.newInstance(
-            projectFilesystem.getRootPath(),
-            "//src/com/facebook:sign_fb4a");
-    ApkGenruleDescription description = new ApkGenruleDescription();
-    ApkGenruleDescription.Arg arg = description.createUnpopulatedConstructorArg();
-    arg.apk = new FakeInstallable(apkTarget, new SourcePathResolver(ruleResolver)).getBuildTarget();
-    arg.bash = Optional.of("");
-    arg.cmd = Optional.of("python signer.py $APK key.properties > $OUT");
-    arg.cmdExe = Optional.of("");
-    arg.out = "signed_fb4a.apk";
-    arg.srcs = Optional.of(ImmutableList.<SourcePath>of(
-        new PathSourcePath(projectFilesystem, fileSystem.getPath("src/com/facebook/signer.py")),
-        new PathSourcePath(
-            projectFilesystem,
-            fileSystem.getPath("src/com/facebook/key.properties"))));
-    arg.tests = Optional.of(ImmutableSortedSet.<BuildTarget>of());
-    BuildRuleParams params = new FakeBuildRuleParamsBuilder(buildTarget)
-        .setProjectFilesystem(projectFilesystem).build();
+            projectFilesystem.getRootPath(), "//src/com/facebook:sign_fb4a");
+    SourcePathResolver pathResolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder));
+
+    ToolchainProvider toolchainProvider = new ToolchainProviderBuilder().build();
+
+    ApkGenruleDescription description =
+        new ApkGenruleDescription(toolchainProvider, new NoSandboxExecutionStrategy());
+    ApkGenruleDescriptionArg arg =
+        ApkGenruleDescriptionArg.builder()
+            .setName(buildTarget.getShortName())
+            .setApk(new FakeInstallable(apkTarget).getBuildTarget())
+            .setBash(StringWithMacrosUtils.format(""))
+            .setCmd(StringWithMacrosUtils.format("python signer.py $APK key.properties > $OUT"))
+            .setCmdExe(StringWithMacrosUtils.format(""))
+            .setOut("signed_fb4a.apk")
+            .setSrcs(
+                SourceSet.ofUnnamedSources(
+                    ImmutableSortedSet.of(
+                        PathSourcePath.of(
+                            projectFilesystem, fileSystem.getPath("src/com/facebook/signer.py")),
+                        PathSourcePath.of(
+                            projectFilesystem,
+                            fileSystem.getPath("src/com/facebook/key.properties")))))
+            .build();
+    BuildRuleParams params = TestBuildRuleParams.create();
     ApkGenrule apkGenrule =
-        (ApkGenrule) description.createBuildRule(TargetGraph.EMPTY, params, ruleResolver, arg);
-    ruleResolver.addToIndex(apkGenrule);
+        (ApkGenrule)
+            description.createBuildRule(
+                TestBuildRuleCreationContextFactory.create(graphBuilder, projectFilesystem),
+                buildTarget,
+                params,
+                arg);
+    graphBuilder.addToIndex(apkGenrule);
 
     // Verify all of the observers of the Genrule.
-    String expectedApkOutput =
+    Path expectedApkOutput =
         projectFilesystem.resolve(
-            projectFilesystem.getBuckPaths().getGenDir().toString() +
-             "/src/com/facebook/sign_fb4a/sign_fb4a.apk").toString();
-    assertEquals(expectedApkOutput,
-        apkGenrule.getAbsoluteOutputFilePath());
+            projectFilesystem.getBuckPaths().getGenDir()
+                + "/src/com/facebook/sign_fb4a/sign_fb4a.apk");
+    assertEquals(expectedApkOutput, apkGenrule.getAbsoluteOutputFilePath());
     assertEquals(
         "The apk that this rule is modifying must have the apk in its deps.",
         ImmutableSet.of(apkTarget.toString()),
-        FluentIterable
-            .from(apkGenrule.getDeps())
-            .transform(Functions.toStringFunction())
-            .toSet());
-    BuildContext buildContext = ImmutableBuildContext.builder()
-        .setActionGraph(EasyMock.createMock(ActionGraph.class))
-        .setStepRunner(EasyMock.createNiceMock(StepRunner.class))
-        .setClock(EasyMock.createMock(Clock.class))
-        .setBuildId(EasyMock.createMock(BuildId.class))
-        .setObjectMapper(ObjectMappers.newDefaultInstance())
-        .setArtifactCache(EasyMock.createMock(ArtifactCache.class))
-        .setJavaPackageFinder(EasyMock.createNiceMock(JavaPackageFinder.class))
-        .setEventBus(BuckEventBusFactory.newInstance())
-        .build();
-    Iterable<Path> expectedInputsToCompareToOutputs = ImmutableList.of(
-        fileSystem.getPath("src/com/facebook/signer.py"),
-        fileSystem.getPath("src/com/facebook/key.properties"));
-    MoreAsserts.assertIterablesEquals(
-        expectedInputsToCompareToOutputs,
-        apkGenrule.getSrcs());
+        apkGenrule
+            .getBuildDeps()
+            .stream()
+            .map(Object::toString)
+            .collect(ImmutableSet.toImmutableSet()));
+    BuildContext buildContext =
+        FakeBuildContext.withSourcePathResolver(pathResolver)
+            .withBuildCellRootPath(projectFilesystem.getRootPath());
+    assertThat(
+        pathResolver.filterInputsToCompareToOutput(apkGenrule.getSrcs().getPaths()),
+        Matchers.containsInAnyOrder(
+            fileSystem.getPath("src/com/facebook/signer.py"),
+            fileSystem.getPath("src/com/facebook/key.properties")));
 
     // Verify that the shell commands that the genrule produces are correct.
     List<Step> steps = apkGenrule.getBuildSteps(buildContext, new FakeBuildableContext());
-    assertEquals(7, steps.size());
+    MoreAsserts.assertStepsNames(
+        "",
+        ImmutableList.of(
+            "rm", "mkdir", "rm", "mkdir", "rm", "mkdir", "genrule_srcs_link_tree", "genrule"),
+        steps);
 
-    Step firstStep = steps.get(0);
-    assertTrue(firstStep instanceof RmStep);
-    RmStep rmCommand = (RmStep) firstStep;
     ExecutionContext executionContext = newEmptyExecutionContext();
     assertEquals(
-        "First command should delete the output file to be written by the genrule.",
-        ImmutableList.of(
-            "rm",
-            "-r",
-            "-f",
-            expectedApkOutput),
-        rmCommand.getShellCommand());
-
-    Step secondStep = steps.get(1);
-    assertTrue(secondStep instanceof MkdirStep);
-    MkdirStep mkdirCommand = (MkdirStep) secondStep;
-    Path mkdirDir =
-        projectFilesystem.resolve(
-            projectFilesystem.getBuckPaths().getGenDir().resolve("src/com/facebook/sign_fb4a"));
+        RmStep.of(
+                BuildCellRelativePath.fromCellRelativePath(
+                    buildContext.getBuildCellRootPath(),
+                    projectFilesystem,
+                    projectFilesystem
+                        .getBuckPaths()
+                        .getGenDir()
+                        .resolve("src/com/facebook/sign_fb4a")))
+            .withRecursive(true),
+        steps.get(0));
     assertEquals(
-        "Second command should make sure the output directory exists.",
-        mkdirDir,
-        mkdirCommand.getPath());
+        MkdirStep.of(
+            BuildCellRelativePath.fromCellRelativePath(
+                buildContext.getBuildCellRootPath(),
+                projectFilesystem,
+                projectFilesystem
+                    .getBuckPaths()
+                    .getGenDir()
+                    .resolve("src/com/facebook/sign_fb4a"))),
+        steps.get(1));
 
-    Step thirdStep = steps.get(2);
-    assertTrue(thirdStep instanceof MakeCleanDirectoryStep);
-    MakeCleanDirectoryStep secondMkdirCommand = (MakeCleanDirectoryStep) thirdStep;
-    Path relativePathToTmpDir = projectFilesystem.getBuckPaths().getGenDir().resolve(
-        "src/com/facebook/sign_fb4a__tmp");
     assertEquals(
-        "Third command should make sure the temp directory exists.",
-        relativePathToTmpDir,
-        secondMkdirCommand.getPath());
-
-    Step fourthStep = steps.get(3);
-    assertTrue(fourthStep instanceof MakeCleanDirectoryStep);
-    MakeCleanDirectoryStep thirdMkdirCommand = (MakeCleanDirectoryStep) fourthStep;
-    Path relativePathToSrcDir = projectFilesystem.getBuckPaths().getGenDir().resolve(
-        "src/com/facebook/sign_fb4a__srcs");
+        RmStep.of(
+                BuildCellRelativePath.fromCellRelativePath(
+                    buildContext.getBuildCellRootPath(),
+                    projectFilesystem,
+                    projectFilesystem
+                        .getBuckPaths()
+                        .getGenDir()
+                        .resolve("src/com/facebook/sign_fb4a__tmp")))
+            .withRecursive(true),
+        steps.get(2));
     assertEquals(
-        "Fourth command should make sure the temp directory exists.",
-        relativePathToSrcDir,
-        thirdMkdirCommand.getPath());
+        MkdirStep.of(
+            BuildCellRelativePath.fromCellRelativePath(
+                buildContext.getBuildCellRootPath(),
+                projectFilesystem,
+                projectFilesystem
+                    .getBuckPaths()
+                    .getGenDir()
+                    .resolve("src/com/facebook/sign_fb4a__tmp"))),
+        steps.get(3));
 
-    MkdirAndSymlinkFileStep linkSource1 = (MkdirAndSymlinkFileStep) steps.get(4);
-    assertEquals(fileSystem.getPath("src/com/facebook/signer.py"), linkSource1.getSource());
-    assertEquals(fileSystem.getPath(relativePathToSrcDir + "/signer.py"), linkSource1.getTarget());
-
-    MkdirAndSymlinkFileStep linkSource2 = (MkdirAndSymlinkFileStep) steps.get(5);
-    assertEquals(fileSystem.getPath("src/com/facebook/key.properties"), linkSource2.getSource());
+    Path relativePathToSrcDir =
+        projectFilesystem.getBuckPaths().getGenDir().resolve("src/com/facebook/sign_fb4a__srcs");
     assertEquals(
-        fileSystem.getPath(relativePathToSrcDir + "/key.properties"),
-        linkSource2.getTarget());
+        RmStep.of(
+                BuildCellRelativePath.fromCellRelativePath(
+                    buildContext.getBuildCellRootPath(), projectFilesystem, relativePathToSrcDir))
+            .withRecursive(true),
+        steps.get(4));
+    assertEquals(
+        MkdirStep.of(
+            BuildCellRelativePath.fromCellRelativePath(
+                buildContext.getBuildCellRootPath(), projectFilesystem, relativePathToSrcDir)),
+        steps.get(5));
 
-    Step seventhStep = steps.get(6);
-    assertTrue(seventhStep instanceof ShellStep);
-    ShellStep genruleCommand = (ShellStep) seventhStep;
+    assertEquals(
+        new SymlinkTreeStep(
+            "genrule_srcs",
+            projectFilesystem,
+            relativePathToSrcDir,
+            ImmutableMap.of(
+                projectFilesystem.getPath("signer.py"),
+                projectFilesystem.getPath("src/com/facebook/signer.py"),
+                projectFilesystem.getPath("key.properties"),
+                projectFilesystem.getPath("src/com/facebook/key.properties"))),
+        steps.get(6));
+
+    Step genruleStep = steps.get(7);
+    assertTrue(genruleStep instanceof AbstractGenruleStep);
+    AbstractGenruleStep genruleCommand = (AbstractGenruleStep) genruleStep;
     assertEquals("genrule", genruleCommand.getShortName());
-    ImmutableMap<String, String> environmentVariables = genruleCommand.getEnvironmentVariables(
-        executionContext);
-    assertEquals(new ImmutableMap.Builder<String, String>()
-        .put(
-            "APK", projectFilesystem.resolve(
-                BuildTargets.getGenPath(projectFilesystem, apkTarget, "%s.apk")).toString())
-        .put("OUT", expectedApkOutput).build(),
-        environmentVariables);
+    ImmutableMap<String, String> environmentVariables =
+        genruleCommand.getEnvironmentVariables(executionContext);
     assertEquals(
-        ImmutableList.of("/bin/bash", "-e", "-c", "python signer.py $APK key.properties > $OUT"),
-        genruleCommand.getShellCommand(executionContext));
+        new ImmutableMap.Builder<String, String>()
+            .put(
+                "APK",
+                projectFilesystem
+                    .resolve(BuildTargetPaths.getGenPath(projectFilesystem, apkTarget, "%s.apk"))
+                    .toString())
+            .put("OUT", expectedApkOutput.toString())
+            .build(),
+        environmentVariables);
 
-    EasyMock.verify(parser);
+    Path scriptFilePath = genruleCommand.getScriptFilePath(executionContext);
+    String scriptFileContents = genruleCommand.getScriptFileContents(executionContext);
+    assertEquals(
+        ImmutableList.of("/bin/bash", "-e", scriptFilePath.toString()),
+        genruleCommand.getShellCommand(executionContext));
+    assertEquals("python signer.py $APK key.properties > $OUT", scriptFileContents);
   }
 
   private ExecutionContext newEmptyExecutionContext() {
@@ -269,25 +284,18 @@ public class ApkGenruleTest {
         .build();
   }
 
-  private static class FakeInstallable extends FakeBuildRule implements InstallableApk {
+  private static class FakeInstallable extends FakeBuildRule implements HasInstallableApk {
 
-    public FakeInstallable(BuildTarget buildTarget, SourcePathResolver resolver) {
-      super(buildTarget, resolver);
+    public FakeInstallable(BuildTarget buildTarget) {
+      super(buildTarget);
     }
 
     @Override
-    public Path getManifestPath() {
-      return Paths.get("spoof");
-    }
-
-    @Override
-    public Path getApkPath() {
-      return Paths.get("buck-out/gen/fb4a.apk");
-    }
-
-    @Override
-    public Optional<ExopackageInfo> getExopackageInfo() {
-      return Optional.absent();
+    public ApkInfo getApkInfo() {
+      return ApkInfo.builder()
+          .setApkPath(FakeSourcePath.of("buck-out/gen/fb4a.apk"))
+          .setManifestPath(FakeSourcePath.of("spoof"))
+          .build();
     }
   }
 }
