@@ -16,44 +16,54 @@
 
 package com.facebook.buck.android;
 
-
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
-import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
-import com.facebook.buck.io.ProjectFilesystem;
-import com.facebook.buck.model.BuildTarget;
-import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.rules.BuildRule;
-import com.facebook.buck.rules.BuildRuleResolver;
-import com.facebook.buck.rules.BuildTargetSourcePath;
-import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.PathSourcePath;
-import com.facebook.buck.rules.Sha1HashCode;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.TargetGraph;
+import com.facebook.buck.core.config.FakeBuckConfig;
+import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.BuildTargetFactory;
+import com.facebook.buck.core.model.targetgraph.TargetGraph;
+import com.facebook.buck.core.model.targetgraph.TargetGraphFactory;
+import com.facebook.buck.core.model.targetgraph.TargetNode;
+import com.facebook.buck.core.rules.ActionGraphBuilder;
+import com.facebook.buck.core.rules.BuildRule;
+import com.facebook.buck.core.rules.SourcePathRuleFinder;
+import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
+import com.facebook.buck.core.sourcepath.DefaultBuildTargetSourcePath;
+import com.facebook.buck.core.sourcepath.FakeSourcePath;
+import com.facebook.buck.core.sourcepath.PathSourcePath;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
+import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.jvm.java.JavaBuckConfig;
 import com.facebook.buck.shell.GenruleBuilder;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
+import com.facebook.buck.testutil.TemporaryPaths;
 import com.google.common.collect.ImmutableList;
-
-import org.hamcrest.Matchers;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
-
+import com.google.common.collect.ImmutableSet;
 import java.io.File;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import org.hamcrest.Matchers;
+import org.junit.Rule;
+import org.junit.Test;
 
 public class RobolectricTestRuleTest {
 
   private class ResourceRule implements HasAndroidResourceDeps {
     private final SourcePath resourceDirectory;
+    private final SourcePath assetsDirectory;
 
-    public ResourceRule(SourcePath resourceDirectory) {
+    ResourceRule(SourcePath resourceDirectory) {
+      this(resourceDirectory, null);
+    }
+
+    ResourceRule(SourcePath resourceDirectory, SourcePath assetsDirectory) {
       this.resourceDirectory = resourceDirectory;
+      this.assetsDirectory = assetsDirectory;
     }
 
     @Override
@@ -62,7 +72,7 @@ public class RobolectricTestRuleTest {
     }
 
     @Override
-    public Sha1HashCode getTextSymbolsAbiKey() {
+    public SourcePath getPathToRDotJavaPackageFile() {
       return null;
     }
 
@@ -78,7 +88,7 @@ public class RobolectricTestRuleTest {
 
     @Override
     public SourcePath getAssets() {
-      return null;
+      return assetsDirectory;
     }
 
     @Override
@@ -87,33 +97,38 @@ public class RobolectricTestRuleTest {
     }
   }
 
-  @Rule
-  public TemporaryFolder temporaryFolder = new TemporaryFolder();
+  @Rule public TemporaryPaths temporaryFolder = new TemporaryPaths();
 
   @Test
   public void testRobolectricContainsAllResourceDependenciesInResVmArg() throws Exception {
-    BuildRuleResolver resolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
     ProjectFilesystem filesystem = new FakeProjectFilesystem(temporaryFolder.getRoot());
 
-    ImmutableList.Builder<HasAndroidResourceDeps> resDepsBuilder =
-        ImmutableList.builder();
+    ImmutableList.Builder<HasAndroidResourceDeps> resDepsBuilder = ImmutableList.builder();
     for (int i = 0; i < 10; i++) {
       String path = "java/src/com/facebook/base/" + i + "/res";
       filesystem.mkdirs(Paths.get(path).resolve("values"));
-      resDepsBuilder.add(
-          new ResourceRule(new FakeSourcePath(path)));
+      resDepsBuilder.add(new ResourceRule(FakeSourcePath.of(filesystem, path)));
     }
     ImmutableList<HasAndroidResourceDeps> resDeps = resDepsBuilder.build();
 
-    BuildTarget robolectricBuildTarget = BuildTargetFactory.newInstance(
-        "//java/src/com/facebook/base/robolectricTest:robolectricTest");
+    BuildTarget robolectricBuildTarget =
+        BuildTargetFactory.newInstance(
+            "//java/src/com/facebook/base/robolectricTest:robolectricTest");
 
-    RobolectricTest robolectricTest = (RobolectricTest) RobolectricTestBuilder
-        .createBuilder(robolectricBuildTarget)
-        .build(resolver, filesystem);
+    TargetNode<?> robolectricTestNode =
+        RobolectricTestBuilder.createBuilder(robolectricBuildTarget, filesystem).build();
 
-    String result = robolectricTest.getRobolectricResourceDirectories(resDeps);
+    TargetGraph targetGraph = TargetGraphFactory.newInstance(robolectricTestNode);
+    ActionGraphBuilder graphBuilder =
+        new TestActionGraphBuilder(
+            targetGraph, RobolectricTestBuilder.createToolchainProviderForRobolectricTest());
+    SourcePathResolver pathResolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder));
+
+    RobolectricTest robolectricTest =
+        (RobolectricTest) graphBuilder.requireRule(robolectricBuildTarget);
+
+    String result = robolectricTest.getRobolectricResourceDirectoriesArg(pathResolver, resDeps);
     for (HasAndroidResourceDeps dep : resDeps) {
       // Every value should be a PathSourcePath
       assertTrue(
@@ -123,10 +138,92 @@ public class RobolectricTestRuleTest {
   }
 
   @Test
-  public void testRobolectricResourceDependenciesVmArgHasCorrectFormat() throws Exception {
-    BuildRuleResolver resolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+  public void testRobolectricContainsAllResourceDependenciesInResVmArgAsFile() throws Exception {
+    ProjectFilesystem filesystem = new FakeProjectFilesystem(temporaryFolder.getRoot());
 
+    ImmutableList.Builder<HasAndroidResourceDeps> resDepsBuilder = ImmutableList.builder();
+    for (int i = 0; i < 10; i++) {
+      String path = "java/src/com/facebook/base/" + i + "/res";
+      filesystem.mkdirs(Paths.get(path).resolve("values"));
+      resDepsBuilder.add(new ResourceRule(FakeSourcePath.of(path)));
+    }
+    ImmutableList<HasAndroidResourceDeps> resDeps = resDepsBuilder.build();
+
+    BuildTarget robolectricBuildTarget =
+        BuildTargetFactory.newInstance(
+            "//java/src/com/facebook/base/robolectricTest:robolectricTest");
+
+    JavaBuckConfig javaBuckConfig =
+        JavaBuckConfig.of(
+            FakeBuckConfig.builder()
+                .setSections("[test]", "pass_robolectric_directories_in_file = true")
+                .build());
+
+    TargetNode<?> robolectricTestNode =
+        RobolectricTestBuilder.createBuilder(robolectricBuildTarget, filesystem, javaBuckConfig)
+            .build();
+
+    TargetGraph targetGraph = TargetGraphFactory.newInstance(robolectricTestNode);
+    ActionGraphBuilder graphBuilder =
+        new TestActionGraphBuilder(
+            targetGraph, RobolectricTestBuilder.createToolchainProviderForRobolectricTest());
+    SourcePathResolver pathResolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder));
+
+    RobolectricTest robolectricTest =
+        (RobolectricTest) graphBuilder.requireRule(robolectricBuildTarget);
+
+    Path resDirectoriesPath =
+        RobolectricTest.getResourceDirectoriesPath(filesystem, robolectricBuildTarget);
+    String result = robolectricTest.getRobolectricResourceDirectoriesArg(pathResolver, resDeps);
+    assertEquals("-Dbuck.robolectric_res_directories=@" + resDirectoriesPath, result);
+  }
+
+  @Test
+  public void testRobolectricContainsAllResourceDependenciesInAssetVmArgAsFile() throws Exception {
+    ProjectFilesystem filesystem = new FakeProjectFilesystem(temporaryFolder.getRoot());
+
+    ImmutableList.Builder<HasAndroidResourceDeps> resDepsBuilder = ImmutableList.builder();
+    for (int i = 0; i < 10; i++) {
+      String path = "java/src/com/facebook/base/" + i + "/res";
+      filesystem.mkdirs(Paths.get(path).resolve("values"));
+      String assetPath = "java/src/com/facebook/base/" + i + "/assets";
+      resDepsBuilder.add(new ResourceRule(FakeSourcePath.of(path), FakeSourcePath.of(assetPath)));
+    }
+    ImmutableList<HasAndroidResourceDeps> resDeps = resDepsBuilder.build();
+
+    BuildTarget robolectricBuildTarget =
+        BuildTargetFactory.newInstance(
+            "//java/src/com/facebook/base/robolectricTest:robolectricTest");
+
+    JavaBuckConfig javaBuckConfig =
+        JavaBuckConfig.of(
+            FakeBuckConfig.builder()
+                .setSections("[test]", "pass_robolectric_directories_in_file = true")
+                .build());
+
+    TargetNode<?> robolectricTestNode =
+        RobolectricTestBuilder.createBuilder(robolectricBuildTarget, filesystem, javaBuckConfig)
+            .build();
+
+    TargetGraph targetGraph = TargetGraphFactory.newInstance(robolectricTestNode);
+    ActionGraphBuilder graphBuilder =
+        new TestActionGraphBuilder(
+            targetGraph, RobolectricTestBuilder.createToolchainProviderForRobolectricTest());
+    SourcePathResolver pathResolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder));
+
+    RobolectricTest robolectricTest =
+        (RobolectricTest) graphBuilder.requireRule(robolectricBuildTarget);
+
+    Path assetDirectoriesPath =
+        RobolectricTest.getAssetDirectoriesPath(filesystem, robolectricBuildTarget);
+    String result = robolectricTest.getRobolectricAssetsDirectories(pathResolver, resDeps);
+    assertEquals("-Dbuck.robolectric_assets_directories=@" + assetDirectoriesPath, result);
+  }
+
+  @Test
+  public void testRobolectricResourceDependenciesVmArgHasCorrectFormat() throws Exception {
     ProjectFilesystem filesystem = new FakeProjectFilesystem(temporaryFolder.getRoot());
     filesystem.mkdirs(Paths.get("res1/values"));
     filesystem.mkdirs(Paths.get("res2/values"));
@@ -138,79 +235,198 @@ public class RobolectricTestRuleTest {
     Path resDep3 = Paths.get("res3");
     Path resDep4 = Paths.get("res4_to_ignore");
 
-    StringBuilder expectedVmArgBuilder = new StringBuilder();
-    expectedVmArgBuilder.append("-D")
-        .append(RobolectricTest.LIST_OF_RESOURCE_DIRECTORIES_PROPERTY_NAME)
-        .append("=")
-        .append(resDep1)
-        .append(File.pathSeparator)
-        .append(resDep2)
-        .append(File.pathSeparator)
-        .append(resDep3);
+    BuildTarget robolectricBuildTarget =
+        BuildTargetFactory.newInstance(
+            "//java/src/com/facebook/base/robolectricTest:robolectricTest");
 
-    BuildTarget robolectricBuildTarget = BuildTargetFactory.newInstance(
-        "//java/src/com/facebook/base/robolectricTest:robolectricTest");
+    TargetNode<?> robolectricTestNode =
+        RobolectricTestBuilder.createBuilder(robolectricBuildTarget, filesystem).build();
 
-    RobolectricTest robolectricTest = (RobolectricTest) RobolectricTestBuilder
-        .createBuilder(robolectricBuildTarget)
-        .build(resolver, filesystem);
+    TargetGraph targetGraph = TargetGraphFactory.newInstance(robolectricTestNode);
+    ActionGraphBuilder graphBuilder =
+        new TestActionGraphBuilder(
+            targetGraph, RobolectricTestBuilder.createToolchainProviderForRobolectricTest());
+    SourcePathResolver pathResolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder));
 
-    String result = robolectricTest.getRobolectricResourceDirectories(
-        ImmutableList.<HasAndroidResourceDeps>of(
-            new ResourceRule(new PathSourcePath(filesystem, resDep1)),
-            new ResourceRule(new PathSourcePath(filesystem, resDep2)),
-            new ResourceRule(new PathSourcePath(filesystem, resDep3)),
-            new ResourceRule(new PathSourcePath(filesystem, resDep4))));
+    RobolectricTest robolectricTest =
+        (RobolectricTest) graphBuilder.requireRule(robolectricBuildTarget);
 
-    assertEquals(expectedVmArgBuilder.toString(), result);
+    String result =
+        robolectricTest.getRobolectricResourceDirectoriesArg(
+            pathResolver,
+            ImmutableList.of(
+                new ResourceRule(FakeSourcePath.of(filesystem, resDep1)),
+                new ResourceRule(FakeSourcePath.of(filesystem, resDep2)),
+                new ResourceRule(null),
+                new ResourceRule(FakeSourcePath.of(filesystem, resDep3)),
+                new ResourceRule(FakeSourcePath.of(filesystem, resDep4))));
+
+    String expectedVmArgBuilder =
+        "-D"
+            + RobolectricTest.LIST_OF_RESOURCE_DIRECTORIES_PROPERTY_NAME
+            + "="
+            + resDep1
+            + File.pathSeparator
+            + resDep2
+            + File.pathSeparator
+            + resDep3;
+    assertEquals(expectedVmArgBuilder, result);
   }
 
   @Test
-  public void testRobolectricThrowsIfResourceDirNotThere() throws Exception {
-    BuildRuleResolver resolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+  public void testRobolectricThrowsIfResourceDirNotThere() {
     ProjectFilesystem filesystem = new FakeProjectFilesystem(temporaryFolder.getRoot());
 
-    BuildTarget robolectricBuildTarget = BuildTargetFactory.newInstance(
-        "//java/src/com/facebook/base/robolectricTest:robolectricTest");
-    RobolectricTest robolectricTest = (RobolectricTest) RobolectricTestBuilder
-        .createBuilder(robolectricBuildTarget)
-        .build(resolver, filesystem);
+    BuildTarget robolectricBuildTarget =
+        BuildTargetFactory.newInstance(
+            "//java/src/com/facebook/base/robolectricTest:robolectricTest");
+    TargetNode<?> robolectricTestNode =
+        RobolectricTestBuilder.createBuilder(robolectricBuildTarget, filesystem).build();
+
+    TargetGraph targetGraph = TargetGraphFactory.newInstance(robolectricTestNode);
+    ActionGraphBuilder graphBuilder =
+        new TestActionGraphBuilder(
+            targetGraph, RobolectricTestBuilder.createToolchainProviderForRobolectricTest());
+    SourcePathResolver pathResolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder));
+
+    RobolectricTest robolectricTest =
+        (RobolectricTest) graphBuilder.requireRule(robolectricBuildTarget);
 
     try {
-      robolectricTest.getRobolectricResourceDirectories(
-          ImmutableList.<HasAndroidResourceDeps>of(
-              new ResourceRule(new PathSourcePath(filesystem, Paths.get("not_there")))));
+      robolectricTest.getRobolectricResourceDirectoriesArg(
+          pathResolver,
+          ImmutableList.of(new ResourceRule(FakeSourcePath.of(filesystem, "not_there_res"))));
       fail("Expected FileNotFoundException");
     } catch (RuntimeException e) {
-      assertThat(e.getMessage(), Matchers.containsString("not_there"));
+      assertThat(e.getMessage(), Matchers.containsString("not_there_res"));
     }
   }
 
   @Test
-  public void runtimeDepsIncludeTransitiveResources() throws Exception {
-    BuildRuleResolver resolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+  public void testRobolectricAssetsDependenciesVmArgHasCorrectFormat() throws Exception {
+    ProjectFilesystem filesystem = new FakeProjectFilesystem(temporaryFolder.getRoot());
+    filesystem.mkdirs(Paths.get("assets1/svg"));
+    filesystem.mkdirs(Paths.get("assets2/xml"));
+    filesystem.mkdirs(Paths.get("assets3_to_ignore"));
+
+    Path assetsDep1 = Paths.get("assets1");
+    Path assetsDep2 = Paths.get("assets2");
+    Path assetsDep3 = Paths.get("assets3_to_ignore");
+
+    BuildTarget robolectricBuildTarget =
+        BuildTargetFactory.newInstance(
+            "//java/src/com/facebook/base/robolectricTest:robolectricTest");
+
+    TargetNode<?> robolectricTestNode =
+        RobolectricTestBuilder.createBuilder(robolectricBuildTarget, filesystem).build();
+
+    TargetGraph targetGraph = TargetGraphFactory.newInstance(robolectricTestNode);
+    ActionGraphBuilder graphBuilder =
+        new TestActionGraphBuilder(
+            targetGraph, RobolectricTestBuilder.createToolchainProviderForRobolectricTest());
+    SourcePathResolver pathResolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder));
+
+    RobolectricTest robolectricTest =
+        (RobolectricTest) graphBuilder.requireRule(robolectricBuildTarget);
+
+    String result =
+        robolectricTest.getRobolectricAssetsDirectories(
+            pathResolver,
+            ImmutableList.of(
+                new ResourceRule(null, FakeSourcePath.of(filesystem, assetsDep1)),
+                new ResourceRule(null, null),
+                new ResourceRule(null, FakeSourcePath.of(filesystem, assetsDep2)),
+                new ResourceRule(null, FakeSourcePath.of(filesystem, assetsDep3))));
+
+    String expectedVmArgBuilder =
+        "-D"
+            + RobolectricTest.LIST_OF_ASSETS_DIRECTORIES_PROPERTY_NAME
+            + "="
+            + assetsDep1
+            + File.pathSeparator
+            + assetsDep2;
+    assertEquals(expectedVmArgBuilder, result);
+  }
+
+  @Test
+  public void testRobolectricThrowsIfAssetsDirNotThere() {
     ProjectFilesystem filesystem = new FakeProjectFilesystem(temporaryFolder.getRoot());
 
-    BuildTarget genRuleTarget = BuildTargetFactory.newInstance("//:gen");
-    BuildRule genRule = GenruleBuilder.newGenruleBuilder(genRuleTarget)
-        .setOut("out")
-        .build(resolver);
+    BuildTarget robolectricBuildTarget =
+        BuildTargetFactory.newInstance(
+            "//java/src/com/facebook/base/robolectricTest:robolectricTest");
+    TargetNode<?> robolectricTestNode =
+        RobolectricTestBuilder.createBuilder(robolectricBuildTarget, filesystem).build();
+
+    TargetGraph targetGraph = TargetGraphFactory.newInstance(robolectricTestNode);
+    ActionGraphBuilder graphBuilder =
+        new TestActionGraphBuilder(
+            targetGraph, RobolectricTestBuilder.createToolchainProviderForRobolectricTest());
+    SourcePathResolver pathResolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder));
+
+    RobolectricTest robolectricTest =
+        (RobolectricTest) graphBuilder.requireRule(robolectricBuildTarget);
+
+    try {
+      robolectricTest.getRobolectricResourceDirectoriesArg(
+          pathResolver,
+          ImmutableList.of(new ResourceRule(FakeSourcePath.of(filesystem, "not_there_assets"))));
+      fail("Expected FileNotFoundException");
+    } catch (RuntimeException e) {
+      assertThat(e.getMessage(), Matchers.containsString("not_there_assets"));
+    }
+  }
+
+  @Test
+  public void runtimeDepsIncludeTransitiveResourcesAndDummyR() {
+    ProjectFilesystem filesystem = new FakeProjectFilesystem(temporaryFolder.getRoot());
+
+    BuildTarget resGenRuleTarget = BuildTargetFactory.newInstance("//:res-gen");
+    TargetNode<?> resGenRuleNode =
+        GenruleBuilder.newGenruleBuilder(resGenRuleTarget).setOut("res-out").build();
+
+    BuildTarget assetsGenRuleTarget = BuildTargetFactory.newInstance("//:assets-gen");
+    TargetNode<?> assetsGenRuleNode =
+        GenruleBuilder.newGenruleBuilder(assetsGenRuleTarget).setOut("assets-out").build();
 
     BuildTarget res2RuleTarget = BuildTargetFactory.newInstance("//:res2");
-    AndroidResourceBuilder.createBuilder(res2RuleTarget)
-        .setRes(new BuildTargetSourcePath(genRuleTarget))
-        .setRDotJavaPackage("foo.bar")
-        .build(resolver);
+    TargetNode<?> res2Node =
+        AndroidResourceBuilder.createBuilder(res2RuleTarget)
+            .setRes(DefaultBuildTargetSourcePath.of(resGenRuleTarget))
+            .setAssets(DefaultBuildTargetSourcePath.of(assetsGenRuleTarget))
+            .setRDotJavaPackage("foo.bar")
+            .build();
 
-    BuildTarget robolectricBuildTarget = BuildTargetFactory.newInstance(
-        "//java/src/com/facebook/base/robolectricTest:robolectricTest");
-    RobolectricTest robolectricTest = (RobolectricTest) RobolectricTestBuilder
-        .createBuilder(robolectricBuildTarget)
-        .addDep(res2RuleTarget)
-        .build(resolver, filesystem);
+    BuildTarget robolectricBuildTarget =
+        BuildTargetFactory.newInstance(
+            "//java/src/com/facebook/base/robolectricTest:robolectricTest");
+    TargetNode<?> robolectricTestNode =
+        RobolectricTestBuilder.createBuilder(robolectricBuildTarget, filesystem)
+            .addDep(res2RuleTarget)
+            .build();
 
-    assertThat(robolectricTest.getRuntimeDeps(), Matchers.hasItem(genRule));
+    TargetGraph targetGraph =
+        TargetGraphFactory.newInstance(
+            resGenRuleNode, assetsGenRuleNode, res2Node, robolectricTestNode);
+
+    ActionGraphBuilder graphBuilder =
+        new TestActionGraphBuilder(
+            targetGraph, RobolectricTestBuilder.createToolchainProviderForRobolectricTest());
+
+    RobolectricTest robolectricTest =
+        (RobolectricTest) graphBuilder.requireRule(robolectricBuildTarget);
+
+    BuildRule resGenRule = graphBuilder.requireRule(resGenRuleTarget);
+    BuildRule assetsGenRule = graphBuilder.requireRule(assetsGenRuleTarget);
+
+    assertThat(
+        robolectricTest
+            .getRuntimeDeps(new SourcePathRuleFinder(graphBuilder))
+            .collect(ImmutableSet.toImmutableSet()),
+        Matchers.hasItems(resGenRule.getBuildTarget(), assetsGenRule.getBuildTarget()));
   }
 }
