@@ -17,44 +17,42 @@ package com.facebook.buck.apple;
 
 import static org.junit.Assert.assertEquals;
 
-import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
-import com.facebook.buck.rules.BuildRuleResolver;
-import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.SourcePathResolver;
-import com.facebook.buck.rules.TargetGraph;
-import com.facebook.buck.rules.SourceWithFlags;
+import com.facebook.buck.core.rules.SourcePathRuleFinder;
+import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
+import com.facebook.buck.core.sourcepath.FakeSourcePath;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.core.sourcepath.SourceWithFlags;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
+import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.ImmutableSortedSet;
-
-import org.junit.Test;
-
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import org.junit.Test;
 
 public class RuleUtilsTest {
 
   @Test
   public void extractGroupedSources() {
-    ImmutableList<SourceWithFlags> input = ImmutableList.of(
-        SourceWithFlags.of(new FakeSourcePath("Group1/foo.m")),
-        SourceWithFlags.of(
-            new FakeSourcePath("Group1/bar.m"),
-            ImmutableList.of("-Wall")),
-        SourceWithFlags.of(new FakeSourcePath("Group2/baz.m")),
-        SourceWithFlags.of(
-            new FakeSourcePath("Group2/blech.m"), ImmutableList.of("-fobjc-arc")));
+    ImmutableList<SourceWithFlags> input =
+        ImmutableList.of(
+            SourceWithFlags.of(FakeSourcePath.of("Group1/foo.m")),
+            SourceWithFlags.of(FakeSourcePath.of("Group1/bar.m"), ImmutableList.of("-Wall")),
+            SourceWithFlags.of(FakeSourcePath.of("Group2/baz.m")),
+            SourceWithFlags.of(
+                FakeSourcePath.of("Group2/blech.m"), ImmutableList.of("-fobjc-arc")));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    ImmutableList<GroupedSource> sources = RuleUtils.createGroupsFromSourcePaths(
-        resolver.deprecatedPathFunction(),
-        input,
-        /* extraXcodeSources */ ImmutableSortedSet.<SourcePath>of(),
-        /* publicHeaders */ ImmutableSortedSet.<SourcePath>of(),
-        /* privateHeaders */ ImmutableSortedSet.<SourcePath>of());
+    SourcePathResolver resolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestActionGraphBuilder()));
+    ImmutableList<GroupedSource> sources =
+        RuleUtils.createGroupsFromSourcePaths(
+            resolver::getRelativePath,
+            input,
+            /* extraXcodeSources */ ImmutableSortedSet.of(),
+            /* extraXcodeFiles */ ImmutableSortedSet.of(),
+            /* publicHeaders */ ImmutableSortedSet.of(),
+            /* privateHeaders */ ImmutableSortedSet.of());
     assertEquals(
         ImmutableList.of(
             GroupedSource.ofSourceGroup(
@@ -63,84 +61,78 @@ public class RuleUtilsTest {
                 ImmutableList.of(
                     GroupedSource.ofSourceWithFlags(
                         SourceWithFlags.of(
-                            new FakeSourcePath("Group1/bar.m"),
-                            ImmutableList.of("-Wall"))),
+                            FakeSourcePath.of("Group1/bar.m"), ImmutableList.of("-Wall"))),
                     GroupedSource.ofSourceWithFlags(
-                        SourceWithFlags.of(new FakeSourcePath("Group1/foo.m")))
-                )),
+                        SourceWithFlags.of(FakeSourcePath.of("Group1/foo.m"))))),
             GroupedSource.ofSourceGroup(
                 "Group2",
                 Paths.get("Group2"),
                 ImmutableList.of(
                     GroupedSource.ofSourceWithFlags(
-                        SourceWithFlags.of(new FakeSourcePath("Group2/baz.m"))),
+                        SourceWithFlags.of(FakeSourcePath.of("Group2/baz.m"))),
                     GroupedSource.ofSourceWithFlags(
                         SourceWithFlags.of(
-                            new FakeSourcePath("Group2/blech.m"),
-                            ImmutableList.of("-fobjc-arc")))
-                ))),
+                            FakeSourcePath.of("Group2/blech.m"),
+                            ImmutableList.of("-fobjc-arc")))))),
         sources);
   }
 
   @Test
   public void creatingGroupsFromSourcePaths() {
-    ImmutableList<SourcePath> input = ImmutableList.<SourcePath>of(
-        new FakeSourcePath("File.h"),
-        new FakeSourcePath("Lib/Foo/File2.h"),
-        new FakeSourcePath("App/Foo/File.h"),
-        new FakeSourcePath("Lib/Bar/File1.h"),
-        new FakeSourcePath("App/File.h"),
-        new FakeSourcePath("Lib/Foo/File1.h"),
-        new FakeSourcePath("App/Foo/Bar/File.h"));
+    ImmutableList<SourcePath> input =
+        ImmutableList.of(
+            FakeSourcePath.of("File.h"),
+            FakeSourcePath.of("Lib/Foo/File2.h"),
+            FakeSourcePath.of("App/Foo/File.h"),
+            FakeSourcePath.of("Lib/Bar/File1.h"),
+            FakeSourcePath.of("App/File.h"),
+            FakeSourcePath.of("Lib/Foo/File1.h"),
+            FakeSourcePath.of("App/Foo/Bar/File.h"));
 
-    ImmutableList<GroupedSource> expected = ImmutableList.of(
-        GroupedSource.ofSourceGroup(
-            "App",
-            Paths.get("App"),
-            ImmutableList.of(
-                GroupedSource.ofSourceGroup(
-                    "Foo",
-                    Paths.get("App/Foo"),
-                    ImmutableList.of(
-                        GroupedSource.ofSourceGroup(
-                            "Bar",
-                            Paths.get("App/Foo/Bar"),
-                            ImmutableList.of(
-                                GroupedSource.ofPrivateHeader(
-                                    new FakeSourcePath("App/Foo/Bar/File.h")))),
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("App/Foo/File.h")))),
-                GroupedSource.ofPrivateHeader(
-                    new FakeSourcePath("App/File.h")))),
-        GroupedSource.ofSourceGroup(
-            "Lib",
-            Paths.get("Lib"),
-            ImmutableList.of(
-                GroupedSource.ofSourceGroup(
-                    "Bar",
-                    Paths.get("Lib/Bar"),
-                    ImmutableList.of(
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("Lib/Bar/File1.h")))),
-                GroupedSource.ofSourceGroup(
-                    "Foo",
-                    Paths.get("Lib/Foo"),
-                    ImmutableList.of(
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("Lib/Foo/File1.h")),
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("Lib/Foo/File2.h")))))),
-        GroupedSource.ofPrivateHeader(new FakeSourcePath("File.h")));
+    ImmutableList<GroupedSource> expected =
+        ImmutableList.of(
+            GroupedSource.ofSourceGroup(
+                "App",
+                Paths.get("App"),
+                ImmutableList.of(
+                    GroupedSource.ofSourceGroup(
+                        "Foo",
+                        Paths.get("App/Foo"),
+                        ImmutableList.of(
+                            GroupedSource.ofSourceGroup(
+                                "Bar",
+                                Paths.get("App/Foo/Bar"),
+                                ImmutableList.of(
+                                    GroupedSource.ofPrivateHeader(
+                                        FakeSourcePath.of("App/Foo/Bar/File.h")))),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/Foo/File.h")))),
+                    GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/File.h")))),
+            GroupedSource.ofSourceGroup(
+                "Lib",
+                Paths.get("Lib"),
+                ImmutableList.of(
+                    GroupedSource.ofSourceGroup(
+                        "Bar",
+                        Paths.get("Lib/Bar"),
+                        ImmutableList.of(
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))),
+                    GroupedSource.ofSourceGroup(
+                        "Foo",
+                        Paths.get("Lib/Foo"),
+                        ImmutableList.of(
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File2.h")))))),
+            GroupedSource.ofPrivateHeader(FakeSourcePath.of("File.h")));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
+    SourcePathResolver resolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestActionGraphBuilder()));
     ImmutableList<GroupedSource> actual =
         RuleUtils.createGroupsFromSourcePaths(
-            resolver.deprecatedPathFunction(),
-            ImmutableList.<SourceWithFlags>of(),
-            ImmutableSortedSet.<SourcePath>of(),
-            ImmutableList.<SourcePath>of(),
+            resolver::getRelativePath,
+            ImmutableList.of(),
+            ImmutableSortedSet.of(),
+            ImmutableSortedSet.of(),
+            ImmutableList.of(),
             input);
 
     assertEquals(expected, actual);
@@ -148,36 +140,35 @@ public class RuleUtilsTest {
 
   @Test
   public void creatingGroupsFromSourcePathsRemovesLongestCommonPrefix() {
-    ImmutableList<SourcePath> input = ImmutableList.<SourcePath>of(
-        new FakeSourcePath("Lib/Foo/File1.h"),
-        new FakeSourcePath("Lib/Foo/File2.h"),
-        new FakeSourcePath("Lib/Bar/File1.h"));
+    ImmutableList<SourcePath> input =
+        ImmutableList.of(
+            FakeSourcePath.of("Lib/Foo/File1.h"),
+            FakeSourcePath.of("Lib/Foo/File2.h"),
+            FakeSourcePath.of("Lib/Bar/File1.h"));
 
-    ImmutableList<GroupedSource> expected = ImmutableList.of(
-        GroupedSource.ofSourceGroup(
-            "Bar",
-            Paths.get("Lib/Bar"),
-            ImmutableList.of(
-                GroupedSource.ofPrivateHeader(
-                    new FakeSourcePath("Lib/Bar/File1.h")))),
-        GroupedSource.ofSourceGroup(
-            "Foo",
-            Paths.get("Lib/Foo"),
-            ImmutableList.of(
-                GroupedSource.ofPrivateHeader(
-                    new FakeSourcePath("Lib/Foo/File1.h")),
-                GroupedSource.ofPrivateHeader(
-                    new FakeSourcePath("Lib/Foo/File2.h")))));
+    ImmutableList<GroupedSource> expected =
+        ImmutableList.of(
+            GroupedSource.ofSourceGroup(
+                "Bar",
+                Paths.get("Lib/Bar"),
+                ImmutableList.of(
+                    GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))),
+            GroupedSource.ofSourceGroup(
+                "Foo",
+                Paths.get("Lib/Foo"),
+                ImmutableList.of(
+                    GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")),
+                    GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File2.h")))));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
+    SourcePathResolver resolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestActionGraphBuilder()));
     ImmutableList<GroupedSource> actual =
         RuleUtils.createGroupsFromSourcePaths(
-            resolver.deprecatedPathFunction(),
-            ImmutableList.<SourceWithFlags>of(),
-            ImmutableSortedSet.<SourcePath>of(),
-            ImmutableList.<SourcePath>of(),
+            resolver::getRelativePath,
+            ImmutableList.of(),
+            ImmutableSortedSet.of(),
+            ImmutableSortedSet.of(),
+            ImmutableList.of(),
             input);
 
     assertEquals(expected, actual);
@@ -185,22 +176,20 @@ public class RuleUtilsTest {
 
   @Test
   public void creatingGroupsFromSingleSourcePath() {
-    ImmutableList<SourcePath> input = ImmutableList.<SourcePath>of(
-        new FakeSourcePath("Lib/Foo/File1.h"));
+    ImmutableList<SourcePath> input = ImmutableList.of(FakeSourcePath.of("Lib/Foo/File1.h"));
 
-    ImmutableList<GroupedSource> expected = ImmutableList.of(
-        GroupedSource.ofPrivateHeader(
-            new FakeSourcePath("Lib/Foo/File1.h")));
+    ImmutableList<GroupedSource> expected =
+        ImmutableList.of(GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
+    SourcePathResolver resolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestActionGraphBuilder()));
     ImmutableList<GroupedSource> actual =
         RuleUtils.createGroupsFromSourcePaths(
-            resolver.deprecatedPathFunction(),
-            ImmutableList.<SourceWithFlags>of(),
-            ImmutableList.<SourcePath>of(),
-            ImmutableList.<SourcePath>of(),
+            resolver::getRelativePath,
+            ImmutableList.of(),
+            ImmutableList.of(),
+            ImmutableList.of(),
+            ImmutableList.of(),
             input);
 
     assertEquals(expected, actual);
@@ -210,156 +199,151 @@ public class RuleUtilsTest {
   public void creatingGroupsFromNoSourcePaths() {
     ImmutableList<GroupedSource> expected = ImmutableList.of();
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
+    SourcePathResolver resolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestActionGraphBuilder()));
     ImmutableList<GroupedSource> actual =
         RuleUtils.createGroupsFromSourcePaths(
-            resolver.deprecatedPathFunction(),
-            ImmutableList.<SourceWithFlags>of(),
-            ImmutableList.<SourcePath>of(),
-            ImmutableList.<SourcePath>of(),
-            ImmutableList.<SourcePath>of());
+            resolver::getRelativePath,
+            ImmutableList.of(),
+            ImmutableList.of(),
+            ImmutableList.of(),
+            ImmutableList.of(),
+            ImmutableList.of());
 
     assertEquals(expected, actual);
   }
 
   @Test
   public void creatingGroupsFromEntryMaps() {
-    ImmutableMultimap<Path, String> subgroups = ImmutableMultimap.<Path, String>builder()
-        .put(Paths.get("root/App/Foo"), "Bar")
-        .put(Paths.get("root"), "Lib")
-        .put(Paths.get("root/Lib"), "Bar")
-        .put(Paths.get("root/App"), "Foo")
-        .put(Paths.get("root"), "App")
-        .put(Paths.get("root/Lib"), "Foo")
-        .build();
+    ImmutableMultimap<Path, String> subgroups =
+        ImmutableMultimap.<Path, String>builder()
+            .put(Paths.get("root/App/Foo"), "Bar")
+            .put(Paths.get("root"), "Lib")
+            .put(Paths.get("root/Lib"), "Bar")
+            .put(Paths.get("root/App"), "Foo")
+            .put(Paths.get("root"), "App")
+            .put(Paths.get("root/Lib"), "Foo")
+            .build();
     ImmutableMultimap<Path, GroupedSource> entries =
         ImmutableMultimap.<Path, GroupedSource>builder()
             .put(
                 Paths.get("root/Lib/Foo"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File2.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File2.h")))
             .put(
                 Paths.get("root/App/Foo"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("App/Foo/File.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/Foo/File.h")))
             .put(
                 Paths.get("root/App"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("App/File.h")))
-            .put(
-                Paths.get("root"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("File.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/File.h")))
+            .put(Paths.get("root"), GroupedSource.ofPrivateHeader(FakeSourcePath.of("File.h")))
             .put(
                 Paths.get("root/Lib/Bar"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Bar/File1.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))
             .put(
                 Paths.get("root/Lib/Foo"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File1.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")))
             .put(
                 Paths.get("root/App/Foo/Bar"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("App/Foo/Bar/File.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/Foo/Bar/File.h")))
             .build();
 
-    ImmutableList<GroupedSource> expected = ImmutableList.of(
-        GroupedSource.ofSourceGroup(
-            "App",
-            Paths.get("App"),
-            ImmutableList.of(
-                GroupedSource.ofSourceGroup(
-                    "Foo",
-                    Paths.get("App/Foo"),
-                    ImmutableList.of(
-                        GroupedSource.ofSourceGroup(
-                            "Bar",
-                            Paths.get("App/Foo/Bar"),
-                            ImmutableList.of(
-                                GroupedSource.ofPrivateHeader(
-                                    new FakeSourcePath("App/Foo/Bar/File.h")))),
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("App/Foo/File.h")))),
-                GroupedSource.ofPrivateHeader(
-                    new FakeSourcePath("App/File.h")))),
-        GroupedSource.ofSourceGroup(
-            "Lib",
-            Paths.get("Lib"),
-            ImmutableList.of(
-                GroupedSource.ofSourceGroup(
-                    "Bar",
-                    Paths.get("Lib/Bar"),
-                    ImmutableList.of(
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("Lib/Bar/File1.h")))),
-                GroupedSource.ofSourceGroup(
-                    "Foo",
-                    Paths.get("Lib/Foo"),
-                    ImmutableList.of(
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("Lib/Foo/File1.h")),
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("Lib/Foo/File2.h")))))),
-        GroupedSource.ofPrivateHeader(new FakeSourcePath("File.h")));
+    ImmutableList<GroupedSource> expected =
+        ImmutableList.of(
+            GroupedSource.ofSourceGroup(
+                "App",
+                Paths.get("App"),
+                ImmutableList.of(
+                    GroupedSource.ofSourceGroup(
+                        "Foo",
+                        Paths.get("App/Foo"),
+                        ImmutableList.of(
+                            GroupedSource.ofSourceGroup(
+                                "Bar",
+                                Paths.get("App/Foo/Bar"),
+                                ImmutableList.of(
+                                    GroupedSource.ofPrivateHeader(
+                                        FakeSourcePath.of("App/Foo/Bar/File.h")))),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/Foo/File.h")))),
+                    GroupedSource.ofPrivateHeader(FakeSourcePath.of("App/File.h")))),
+            GroupedSource.ofSourceGroup(
+                "Lib",
+                Paths.get("Lib"),
+                ImmutableList.of(
+                    GroupedSource.ofSourceGroup(
+                        "Bar",
+                        Paths.get("Lib/Bar"),
+                        ImmutableList.of(
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))),
+                    GroupedSource.ofSourceGroup(
+                        "Foo",
+                        Paths.get("Lib/Foo"),
+                        ImmutableList.of(
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")),
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File2.h")))))),
+            GroupedSource.ofPrivateHeader(FakeSourcePath.of("File.h")));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    ImmutableList<GroupedSource> actual = RuleUtils.createGroupsFromEntryMaps(
-        subgroups,
-        entries,
-        new RuleUtils.GroupedSourceNameComparator(resolver.deprecatedPathFunction()),
-        Paths.get("root"),
-        Paths.get("root"));
+    SourcePathResolver resolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestActionGraphBuilder()));
+    ImmutableList<GroupedSource> actual =
+        RuleUtils.createGroupsFromEntryMaps(
+            subgroups,
+            entries,
+            new RuleUtils.GroupedSourceNameComparator(resolver::getRelativePath),
+            Paths.get("root"),
+            Paths.get("root"));
 
     assertEquals(expected, actual);
   }
 
   @Test
   public void creatingGroupsFromEntryMapsKeepsLongestCommonPrefix() {
-    ImmutableMultimap<Path, String> subgroups = ImmutableMultimap.<Path, String>builder()
-        .put(Paths.get("root"), "Lib")
-        .put(Paths.get("root/Lib"), "Bar")
-        .put(Paths.get("root/Lib"), "Foo")
-        .build();
+    ImmutableMultimap<Path, String> subgroups =
+        ImmutableMultimap.<Path, String>builder()
+            .put(Paths.get("root"), "Lib")
+            .put(Paths.get("root/Lib"), "Bar")
+            .put(Paths.get("root/Lib"), "Foo")
+            .build();
     ImmutableMultimap<Path, GroupedSource> entries =
         ImmutableMultimap.<Path, GroupedSource>builder()
             .put(
                 Paths.get("root/Lib/Foo"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File2.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File2.h")))
             .put(
                 Paths.get("root/Lib/Bar"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Bar/File1.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))
             .put(
                 Paths.get("root/Lib/Foo"),
-                GroupedSource.ofPrivateHeader(new FakeSourcePath("Lib/Foo/File1.h")))
+                GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")))
             .build();
 
-    ImmutableList<GroupedSource> expected = ImmutableList.of(
-        GroupedSource.ofSourceGroup(
-            "Lib",
-            Paths.get("Lib"),
-            ImmutableList.of(
-                GroupedSource.ofSourceGroup(
-                    "Bar",
-                    Paths.get("Lib/Bar"),
-                    ImmutableList.of(
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("Lib/Bar/File1.h")))),
-                GroupedSource.ofSourceGroup(
-                    "Foo",
-                    Paths.get("Lib/Foo"),
-                    ImmutableList.of(
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("Lib/Foo/File1.h")),
-                        GroupedSource.ofPrivateHeader(
-                            new FakeSourcePath("Lib/Foo/File2.h")))))));
+    ImmutableList<GroupedSource> expected =
+        ImmutableList.of(
+            GroupedSource.ofSourceGroup(
+                "Lib",
+                Paths.get("Lib"),
+                ImmutableList.of(
+                    GroupedSource.ofSourceGroup(
+                        "Bar",
+                        Paths.get("Lib/Bar"),
+                        ImmutableList.of(
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Bar/File1.h")))),
+                    GroupedSource.ofSourceGroup(
+                        "Foo",
+                        Paths.get("Lib/Foo"),
+                        ImmutableList.of(
+                            GroupedSource.ofPrivateHeader(FakeSourcePath.of("Lib/Foo/File1.h")),
+                            GroupedSource.ofPrivateHeader(
+                                FakeSourcePath.of("Lib/Foo/File2.h")))))));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    ImmutableList<GroupedSource> actual = RuleUtils.createGroupsFromEntryMaps(
-        subgroups,
-        entries,
-        new RuleUtils.GroupedSourceNameComparator(resolver.deprecatedPathFunction()),
-        Paths.get("root"),
-        Paths.get("root"));
+    SourcePathResolver resolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestActionGraphBuilder()));
+    ImmutableList<GroupedSource> actual =
+        RuleUtils.createGroupsFromEntryMaps(
+            subgroups,
+            entries,
+            new RuleUtils.GroupedSourceNameComparator(resolver::getRelativePath),
+            Paths.get("root"),
+            Paths.get("root"));
 
     assertEquals(expected, actual);
   }
@@ -367,22 +351,22 @@ public class RuleUtilsTest {
   @Test
   public void creatingGroupsFromSingleFileEntryMaps() {
     ImmutableMultimap<Path, String> subgroups = ImmutableMultimap.of();
-    ImmutableMultimap<Path, GroupedSource> entries = ImmutableMultimap.of(
-        Paths.get("root"), GroupedSource.ofPrivateHeader(new FakeSourcePath("File1.h")));
+    ImmutableMultimap<Path, GroupedSource> entries =
+        ImmutableMultimap.of(
+            Paths.get("root"), GroupedSource.ofPrivateHeader(FakeSourcePath.of("File1.h")));
 
-    ImmutableList<GroupedSource> expected = ImmutableList.of(
-        GroupedSource.ofPrivateHeader(
-            new FakeSourcePath("File1.h")));
+    ImmutableList<GroupedSource> expected =
+        ImmutableList.of(GroupedSource.ofPrivateHeader(FakeSourcePath.of("File1.h")));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    ImmutableList<GroupedSource> actual = RuleUtils.createGroupsFromEntryMaps(
-        subgroups,
-        entries,
-        new RuleUtils.GroupedSourceNameComparator(resolver.deprecatedPathFunction()),
-        Paths.get("root"),
-        Paths.get("root"));
+    SourcePathResolver resolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestActionGraphBuilder()));
+    ImmutableList<GroupedSource> actual =
+        RuleUtils.createGroupsFromEntryMaps(
+            subgroups,
+            entries,
+            new RuleUtils.GroupedSourceNameComparator(resolver::getRelativePath),
+            Paths.get("root"),
+            Paths.get("root"));
 
     assertEquals(expected, actual);
   }
@@ -394,15 +378,15 @@ public class RuleUtilsTest {
 
     ImmutableList<GroupedSource> expected = ImmutableList.of();
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    ImmutableList<GroupedSource> actual = RuleUtils.createGroupsFromEntryMaps(
-        subgroups,
-        entries,
-        new RuleUtils.GroupedSourceNameComparator(resolver.deprecatedPathFunction()),
-        Paths.get("root"),
-        Paths.get("root"));
+    SourcePathResolver resolver =
+        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestActionGraphBuilder()));
+    ImmutableList<GroupedSource> actual =
+        RuleUtils.createGroupsFromEntryMaps(
+            subgroups,
+            entries,
+            new RuleUtils.GroupedSourceNameComparator(resolver::getRelativePath),
+            Paths.get("root"),
+            Paths.get("root"));
 
     assertEquals(expected, actual);
   }
