@@ -19,201 +19,265 @@ package com.facebook.buck.cxx;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
 
-import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
-import com.facebook.buck.cli.FakeBuckConfig;
-import com.facebook.buck.model.BuildTarget;
-import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.rules.BuildRule;
-import com.facebook.buck.rules.BuildRuleParams;
-import com.facebook.buck.rules.BuildRuleResolver;
-import com.facebook.buck.rules.BuildTargetSourcePath;
-import com.facebook.buck.rules.FakeBuildRule;
-import com.facebook.buck.rules.FakeBuildRuleParamsBuilder;
-import com.facebook.buck.rules.SourcePathResolver;
-import com.facebook.buck.rules.TargetGraph;
+import com.facebook.buck.core.config.FakeBuckConfig;
+import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.BuildTargetFactory;
+import com.facebook.buck.core.rules.ActionGraphBuilder;
+import com.facebook.buck.core.rules.BuildRule;
+import com.facebook.buck.core.rules.BuildRuleParams;
+import com.facebook.buck.core.rules.TestBuildRuleParams;
+import com.facebook.buck.core.rules.impl.FakeBuildRule;
+import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
+import com.facebook.buck.core.sourcepath.DefaultBuildTargetSourcePath;
+import com.facebook.buck.cxx.toolchain.CxxBuckConfig;
+import com.facebook.buck.cxx.toolchain.CxxPlatform;
+import com.facebook.buck.cxx.toolchain.CxxPlatformUtils;
+import com.facebook.buck.cxx.toolchain.linker.Linker;
+import com.facebook.buck.cxx.toolchain.nativelink.NativeLinkable;
+import com.facebook.buck.cxx.toolchain.nativelink.NativeLinkableInput;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.rules.args.Arg;
 import com.facebook.buck.rules.args.SourcePathArg;
 import com.facebook.buck.rules.args.StringArg;
 import com.facebook.buck.rules.coercer.FrameworkPath;
 import com.facebook.buck.step.Step;
-import com.google.common.base.Functions;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicates;
-import com.google.common.collect.FluentIterable;
+import com.facebook.buck.util.types.Either;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.ImmutableSortedMap;
 import com.google.common.collect.ImmutableSortedSet;
-
-import org.junit.Test;
-
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.regex.Pattern;
+import java.util.Optional;
+import org.junit.Test;
 
 public class CxxLibraryTest {
 
   @Test
   public void cxxLibraryInterfaces() {
-    SourcePathResolver pathResolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-    );
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
+    BuildRuleParams params = TestBuildRuleParams.create();
     CxxPlatform cxxPlatform =
-        DefaultCxxPlatforms.build(new CxxBuckConfig(FakeBuckConfig.builder().build()));
+        CxxPlatformUtils.build(new CxxBuckConfig(FakeBuckConfig.builder().build()));
 
     // Setup some dummy values for the header info.
-    final BuildTarget publicHeaderTarget = BuildTargetFactory.newInstance("//:header");
-    final BuildTarget publicHeaderSymlinkTreeTarget = BuildTargetFactory.newInstance("//:symlink");
-    final BuildTarget privateHeaderTarget = BuildTargetFactory.newInstance("//:privateheader");
-    final BuildTarget privateHeaderSymlinkTreeTarget = BuildTargetFactory.newInstance(
-        "//:privatesymlink");
+    BuildTarget publicHeaderTarget = BuildTargetFactory.newInstance("//:header");
+    BuildTarget publicHeaderSymlinkTreeTarget = BuildTargetFactory.newInstance("//:symlink");
+    BuildTarget privateHeaderTarget = BuildTargetFactory.newInstance("//:privateheader");
+    BuildTarget privateHeaderSymlinkTreeTarget =
+        BuildTargetFactory.newInstance("//:privatesymlink");
 
     // Setup some dummy values for the library archive info.
-    final BuildRule archive = new FakeBuildRule("//:archive", pathResolver);
+    BuildRule archive = new FakeBuildRule("//:archive").setOutputFile("libarchive.a");
 
     // Setup some dummy values for the library archive info.
-    final BuildRule sharedLibrary = new FakeBuildRule("//:shared", pathResolver);
-    final Path sharedLibraryOutput = Paths.get("output/path/lib.so");
-    final String sharedLibrarySoname = "lib.so";
+    BuildRule sharedLibrary = new FakeBuildRule("//:shared").setOutputFile("libshared.so");
+    Path sharedLibraryOutput = Paths.get("output/path/lib.so");
+    String sharedLibrarySoname = "lib.so";
 
     // Construct a CxxLibrary object to test.
-    FakeCxxLibrary cxxLibrary = new FakeCxxLibrary(
-        params,
-        pathResolver,
-        publicHeaderTarget,
-        publicHeaderSymlinkTreeTarget,
-        privateHeaderTarget,
-        privateHeaderSymlinkTreeTarget,
-        archive,
-        sharedLibrary,
-        sharedLibraryOutput,
-        sharedLibrarySoname,
-        ImmutableSortedSet.<BuildTarget>of());
+    ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+    FakeCxxLibrary cxxLibrary =
+        new FakeCxxLibrary(
+            target,
+            new FakeProjectFilesystem(),
+            params,
+            publicHeaderTarget,
+            publicHeaderSymlinkTreeTarget,
+            privateHeaderTarget,
+            privateHeaderSymlinkTreeTarget,
+            archive,
+            sharedLibrary,
+            sharedLibraryOutput,
+            sharedLibrarySoname,
+            ImmutableSortedSet.of());
 
     // Verify that we get the header/symlink targets and root via the CxxPreprocessorDep
     // interface.
-    CxxPreprocessorInput expectedPublicCxxPreprocessorInput = CxxPreprocessorInput.builder()
-        .addIncludes(
-            CxxSymlinkTreeHeaders.builder()
-                .setIncludeType(CxxPreprocessables.IncludeType.LOCAL)
-                .putNameToPathMap(
-                    Paths.get("header.h"),
-                    new BuildTargetSourcePath(publicHeaderTarget))
-                .setRoot(new BuildTargetSourcePath(publicHeaderSymlinkTreeTarget))
-                .build())
-        .build();
+    CxxPreprocessorInput expectedPublicCxxPreprocessorInput =
+        CxxPreprocessorInput.builder()
+            .addIncludes(
+                CxxSymlinkTreeHeaders.builder()
+                    .setIncludeType(CxxPreprocessables.IncludeType.LOCAL)
+                    .setNameToPathMap(
+                        ImmutableSortedMap.of(
+                            Paths.get("header.h"),
+                            DefaultBuildTargetSourcePath.of(publicHeaderTarget)))
+                    .setRoot(DefaultBuildTargetSourcePath.of(publicHeaderSymlinkTreeTarget))
+                    .setIncludeRoot(
+                        Either.ofRight(
+                            DefaultBuildTargetSourcePath.of(publicHeaderSymlinkTreeTarget)))
+                    .build())
+            .build();
     assertEquals(
         expectedPublicCxxPreprocessorInput,
-        cxxLibrary.getCxxPreprocessorInput(
-            cxxPlatform,
-            HeaderVisibility.PUBLIC));
+        cxxLibrary.getCxxPreprocessorInput(cxxPlatform, graphBuilder));
 
-    CxxPreprocessorInput expectedPrivateCxxPreprocessorInput = CxxPreprocessorInput.builder()
-        .addIncludes(
-            CxxSymlinkTreeHeaders.builder()
-                .setIncludeType(CxxPreprocessables.IncludeType.LOCAL)
-                .setRoot(new BuildTargetSourcePath(privateHeaderSymlinkTreeTarget))
-                .putNameToPathMap(
-                    Paths.get("header.h"),
-                    new BuildTargetSourcePath(privateHeaderTarget))
-                .build())
-        .build();
+    CxxPreprocessorInput expectedPrivateCxxPreprocessorInput =
+        CxxPreprocessorInput.builder()
+            .addIncludes(
+                CxxSymlinkTreeHeaders.builder()
+                    .setIncludeType(CxxPreprocessables.IncludeType.LOCAL)
+                    .setRoot(DefaultBuildTargetSourcePath.of(privateHeaderSymlinkTreeTarget))
+                    .setIncludeRoot(
+                        Either.ofRight(
+                            DefaultBuildTargetSourcePath.of(privateHeaderSymlinkTreeTarget)))
+                    .setNameToPathMap(
+                        ImmutableSortedMap.of(
+                            Paths.get("header.h"),
+                            DefaultBuildTargetSourcePath.of(privateHeaderTarget)))
+                    .build())
+            .build();
     assertEquals(
         expectedPrivateCxxPreprocessorInput,
-        cxxLibrary.getCxxPreprocessorInput(
-            cxxPlatform,
-            HeaderVisibility.PRIVATE));
+        cxxLibrary.getPrivateCxxPreprocessorInput(cxxPlatform, graphBuilder));
 
     // Verify that we get the static archive and its build target via the NativeLinkable
     // interface.
-    NativeLinkableInput expectedStaticNativeLinkableInput = NativeLinkableInput.of(
-        ImmutableList.<Arg>of(
-            new SourcePathArg(
-                pathResolver,
-                new BuildTargetSourcePath(archive.getBuildTarget()))),
-        ImmutableSet.<FrameworkPath>of(),
-        ImmutableSet.<FrameworkPath>of());
+    NativeLinkableInput expectedStaticNativeLinkableInput =
+        NativeLinkableInput.of(
+            ImmutableList.of(SourcePathArg.of(archive.getSourcePathToOutput())),
+            ImmutableSet.of(),
+            ImmutableSet.of());
     assertEquals(
         expectedStaticNativeLinkableInput,
         cxxLibrary.getNativeLinkableInput(
-            cxxPlatform,
-            Linker.LinkableDepType.STATIC));
+            cxxPlatform, Linker.LinkableDepType.STATIC, graphBuilder));
 
     // Verify that we get the static archive and its build target via the NativeLinkable
     // interface.
-    NativeLinkableInput expectedSharedNativeLinkableInput = NativeLinkableInput.of(
-        ImmutableList.<Arg>of(
-            new SourcePathArg(
-                pathResolver,
-                new BuildTargetSourcePath(sharedLibrary.getBuildTarget()))),
-        ImmutableSet.<FrameworkPath>of(),
-        ImmutableSet.<FrameworkPath>of());
+    NativeLinkableInput expectedSharedNativeLinkableInput =
+        NativeLinkableInput.of(
+            ImmutableList.of(SourcePathArg.of(sharedLibrary.getSourcePathToOutput())),
+            ImmutableSet.of(),
+            ImmutableSet.of());
     assertEquals(
         expectedSharedNativeLinkableInput,
         cxxLibrary.getNativeLinkableInput(
-            cxxPlatform,
-            Linker.LinkableDepType.SHARED));
+            cxxPlatform, Linker.LinkableDepType.SHARED, graphBuilder));
 
     // Verify that the implemented BuildRule methods are effectively unused.
     assertEquals(ImmutableList.<Step>of(), cxxLibrary.getBuildSteps(null, null));
-    assertNull(cxxLibrary.getPathToOutput());
+    assertNull(cxxLibrary.getSourcePathToOutput());
   }
 
   @Test
-  public void headerOnlyExports() throws Exception {
-    BuildRuleResolver ruleResolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    SourcePathResolver pathResolver = new SourcePathResolver(ruleResolver);
+  public void headerOnlyExports() {
+    ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-    BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
+    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
+    BuildRuleParams params = TestBuildRuleParams.create();
     CxxPlatform cxxPlatform =
-        DefaultCxxPlatforms.build(new CxxBuckConfig(FakeBuckConfig.builder().build()));
+        CxxPlatformUtils.build(new CxxBuckConfig(FakeBuckConfig.builder().build()));
 
-    BuildTarget staticPicLibraryTarget = params.getBuildTarget().withAppendedFlavors(
-        cxxPlatform.getFlavor(),
-        CxxDescriptionEnhancer.STATIC_PIC_FLAVOR);
-    ruleResolver.addToIndex(
-        new FakeBuildRule(
-            new FakeBuildRuleParamsBuilder(staticPicLibraryTarget).build(),
-            pathResolver));
+    BuildTarget staticPicLibraryTarget =
+        target.withAppendedFlavors(
+            cxxPlatform.getFlavor(), CxxDescriptionEnhancer.STATIC_PIC_FLAVOR);
+    graphBuilder.addToIndex(
+        new FakeBuildRule(staticPicLibraryTarget, projectFilesystem, TestBuildRuleParams.create()));
 
-
-    FrameworkPath frameworkPath = FrameworkPath.ofSourcePath(
-        new BuildTargetSourcePath(BuildTargetFactory.newInstance("//foo:baz")));
+    FrameworkPath frameworkPath =
+        FrameworkPath.ofSourcePath(
+            DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//foo:baz")));
 
     // Construct a CxxLibrary object to test.
-    CxxLibrary cxxLibrary = new CxxLibrary(
-        params,
-        ruleResolver,
-        pathResolver,
-        FluentIterable.from(params.getDeclaredDeps().get()),
-        /* hasExportedHeaders */ Predicates.<CxxPlatform>alwaysTrue(),
-        /* headerOnly */ Predicates.<CxxPlatform>alwaysTrue(),
-        Functions.constant(ImmutableMultimap.<CxxSource.Type, String>of()),
-        Functions.constant(StringArg.from("-ldl")),
-        /* linkTargetInput */ Functions.constant(NativeLinkableInput.of()),
-        /* supportedPlatformsRegex */ Optional.<Pattern>absent(),
-        ImmutableSet.of(frameworkPath),
-        ImmutableSet.<FrameworkPath>of(),
-        NativeLinkable.Linkage.STATIC,
-        /* linkWhole */ false,
-        Optional.<String>absent(),
-        ImmutableSortedSet.<BuildTarget>of(),
-        /* isAsset */ false);
+    CxxLibrary cxxLibrary =
+        new CxxLibrary(
+            target,
+            projectFilesystem,
+            params,
+            graphBuilder.getParallelizer(),
+            CxxDeps.of(),
+            CxxDeps.of(),
+            /* headerOnly */ x -> true,
+            (unused1, unused2) -> StringArg.from("-ldl"),
+            (unused1, unused2) -> StringArg.from("-lfoobarbaz"),
+            /* linkTargetInput */ (unused1, unused2, unused3, unused4) -> NativeLinkableInput.of(),
+            /* supportedPlatformsRegex */ Optional.empty(),
+            ImmutableSet.of(frameworkPath),
+            ImmutableSet.of(),
+            NativeLinkable.Linkage.STATIC,
+            /* linkWhole */ false,
+            Optional.empty(),
+            ImmutableSortedSet.of(),
+            /* isAsset */ false,
+            true,
+            true,
+            true,
+            Optional.empty());
 
     NativeLinkableInput expectedSharedNativeLinkableInput =
         NativeLinkableInput.of(
-            StringArg.from("-ldl"),
+            StringArg.from("-ldl", "-lfoobarbaz"),
             ImmutableSet.of(frameworkPath),
-            ImmutableSet.<FrameworkPath>of());
+            ImmutableSet.of());
 
     assertEquals(
         expectedSharedNativeLinkableInput,
         cxxLibrary.getNativeLinkableInput(
-            cxxPlatform,
-            Linker.LinkableDepType.SHARED));
+            cxxPlatform, Linker.LinkableDepType.SHARED, graphBuilder));
   }
 
+  @Test
+  public void postLinkerArgumentsExistWhenPassed() {
+    ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+    BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
+    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
+    BuildRuleParams params = TestBuildRuleParams.create();
+    CxxPlatform cxxPlatform =
+        CxxPlatformUtils.build(new CxxBuckConfig(FakeBuckConfig.builder().build()));
+
+    BuildTarget staticPicLibraryTarget =
+        target.withAppendedFlavors(
+            cxxPlatform.getFlavor(), CxxDescriptionEnhancer.STATIC_PIC_FLAVOR);
+    graphBuilder.addToIndex(
+        new FakeBuildRule(staticPicLibraryTarget, projectFilesystem, TestBuildRuleParams.create()));
+
+    FrameworkPath frameworkPath =
+        FrameworkPath.ofSourcePath(
+            DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//foo:baz")));
+
+    // Construct a CxxLibrary object to test.
+    CxxLibrary cxxLibrary =
+        new CxxLibrary(
+            target,
+            projectFilesystem,
+            params,
+            graphBuilder.getParallelizer(),
+            CxxDeps.of(),
+            CxxDeps.of(),
+            /* headerOnly */ x -> true,
+            (unused1, unused2) -> StringArg.from("-ldl"),
+            (unused1, unused2) -> StringArg.from("-lfoobarbaz"),
+            /* linkTargetInput */ (unused1, unused2, unused3, unused4) -> NativeLinkableInput.of(),
+            /* supportedPlatformsRegex */ Optional.empty(),
+            ImmutableSet.of(frameworkPath),
+            ImmutableSet.of(),
+            NativeLinkable.Linkage.STATIC,
+            /* linkWhole */ false,
+            Optional.empty(),
+            ImmutableSortedSet.of(),
+            /* isAsset */ false,
+            true,
+            true,
+            true,
+            Optional.empty());
+
+    ImmutableList.Builder<Arg> linkerArgsBuilder = ImmutableList.builder();
+    linkerArgsBuilder.add(StringArg.of("-ldl"));
+
+    ImmutableList<? extends Arg> postFlags = ImmutableList.copyOf(StringArg.from("-lfoobarbaz"));
+    linkerArgsBuilder.addAll(postFlags);
+
+    ImmutableList<Arg> linkerArgs = linkerArgsBuilder.build();
+
+    NativeLinkableInput expectedSharedNativeLinkableInput =
+        NativeLinkableInput.of(linkerArgs, ImmutableSet.of(frameworkPath), ImmutableSet.of());
+
+    NativeLinkableInput actualSharedNativeLinkableInput =
+        cxxLibrary.getNativeLinkableInput(cxxPlatform, Linker.LinkableDepType.SHARED, graphBuilder);
+
+    assertEquals(expectedSharedNativeLinkableInput, actualSharedNativeLinkableInput);
+  }
 }
