@@ -20,275 +20,230 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
-import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
-import com.facebook.buck.cli.FakeBuckConfig;
-import com.facebook.buck.model.BuildTarget;
-import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.parser.NoSuchBuildTargetException;
-import com.facebook.buck.rules.BuildRule;
-import com.facebook.buck.rules.BuildRuleParams;
-import com.facebook.buck.rules.BuildRuleResolver;
-import com.facebook.buck.rules.BuildTargetSourcePath;
-import com.facebook.buck.rules.FakeBuildRule;
-import com.facebook.buck.rules.FakeBuildRuleParamsBuilder;
-import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.SourcePathResolver;
-import com.facebook.buck.rules.TargetGraph;
+import com.facebook.buck.core.config.FakeBuckConfig;
+import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.BuildTargetFactory;
+import com.facebook.buck.core.rules.ActionGraphBuilder;
+import com.facebook.buck.core.rules.BuildRule;
+import com.facebook.buck.core.rules.BuildRuleParams;
+import com.facebook.buck.core.rules.BuildRuleResolver;
+import com.facebook.buck.core.rules.SourcePathRuleFinder;
+import com.facebook.buck.core.rules.TestBuildRuleParams;
+import com.facebook.buck.core.rules.impl.FakeBuildRule;
+import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
+import com.facebook.buck.core.sourcepath.FakeSourcePath;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.cxx.toolchain.CxxBuckConfig;
+import com.facebook.buck.cxx.toolchain.CxxPlatform;
+import com.facebook.buck.cxx.toolchain.CxxPlatformUtils;
+import com.facebook.buck.cxx.toolchain.HeaderMode;
+import com.facebook.buck.cxx.toolchain.HeaderSymlinkTree;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.rules.args.StringArg;
 import com.facebook.buck.shell.Genrule;
 import com.facebook.buck.shell.GenruleBuilder;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
-import com.google.common.base.Optional;
-import com.google.common.base.Preconditions;
 import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
-
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Objects;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
 
-import java.nio.file.Path;
-import java.nio.file.Paths;
-
 public class CxxPreprocessablesTest {
 
-  private static class FakeCxxPreprocessorDep extends FakeBuildRule
-      implements CxxPreprocessorDep {
+  private static class FakeCxxPreprocessorDep extends FakeBuildRule implements CxxPreprocessorDep {
 
     private final CxxPreprocessorInput input;
 
     public FakeCxxPreprocessorDep(
+        BuildTarget buildTarget,
+        ProjectFilesystem projectFilesystem,
         BuildRuleParams params,
-        SourcePathResolver resolver,
         CxxPreprocessorInput input) {
-      super(params, resolver);
-      this.input = Preconditions.checkNotNull(input);
+      super(buildTarget, projectFilesystem, params);
+      this.input = Objects.requireNonNull(input);
     }
 
     @Override
-    public Iterable<? extends CxxPreprocessorDep> getCxxPreprocessorDeps(CxxPlatform cxxPlatform) {
-      return FluentIterable.from(getDeps())
-          .filter(CxxPreprocessorDep.class);
+    public Iterable<CxxPreprocessorDep> getCxxPreprocessorDeps(
+        CxxPlatform cxxPlatform, BuildRuleResolver ruleResolver) {
+      return FluentIterable.from(getBuildDeps()).filter(CxxPreprocessorDep.class);
     }
 
     @Override
     public CxxPreprocessorInput getCxxPreprocessorInput(
-        CxxPlatform cxxPlatform,
-        HeaderVisibility headerVisibility) {
+        CxxPlatform cxxPlatform, ActionGraphBuilder graphBuilder) {
       return input;
     }
 
     @Override
     public ImmutableMap<BuildTarget, CxxPreprocessorInput> getTransitiveCxxPreprocessorInput(
-        CxxPlatform cxxPlatform,
-        HeaderVisibility headerVisibility) throws NoSuchBuildTargetException {
+        CxxPlatform cxxPlatform, ActionGraphBuilder graphBuilder) {
       ImmutableMap.Builder<BuildTarget, CxxPreprocessorInput> builder = ImmutableMap.builder();
-      builder.put(
-          getBuildTarget(),
-          getCxxPreprocessorInput(cxxPlatform, headerVisibility));
-      for (BuildRule dep : getDeps()) {
+      builder.put(getBuildTarget(), getCxxPreprocessorInput(cxxPlatform, graphBuilder));
+      for (BuildRule dep : getBuildDeps()) {
         if (dep instanceof CxxPreprocessorDep) {
           builder.putAll(
-              ((CxxPreprocessorDep) dep).getTransitiveCxxPreprocessorInput(
-                  cxxPlatform,
-                  headerVisibility));
-          }
+              ((CxxPreprocessorDep) dep)
+                  .getTransitiveCxxPreprocessorInput(cxxPlatform, graphBuilder));
         }
+      }
       return builder.build();
     }
-
-    @Override
-    public Optional<HeaderSymlinkTree> getExportedHeaderSymlinkTree(CxxPlatform cxxPlatform) {
-      return Optional.absent();
-    }
   }
 
   private static FakeCxxPreprocessorDep createFakeCxxPreprocessorDep(
-      BuildTarget target,
-      SourcePathResolver resolver,
-      CxxPreprocessorInput input,
-      BuildRule... deps) {
+      BuildTarget target, CxxPreprocessorInput input, BuildRule... deps) {
     return new FakeCxxPreprocessorDep(
-        new FakeBuildRuleParamsBuilder(target)
-            .setDeclaredDeps(ImmutableSortedSet.copyOf(deps))
-            .build(),
-        resolver, input);
+        target,
+        new FakeProjectFilesystem(),
+        TestBuildRuleParams.create().withDeclaredDeps(ImmutableSortedSet.copyOf(deps)),
+        input);
   }
 
   private static FakeCxxPreprocessorDep createFakeCxxPreprocessorDep(
-      String target,
-      SourcePathResolver resolver,
-      CxxPreprocessorInput input,
-      BuildRule... deps) {
-    return createFakeCxxPreprocessorDep(
-        BuildTargetFactory.newInstance(target),
-        resolver,
-        input,
-        deps);
+      String target, CxxPreprocessorInput input, BuildRule... deps) {
+    return createFakeCxxPreprocessorDep(BuildTargetFactory.newInstance(target), input, deps);
   }
 
-  private static FakeBuildRule createFakeBuildRule(
-      BuildTarget target,
-      SourcePathResolver resolver,
-      BuildRule... deps) {
-    return new FakeBuildRule(
-        new FakeBuildRuleParamsBuilder(target)
-            .setDeclaredDeps(ImmutableSortedSet.copyOf(deps))
-            .build(),
-        resolver);
-  }
-
-  @Rule
-  public ExpectedException exception = ExpectedException.none();
+  @Rule public ExpectedException exception = ExpectedException.none();
 
   @Test
   public void resolveHeaderMap() {
     BuildTarget target = BuildTargetFactory.newInstance("//hello/world:test");
-    ImmutableMap<String, SourcePath> headerMap = ImmutableMap.<String, SourcePath>of(
-        "foo/bar.h", new FakeSourcePath("header1.h"),
-        "foo/hello.h", new FakeSourcePath("header2.h"));
+    ImmutableMap<String, SourcePath> headerMap =
+        ImmutableMap.of(
+            "foo/bar.h", FakeSourcePath.of("header1.h"),
+            "foo/hello.h", FakeSourcePath.of("header2.h"));
 
     // Verify that the resolveHeaderMap returns sane results.
-    ImmutableMap<Path, SourcePath> expected = ImmutableMap.<Path, SourcePath>of(
-        target.getBasePath().resolve("foo/bar.h"), new FakeSourcePath("header1.h"),
-        target.getBasePath().resolve("foo/hello.h"), new FakeSourcePath("header2.h"));
-    ImmutableMap<Path, SourcePath> actual = CxxPreprocessables.resolveHeaderMap(
-        target.getBasePath(), headerMap);
+    ImmutableMap<Path, SourcePath> expected =
+        ImmutableMap.of(
+            target.getBasePath().resolve("foo/bar.h"), FakeSourcePath.of("header1.h"),
+            target.getBasePath().resolve("foo/hello.h"), FakeSourcePath.of("header2.h"));
+    ImmutableMap<Path, SourcePath> actual =
+        CxxPreprocessables.resolveHeaderMap(target.getBasePath(), headerMap);
     assertEquals(expected, actual);
   }
 
   @Test
-  public void getTransitiveCxxPreprocessorInput() throws Exception {
+  public void getTransitiveCxxPreprocessorInput() {
     FakeProjectFilesystem filesystem = new FakeProjectFilesystem();
-    SourcePathResolver pathResolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-    );
-    CxxPlatform cxxPlatform = DefaultCxxPlatforms.build(
-        new CxxBuckConfig(FakeBuckConfig.builder().setFilesystem(filesystem).build()));
+    CxxPlatform cxxPlatform =
+        CxxPlatformUtils.build(
+            new CxxBuckConfig(FakeBuckConfig.builder().setFilesystem(filesystem).build()));
 
     // Setup a simple CxxPreprocessorDep which contributes components to preprocessing.
-    BuildTarget cppDepTarget1 = BuildTargetFactory.newInstance(filesystem, "//:cpp1");
-    CxxPreprocessorInput input1 = CxxPreprocessorInput.builder()
-        .addRules(cppDepTarget1)
-        .putPreprocessorFlags(CxxSource.Type.C, "-Dtest=yes")
-        .putPreprocessorFlags(CxxSource.Type.CXX, "-Dtest=yes")
-        .addSystemIncludeRoots(Paths.get("/usr/include"))
-        .build();
-    BuildTarget depTarget1 = BuildTargetFactory.newInstance(filesystem, "//:dep1");
-    FakeCxxPreprocessorDep dep1 = createFakeCxxPreprocessorDep(depTarget1, pathResolver, input1);
+    BuildTarget cppDepTarget1 = BuildTargetFactory.newInstance(filesystem.getRootPath(), "//:cpp1");
+    CxxPreprocessorInput input1 =
+        CxxPreprocessorInput.builder()
+            .addRules(cppDepTarget1)
+            .putPreprocessorFlags(CxxSource.Type.C, StringArg.of("-Dtest=yes"))
+            .putPreprocessorFlags(CxxSource.Type.CXX, StringArg.of("-Dtest=yes"))
+            .build();
+    BuildTarget depTarget1 = BuildTargetFactory.newInstance(filesystem.getRootPath(), "//:dep1");
+    FakeCxxPreprocessorDep dep1 = createFakeCxxPreprocessorDep(depTarget1, input1);
 
     // Setup another simple CxxPreprocessorDep which contributes components to preprocessing.
-    BuildTarget cppDepTarget2 = BuildTargetFactory.newInstance(filesystem, "//:cpp2");
-    CxxPreprocessorInput input2 = CxxPreprocessorInput.builder()
-        .addRules(cppDepTarget2)
-        .putPreprocessorFlags(CxxSource.Type.C, "-DBLAH")
-        .putPreprocessorFlags(CxxSource.Type.CXX, "-DBLAH")
-        .addSystemIncludeRoots(filesystem.resolve("test"))
-        .build();
+    BuildTarget cppDepTarget2 = BuildTargetFactory.newInstance(filesystem.getRootPath(), "//:cpp2");
+    CxxPreprocessorInput input2 =
+        CxxPreprocessorInput.builder()
+            .addRules(cppDepTarget2)
+            .putPreprocessorFlags(CxxSource.Type.C, StringArg.of("-DBLAH"))
+            .putPreprocessorFlags(CxxSource.Type.CXX, StringArg.of("-DBLAH"))
+            .build();
     BuildTarget depTarget2 = BuildTargetFactory.newInstance("//:dep2");
-    FakeCxxPreprocessorDep dep2 = createFakeCxxPreprocessorDep(depTarget2, pathResolver, input2);
+    FakeCxxPreprocessorDep dep2 = createFakeCxxPreprocessorDep(depTarget2, input2);
 
     // Create a normal dep which depends on the two CxxPreprocessorDep rules above.
-    BuildTarget depTarget3 = BuildTargetFactory.newInstance(filesystem, "//:dep3");
-    CxxPreprocessorInput nothing = CxxPreprocessorInput.EMPTY;
-    FakeCxxPreprocessorDep dep3 = createFakeCxxPreprocessorDep(depTarget3,
-        pathResolver,
-        nothing, dep1, dep2);
+    BuildTarget depTarget3 = BuildTargetFactory.newInstance(filesystem.getRootPath(), "//:dep3");
+    CxxPreprocessorInput nothing = CxxPreprocessorInput.of();
+    FakeCxxPreprocessorDep dep3 = createFakeCxxPreprocessorDep(depTarget3, nothing, dep1, dep2);
 
     // Verify that getTransitiveCxxPreprocessorInput gets all CxxPreprocessorInput objects
     // from the relevant rules above.
     ImmutableList<CxxPreprocessorInput> expected = ImmutableList.of(nothing, input1, input2);
-    ImmutableList<CxxPreprocessorInput> actual = ImmutableList.copyOf(
-        CxxPreprocessables.getTransitiveCxxPreprocessorInput(
-            cxxPlatform,
-            ImmutableList.<BuildRule>of(dep3)));
+    ImmutableList<CxxPreprocessorInput> actual =
+        ImmutableList.copyOf(
+            CxxPreprocessables.getTransitiveCxxPreprocessorInput(
+                cxxPlatform, new TestActionGraphBuilder(), ImmutableList.<BuildRule>of(dep3)));
     assertEquals(expected, actual);
   }
 
   @Test
-  public void createHeaderSymlinkTreeBuildRuleHasNoDeps() throws Exception {
-    BuildRuleResolver resolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    SourcePathResolver pathResolver = new SourcePathResolver(resolver);
-
+  public void createHeaderSymlinkTreeBuildRuleHasNoDeps() {
+    ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
     FakeProjectFilesystem filesystem = new FakeProjectFilesystem();
 
     // Setup up the main build target and build params, which some random dep.  We'll make
     // sure the dep doesn't get propagated to the symlink rule below.
-    FakeBuildRule dep = createFakeBuildRule(
-        BuildTargetFactory.newInstance(filesystem, "//random:dep"),
-        pathResolver);
-    BuildTarget target = BuildTargetFactory.newInstance(filesystem, "//foo:bar");
-    BuildRuleParams params = new FakeBuildRuleParamsBuilder(target)
-        .setDeclaredDeps(ImmutableSortedSet.<BuildRule>of(dep))
-        .setProjectFilesystem(filesystem)
-        .build();
-    Path root = filesystem.resolve("root");
+    BuildTarget target = BuildTargetFactory.newInstance(filesystem.getRootPath(), "//foo:bar");
+    Path root = Paths.get("root");
 
-    // Setup a simple genrule we can wrap in a BuildTargetSourcePath to model a input source
+    // Setup a simple genrule we can wrap in a ExplicitBuildTargetSourcePath to model a input source
     // that is built by another rule.
-    Genrule genrule = (Genrule) GenruleBuilder
-        .newGenruleBuilder(BuildTargetFactory.newInstance(filesystem, "//:genrule"))
-        .setOut("foo/bar.o")
-        .build(resolver);
+    Genrule genrule =
+        GenruleBuilder.newGenruleBuilder(
+                BuildTargetFactory.newInstance(filesystem.getRootPath(), "//:genrule"))
+            .setOut("foo/bar.o")
+            .build(graphBuilder);
 
     // Setup the link map with both a regular path-based source path and one provided by
     // another build rule.
-    ImmutableMap<Path, SourcePath> links = ImmutableMap.<Path, SourcePath>of(
-        Paths.get("link1"),
-        new FakeSourcePath("hello"),
-        Paths.get("link2"),
-        new BuildTargetSourcePath(genrule.getBuildTarget()));
+    ImmutableMap<Path, SourcePath> links =
+        ImmutableMap.of(
+            Paths.get("link1"),
+            FakeSourcePath.of("hello"),
+            Paths.get("link2"),
+            genrule.getSourcePathToOutput());
 
     // Build our symlink tree rule using the helper method.
-    HeaderSymlinkTree symlinkTree = CxxPreprocessables.createHeaderSymlinkTreeBuildRule(
-        pathResolver,
-        target,
-        params,
-        root,
-        Optional.<Path>absent(),
-        links);
+    HeaderSymlinkTree symlinkTree =
+        CxxPreprocessables.createHeaderSymlinkTreeBuildRule(
+            target,
+            filesystem,
+            new SourcePathRuleFinder(graphBuilder),
+            root,
+            links,
+            HeaderMode.SYMLINK_TREE_ONLY);
 
     // Verify that the symlink tree has no deps.  This is by design, since setting symlinks can
     // be done completely independently from building the source that the links point to and
     // independently from the original deps attached to the input build rule params.
-    assertTrue(symlinkTree.getDeps().isEmpty());
+    assertTrue(symlinkTree.getBuildDeps().isEmpty());
   }
 
   @Test
-  public void getTransitiveNativeLinkableInputDoesNotTraversePastNonNativeLinkables()
-      throws Exception {
-    SourcePathResolver pathResolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-    );
-    CxxPlatform cxxPlatform = DefaultCxxPlatforms.build(
-        new CxxBuckConfig(FakeBuckConfig.builder().build()));
+  public void getTransitiveNativeLinkableInputDoesNotTraversePastNonNativeLinkables() {
+    CxxPlatform cxxPlatform =
+        CxxPlatformUtils.build(new CxxBuckConfig(FakeBuckConfig.builder().build()));
 
     // Create a native linkable that sits at the bottom of the dep chain.
-    String sentinal = "bottom";
-    CxxPreprocessorInput bottomInput = CxxPreprocessorInput.builder()
-        .putPreprocessorFlags(CxxSource.Type.C, sentinal)
-        .build();
-    BuildRule bottom = createFakeCxxPreprocessorDep("//:bottom", pathResolver, bottomInput);
+    StringArg sentinal = StringArg.of("bottom");
+    CxxPreprocessorInput bottomInput =
+        CxxPreprocessorInput.builder().putPreprocessorFlags(CxxSource.Type.C, sentinal).build();
+    BuildRule bottom = createFakeCxxPreprocessorDep("//:bottom", bottomInput);
 
     // Create a non-native linkable that sits in the middle of the dep chain, preventing
     // traversals to the bottom native linkable.
-    BuildRule middle = new FakeBuildRule("//:middle", pathResolver, bottom);
+    BuildRule middle = new FakeBuildRule("//:middle", bottom);
 
     // Create a native linkable that sits at the top of the dep chain.
-    CxxPreprocessorInput topInput = CxxPreprocessorInput.EMPTY;
-    BuildRule top = createFakeCxxPreprocessorDep("//:top", pathResolver, topInput, middle);
+    CxxPreprocessorInput topInput = CxxPreprocessorInput.of();
+    BuildRule top = createFakeCxxPreprocessorDep("//:top", topInput, middle);
 
     // Now grab all input via traversing deps and verify that the middle rule prevents pulling
     // in the bottom input.
-    CxxPreprocessorInput totalInput = CxxPreprocessorInput.concat(
-        CxxPreprocessables.getTransitiveCxxPreprocessorInput(
-            cxxPlatform,
-            ImmutableList.of(top)));
+    CxxPreprocessorInput totalInput =
+        CxxPreprocessorInput.concat(
+            CxxPreprocessables.getTransitiveCxxPreprocessorInput(
+                cxxPlatform, new TestActionGraphBuilder(), ImmutableList.of(top)));
     assertTrue(bottomInput.getPreprocessorFlags().get(CxxSource.Type.C).contains(sentinal));
     assertFalse(totalInput.getPreprocessorFlags().get(CxxSource.Type.C).contains(sentinal));
   }
-
 }
