@@ -16,50 +16,51 @@
 
 package com.facebook.buck.cxx;
 
+import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.hasItems;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 
-import com.facebook.buck.cli.BuckConfig;
-import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
-import com.facebook.buck.cli.FakeBuckConfig;
-import com.facebook.buck.io.MorePaths;
-import com.facebook.buck.io.ProjectFilesystem;
-import com.facebook.buck.model.BuildTarget;
-import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.rules.BinaryBuildRuleToolProvider;
-import com.facebook.buck.rules.BuildRule;
-import com.facebook.buck.rules.BuildRuleParams;
-import com.facebook.buck.rules.BuildRuleResolver;
-import com.facebook.buck.rules.BuildTargetSourcePath;
-import com.facebook.buck.rules.FakeBuildRule;
-import com.facebook.buck.rules.FakeBuildRuleParamsBuilder;
-import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.PathSourcePath;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.SourcePathResolver;
-import com.facebook.buck.rules.TargetGraph;
-import com.facebook.buck.rules.coercer.PatternMatchedCollection;
+import com.facebook.buck.core.build.context.BuildContext;
+import com.facebook.buck.core.build.context.FakeBuildContext;
+import com.facebook.buck.core.config.BuckConfig;
+import com.facebook.buck.core.config.FakeBuckConfig;
+import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.BuildTargetFactory;
+import com.facebook.buck.core.rules.ActionGraphBuilder;
+import com.facebook.buck.core.rules.BuildRule;
+import com.facebook.buck.core.rules.SourcePathRuleFinder;
+import com.facebook.buck.core.rules.TestBuildRuleParams;
+import com.facebook.buck.core.rules.impl.DependencyAggregationTestUtil;
+import com.facebook.buck.core.rules.impl.FakeBuildRule;
+import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
+import com.facebook.buck.core.sourcepath.FakeSourcePath;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
+import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
+import com.facebook.buck.core.toolchain.toolprovider.impl.BinaryBuildRuleToolProvider;
+import com.facebook.buck.cxx.toolchain.CompilerProvider;
+import com.facebook.buck.cxx.toolchain.CxxBuckConfig;
+import com.facebook.buck.cxx.toolchain.CxxPlatform;
+import com.facebook.buck.cxx.toolchain.CxxPlatformUtils;
+import com.facebook.buck.cxx.toolchain.CxxToolProvider;
+import com.facebook.buck.cxx.toolchain.PicType;
+import com.facebook.buck.cxx.toolchain.PreprocessorProvider;
+import com.facebook.buck.io.file.MorePaths;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.AllExistingProjectFilesystem;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.rules.args.Arg;
+import com.facebook.buck.rules.args.StringArg;
 import com.facebook.buck.shell.ShBinary;
 import com.facebook.buck.shell.ShBinaryBuilder;
-import com.facebook.buck.testutil.AllExistingProjectFilesystem;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.google.common.base.Joiner;
-import com.google.common.base.Optional;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
-
-import org.hamcrest.Matchers;
-import org.junit.Assume;
-import org.junit.Test;
-import org.junit.experimental.runners.Enclosed;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collection;
@@ -67,6 +68,13 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import org.hamcrest.Matchers;
+import org.junit.Assume;
+import org.junit.Test;
+import org.junit.experimental.runners.Enclosed;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
 
 @SuppressWarnings("PMD.TestClassWithoutTestCases")
 @RunWith(Enclosed.class)
@@ -74,8 +82,8 @@ public class CxxSourceRuleFactoryTest {
 
   private static final ProjectFilesystem PROJECT_FILESYSTEM = new FakeProjectFilesystem();
 
-  private static final CxxPlatform CXX_PLATFORM = DefaultCxxPlatforms.build(
-      new CxxBuckConfig(FakeBuckConfig.builder().build()));
+  private static final CxxPlatform CXX_PLATFORM =
+      CxxPlatformUtils.build(new CxxBuckConfig(FakeBuckConfig.builder().build()));
 
   private static <T> void assertContains(ImmutableList<T> container, Iterable<T> items) {
     for (T item : items) {
@@ -84,222 +92,210 @@ public class CxxSourceRuleFactoryTest {
   }
 
   public static class CxxSourceRuleFactoryTests {
-    private static FakeBuildRule createFakeBuildRule(
-        String target,
-        SourcePathResolver resolver,
-        BuildRule... deps) {
+    private static FakeBuildRule createFakeBuildRule(String target, BuildRule... deps) {
+      BuildTarget buildTarget = BuildTargetFactory.newInstance(target);
       return new FakeBuildRule(
-          new FakeBuildRuleParamsBuilder(BuildTargetFactory.newInstance(target))
-              .setDeclaredDeps(ImmutableSortedSet.copyOf(deps))
-              .build(),
-          resolver);
+          buildTarget,
+          new FakeProjectFilesystem(),
+          TestBuildRuleParams.create().withDeclaredDeps(ImmutableSortedSet.copyOf(deps)));
     }
 
     @Test
-    public void createPreprocessBuildRulePropagatesCxxPreprocessorDeps() {
+    public void createPreprocessAndCompileBuildRulePropagatesCxxPreprocessorDeps() {
       BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-      BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
-      BuildRuleResolver resolver =
-          new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-      SourcePathResolver pathResolver = new SourcePathResolver(resolver);
+      ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+      SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
+      SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
 
-      FakeBuildRule dep = resolver.addToIndex(new FakeBuildRule("//:dep1", pathResolver));
+      FakeBuildRule dep = graphBuilder.addToIndex(new FakeBuildRule("//:dep1"));
 
       CxxPreprocessorInput cxxPreprocessorInput =
-          CxxPreprocessorInput.builder()
-              .addRules(dep.getBuildTarget())
+          CxxPreprocessorInput.builder().addRules(dep.getBuildTarget()).build();
+
+      CxxSourceRuleFactory cxxSourceRuleFactory =
+          CxxSourceRuleFactory.builder()
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
+              .setPathResolver(pathResolver)
+              .setRuleFinder(ruleFinder)
+              .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
+              .setCxxPlatform(CXX_PLATFORM)
+              .addCxxPreprocessorInput(cxxPreprocessorInput)
+              .setPicType(PicType.PDC)
               .build();
 
-      CxxSourceRuleFactory cxxSourceRuleFactory = CxxSourceRuleFactory.builder()
-          .setParams(params)
-          .setResolver(resolver)
-          .setPathResolver(pathResolver)
-          .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
-          .setCxxPlatform(CXX_PLATFORM)
-          .addCxxPreprocessorInput(cxxPreprocessorInput)
-          .setPicType(CxxSourceRuleFactory.PicType.PDC)
-          .build();
-
       String name = "foo/bar.cpp";
-      SourcePath input = new PathSourcePath(PROJECT_FILESYSTEM, target.getBasePath().resolve(name));
-      CxxSource cxxSource = CxxSource.of(
-          CxxSource.Type.CXX,
-          input,
-          ImmutableList.<String>of());
+      SourcePath input = FakeSourcePath.of(PROJECT_FILESYSTEM, target.getBasePath().resolve(name));
+      CxxSource cxxSource = CxxSource.of(CxxSource.Type.CXX, input, ImmutableList.of());
 
       BuildRule cxxPreprocess =
-          cxxSourceRuleFactory.requirePreprocessBuildRule(
-              name,
-              cxxSource);
-      assertEquals(ImmutableSortedSet.<BuildRule>of(dep), cxxPreprocess.getDeps());
-      cxxPreprocess =
-          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(
-              name,
-              cxxSource,
-              CxxPreprocessMode.SEPARATE);
-      assertEquals(ImmutableSortedSet.<BuildRule>of(dep), cxxPreprocess.getDeps());
+          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(name, cxxSource);
+      assertThat(
+          DependencyAggregationTestUtil.getDisaggregatedDeps(cxxPreprocess)::iterator,
+          contains((BuildRule) dep));
+      cxxPreprocess = cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(name, cxxSource);
+      assertThat(
+          DependencyAggregationTestUtil.getDisaggregatedDeps(cxxPreprocess)::iterator,
+          contains((BuildRule) dep));
     }
 
     @Test
     public void preprocessFlagsFromPlatformArePropagated() {
       BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-      BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
-      BuildRuleResolver resolver =
-          new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-      SourcePathResolver pathResolver = new SourcePathResolver(resolver);
+      ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+      SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
+      SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
 
       ImmutableList<String> platformFlags = ImmutableList.of("-some", "-flags");
-      CxxPlatform platform = DefaultCxxPlatforms.build(
-          new CxxBuckConfig(
-              FakeBuckConfig.builder().setSections(
-                  ImmutableMap.of(
-                      "cxx", ImmutableMap.of("cxxppflags", Joiner.on(" ").join(platformFlags))))
-                  .build()));
+      CxxPlatform platform =
+          CxxPlatformUtils.build(
+              new CxxBuckConfig(
+                  FakeBuckConfig.builder()
+                      .setSections(
+                          ImmutableMap.of(
+                              "cxx",
+                              ImmutableMap.of("cxxppflags", Joiner.on(" ").join(platformFlags))))
+                      .build()));
 
-      CxxPreprocessorInput cxxPreprocessorInput = CxxPreprocessorInput.EMPTY;
+      CxxPreprocessorInput cxxPreprocessorInput = CxxPreprocessorInput.of();
 
-      CxxSourceRuleFactory cxxSourceRuleFactory = CxxSourceRuleFactory.builder()
-          .setParams(params)
-          .setResolver(resolver)
-          .setPathResolver(pathResolver)
-          .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
-          .setCxxPlatform(platform)
-          .addCxxPreprocessorInput(cxxPreprocessorInput)
-          .setPicType(CxxSourceRuleFactory.PicType.PDC)
-          .build();
+      CxxSourceRuleFactory cxxSourceRuleFactory =
+          CxxSourceRuleFactory.builder()
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
+              .setPathResolver(pathResolver)
+              .setRuleFinder(ruleFinder)
+              .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
+              .setCxxPlatform(platform)
+              .addCxxPreprocessorInput(cxxPreprocessorInput)
+              .setPicType(PicType.PDC)
+              .build();
 
       String name = "source.cpp";
-      CxxSource cxxSource = CxxSource.of(
-          CxxSource.Type.CXX,
-          new FakeSourcePath(name),
-          ImmutableList.<String>of());
+      CxxSource cxxSource =
+          CxxSource.of(CxxSource.Type.CXX, FakeSourcePath.of(name), ImmutableList.of());
 
       // Verify that platform flags make it to the compile rule.
       CxxPreprocessAndCompile cxxPreprocess =
-          cxxSourceRuleFactory.requirePreprocessBuildRule(
-              name,
-              cxxSource);
+          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(name, cxxSource);
       assertNotEquals(
           -1,
           Collections.indexOfSubList(
-              cxxPreprocess.getPreprocessorDelegate().get().getCommand(CxxToolFlags.of()),
+              Arg.stringify(
+                  cxxPreprocess
+                      .getPreprocessorDelegate()
+                      .get()
+                      .getCommand(CxxToolFlags.of(), Optional.empty(), pathResolver),
+                  pathResolver),
               platformFlags));
       CxxPreprocessAndCompile cxxPreprocessAndCompile =
-          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(
-              name,
-              cxxSource,
-              CxxPreprocessMode.SEPARATE);
+          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(name, cxxSource);
       assertNotEquals(
           -1,
           Collections.indexOfSubList(
-              cxxPreprocessAndCompile.getPreprocessorDelegate().get().getCommand(CxxToolFlags.of()),
+              Arg.stringify(
+                  cxxPreprocessAndCompile
+                      .getPreprocessorDelegate()
+                      .get()
+                      .getCommand(CxxToolFlags.of(), Optional.empty(), pathResolver),
+                  pathResolver),
               platformFlags));
     }
 
     @Test
     public void createCompileBuildRulePropagatesBuildRuleSourcePathDeps() {
       BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-      BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
-      BuildRuleResolver resolver =
-          new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+      ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+      SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
+      SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
 
-      FakeBuildRule dep = createFakeBuildRule("//:test", new SourcePathResolver(resolver));
-      resolver.addToIndex(dep);
-      SourcePath input = new BuildTargetSourcePath(dep.getBuildTarget());
-      CxxSourceRuleFactory cxxSourceRuleFactory = CxxSourceRuleFactory.builder()
-          .setParams(params)
-          .setResolver(resolver)
-          .setPathResolver(new SourcePathResolver(resolver))
-          .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
-          .setCxxPlatform(CXX_PLATFORM)
-          .setPicType(CxxSourceRuleFactory.PicType.PDC)
-          .build();
+      FakeBuildRule dep = createFakeBuildRule("//:test");
+      dep.setOutputFile("foo");
+      graphBuilder.addToIndex(dep);
+      SourcePath input = dep.getSourcePathToOutput();
+      CxxSourceRuleFactory cxxSourceRuleFactory =
+          CxxSourceRuleFactory.builder()
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
+              .setPathResolver(pathResolver)
+              .setRuleFinder(ruleFinder)
+              .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
+              .setCxxPlatform(CXX_PLATFORM)
+              .setPicType(PicType.PDC)
+              .build();
 
       String nameCompile = "foo/bar.ii";
-      CxxSource cxxSourceCompile = CxxSource.of(
-          CxxSource.Type.CXX_CPP_OUTPUT,
-          input,
-          ImmutableList.<String>of());
+      CxxSource cxxSourceCompile =
+          CxxSource.of(CxxSource.Type.CXX_CPP_OUTPUT, input, ImmutableList.of());
       CxxPreprocessAndCompile cxxCompile =
-          cxxSourceRuleFactory.requireCompileBuildRule(
-              nameCompile,
-              cxxSourceCompile);
-      assertEquals(ImmutableSortedSet.<BuildRule>of(dep), cxxCompile.getDeps());
+          cxxSourceRuleFactory.requireCompileBuildRule(nameCompile, cxxSourceCompile);
+      assertEquals(ImmutableSortedSet.<BuildRule>of(dep), cxxCompile.getBuildDeps());
 
       String namePreprocessAndCompile = "foo/bar.cpp";
-      CxxSource cxxSourcePreprocessAndCompile = CxxSource.of(
-          CxxSource.Type.CXX,
-          input,
-          ImmutableList.<String>of());
+      CxxSource cxxSourcePreprocessAndCompile =
+          CxxSource.of(CxxSource.Type.CXX, input, ImmutableList.of());
       CxxPreprocessAndCompile cxxPreprocessAndCompile =
           cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(
-              namePreprocessAndCompile,
-              cxxSourcePreprocessAndCompile,
-              CxxPreprocessMode.SEPARATE);
-      assertEquals(ImmutableSortedSet.<BuildRule>of(dep), cxxPreprocessAndCompile.getDeps());
+              namePreprocessAndCompile, cxxSourcePreprocessAndCompile);
+      assertThat(
+          DependencyAggregationTestUtil.getDisaggregatedDeps(cxxPreprocessAndCompile)::iterator,
+          contains((BuildRule) dep));
     }
 
     @Test
-    @SuppressWarnings("PMD.UseAssertTrueInsteadOfAssertEquals")
     public void createCompileBuildRulePicOption() {
       BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-      BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
-      BuildRuleResolver resolver =
-          new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-      Path scratchDir = Paths.get("scratchDir");
+      ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+      SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
+      SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+      BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
 
-      CxxSourceRuleFactory.Builder cxxSourceRuleFactoryBuilder = CxxSourceRuleFactory.builder()
-          .setParams(params)
-          .setResolver(resolver)
-          .setPathResolver(new SourcePathResolver(resolver))
-          .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
-          .setCxxPlatform(CXX_PLATFORM);
-      CxxSourceRuleFactory cxxSourceRuleFactoryPDC = cxxSourceRuleFactoryBuilder
-          .setPicType(CxxSourceRuleFactory.PicType.PDC)
-          .build();
-      CxxSourceRuleFactory cxxSourceRuleFactoryPIC = cxxSourceRuleFactoryBuilder
-          .setPicType(CxxSourceRuleFactory.PicType.PIC)
-          .build();
+      CxxSourceRuleFactory.Builder cxxSourceRuleFactoryBuilder =
+          CxxSourceRuleFactory.builder()
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
+              .setPathResolver(pathResolver)
+              .setRuleFinder(ruleFinder)
+              .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
+              .setCxxPlatform(CXX_PLATFORM);
+      CxxSourceRuleFactory cxxSourceRuleFactoryPDC =
+          cxxSourceRuleFactoryBuilder.setPicType(PicType.PDC).build();
+      CxxSourceRuleFactory cxxSourceRuleFactoryPIC =
+          cxxSourceRuleFactoryBuilder.setPicType(PicType.PIC).build();
 
       String name = "foo/bar.ii";
-      CxxSource cxxSource = CxxSource.of(
-          CxxSource.Type.CXX_CPP_OUTPUT,
-          new FakeSourcePath(name),
-          ImmutableList.<String>of());
+      CxxSource cxxSource =
+          CxxSource.of(CxxSource.Type.CXX_CPP_OUTPUT, FakeSourcePath.of(name), ImmutableList.of());
 
       // Verify building a non-PIC compile rule does *not* have the "-fPIC" flag and has the
       // expected compile target.
       CxxPreprocessAndCompile noPicCompile =
           cxxSourceRuleFactoryPDC.requireCompileBuildRule(name, cxxSource);
-      assertFalse(noPicCompile.makeMainStep(scratchDir).getCommand().contains("-fPIC"));
+      assertFalse(noPicCompile.makeMainStep(context, false).getCommand().contains("-fPIC"));
       assertEquals(
-          cxxSourceRuleFactoryPDC.createCompileBuildTarget(name),
-          noPicCompile.getBuildTarget());
+          cxxSourceRuleFactoryPDC.createCompileBuildTarget(name), noPicCompile.getBuildTarget());
 
       // Verify building a PIC compile rule *does* have the "-fPIC" flag and has the
       // expected compile target.
       CxxPreprocessAndCompile picCompile =
           cxxSourceRuleFactoryPIC.requireCompileBuildRule(name, cxxSource);
-      assertTrue(picCompile.makeMainStep(scratchDir).getCommand().contains("-fPIC"));
+      assertTrue(picCompile.makeMainStep(context, false).getCommand().contains("-fPIC"));
       assertEquals(
-          cxxSourceRuleFactoryPIC.createCompileBuildTarget(name),
-          picCompile.getBuildTarget());
+          cxxSourceRuleFactoryPIC.createCompileBuildTarget(name), picCompile.getBuildTarget());
 
       name = "foo/bar.cpp";
-      cxxSource = CxxSource.of(
-          CxxSource.Type.CXX,
-          new FakeSourcePath(name),
-          ImmutableList.<String>of());
+      cxxSource = CxxSource.of(CxxSource.Type.CXX, FakeSourcePath.of(name), ImmutableList.of());
 
       // Verify building a non-PIC compile rule does *not* have the "-fPIC" flag and has the
       // expected compile target.
       CxxPreprocessAndCompile noPicPreprocessAndCompile =
-          cxxSourceRuleFactoryPDC.requirePreprocessAndCompileBuildRule(
-              name,
-              cxxSource,
-              CxxPreprocessMode.SEPARATE);
+          cxxSourceRuleFactoryPDC.requirePreprocessAndCompileBuildRule(name, cxxSource);
       assertFalse(
-          noPicPreprocessAndCompile.makeMainStep(scratchDir).getCommand().contains("-fPIC"));
+          noPicPreprocessAndCompile.makeMainStep(context, false).getCommand().contains("-fPIC"));
       assertEquals(
           cxxSourceRuleFactoryPDC.createCompileBuildTarget(name),
           noPicPreprocessAndCompile.getBuildTarget());
@@ -307,11 +303,9 @@ public class CxxSourceRuleFactoryTest {
       // Verify building a PIC compile rule *does* have the "-fPIC" flag and has the
       // expected compile target.
       CxxPreprocessAndCompile picPreprocessAndCompile =
-          cxxSourceRuleFactoryPIC.requirePreprocessAndCompileBuildRule(
-              name,
-              cxxSource,
-              CxxPreprocessMode.SEPARATE);
-      assertTrue(picPreprocessAndCompile.makeMainStep(scratchDir).getCommand().contains("-fPIC"));
+          cxxSourceRuleFactoryPIC.requirePreprocessAndCompileBuildRule(name, cxxSource);
+      assertTrue(
+          picPreprocessAndCompile.makeMainStep(context, false).getCommand().contains("-fPIC"));
       assertEquals(
           cxxSourceRuleFactoryPIC.createCompileBuildTarget(name),
           picPreprocessAndCompile.getBuildTarget());
@@ -319,246 +313,225 @@ public class CxxSourceRuleFactoryTest {
 
     @Test
     public void checkPrefixHeaderIsIncluded() {
-      BuildRuleResolver buildRuleResolver =
-          new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+      ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+      SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
+      SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+      BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
       BuildTarget target = BuildTargetFactory.newInstance("//:target");
-      BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
       ProjectFilesystem filesystem = new AllExistingProjectFilesystem();
-      Path scratchDir = Paths.get("scratchDir");
 
-      BuckConfig buckConfig = FakeBuckConfig.builder().setFilesystem(filesystem).build();
-      CxxPlatform platform = DefaultCxxPlatforms.build(new CxxBuckConfig(buckConfig));
+      BuckConfig buckConfig =
+          FakeBuckConfig.builder()
+              .setFilesystem(filesystem)
+              .setSections(ImmutableMap.of("cxx", ImmutableMap.of("pch_enabled", "false")))
+              .build();
+      CxxBuckConfig cxxBuckConfig = new CxxBuckConfig(buckConfig);
+      CxxPlatform platform = CxxPlatformUtils.build(cxxBuckConfig);
 
       String prefixHeaderName = "test.pch";
-      SourcePath prefixHeaderSourcePath = new FakeSourcePath(filesystem, prefixHeaderName);
+      SourcePath prefixHeaderSourcePath = FakeSourcePath.of(filesystem, prefixHeaderName);
 
-      CxxSourceRuleFactory cxxSourceRuleFactory = CxxSourceRuleFactory.builder()
-          .setParams(params)
-          .setResolver(buildRuleResolver)
-          .setPathResolver(new SourcePathResolver(buildRuleResolver))
-          .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
-          .setCxxPlatform(platform)
-          .setPrefixHeader(prefixHeaderSourcePath)
-          .setPicType(CxxSourceRuleFactory.PicType.PDC)
-          .build();
+      CxxSourceRuleFactory cxxSourceRuleFactory =
+          CxxSourceRuleFactory.builder()
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
+              .setPathResolver(pathResolver)
+              .setRuleFinder(ruleFinder)
+              .setCxxBuckConfig(cxxBuckConfig)
+              .setCxxPlatform(platform)
+              .setPrefixHeader(prefixHeaderSourcePath)
+              .setPicType(PicType.PDC)
+              .build();
 
       String objcSourceName = "test.m";
-      CxxSource objcSource = CxxSource.of(
-          CxxSource.Type.OBJC,
-          new FakeSourcePath(objcSourceName),
-          ImmutableList.<String>of());
+      CxxSource objcSource =
+          CxxSource.of(CxxSource.Type.OBJC, FakeSourcePath.of(objcSourceName), ImmutableList.of());
       CxxPreprocessAndCompile objcPreprocessAndCompile =
-          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(
-              objcSourceName,
-              objcSource,
-              CxxPreprocessMode.SEPARATE);
+          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(objcSourceName, objcSource);
 
-      ImmutableList<String> explicitPrefixHeaderRelatedFlags = ImmutableList.of(
-          "-include", filesystem.resolve(prefixHeaderName).toString());
+      ImmutableList<String> explicitPrefixHeaderRelatedFlags =
+          ImmutableList.of("-include", filesystem.resolve(prefixHeaderName).toString());
 
-      CxxPreprocessAndCompileStep step = objcPreprocessAndCompile.makeMainStep(scratchDir);
+      CxxPreprocessAndCompileStep step = objcPreprocessAndCompile.makeMainStep(context, false);
       assertContains(step.getCommand(), explicitPrefixHeaderRelatedFlags);
     }
 
     @Test
     public void duplicateRuleFetchedFromResolverShouldCreateTheSameTarget() {
-      BuildRuleResolver buildRuleResolver =
-          new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+      ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+      SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
+      SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
       BuildTarget target = BuildTargetFactory.newInstance("//:target");
-      BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
       ProjectFilesystem filesystem = new AllExistingProjectFilesystem();
 
       BuckConfig buckConfig = FakeBuckConfig.builder().setFilesystem(filesystem).build();
-      CxxPlatform platform = DefaultCxxPlatforms.build(new CxxBuckConfig(buckConfig));
+      CxxPlatform platform = CxxPlatformUtils.build(new CxxBuckConfig(buckConfig));
 
-      CxxSourceRuleFactory cxxSourceRuleFactory = CxxSourceRuleFactory.builder()
-          .setParams(params)
-          .setResolver(buildRuleResolver)
-          .setPathResolver(new SourcePathResolver(buildRuleResolver))
-          .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
-          .setCxxPlatform(platform)
-          .setPicType(CxxSourceRuleFactory.PicType.PDC)
-          .build();
+      CxxSourceRuleFactory cxxSourceRuleFactory =
+          CxxSourceRuleFactory.builder()
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
+              .setPathResolver(pathResolver)
+              .setRuleFinder(ruleFinder)
+              .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
+              .setCxxPlatform(platform)
+              .setPicType(PicType.PDC)
+              .build();
 
       String objcSourceName = "test.m";
-      CxxSource objcSource = CxxSource.of(
-          CxxSource.Type.OBJC,
-          new FakeSourcePath(objcSourceName),
-          ImmutableList.<String>of());
+      CxxSource objcSource =
+          CxxSource.of(CxxSource.Type.OBJC, FakeSourcePath.of(objcSourceName), ImmutableList.of());
       CxxPreprocessAndCompile objcCompile =
-          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(
-              objcSourceName,
-              objcSource,
-              CxxPreprocessMode.SEPARATE);
+          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(objcSourceName, objcSource);
 
       // Make sure we can get the same build rule twice.
       CxxPreprocessAndCompile objcCompile2 =
-          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(
-              objcSourceName,
-              objcSource,
-              CxxPreprocessMode.SEPARATE);
+          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(objcSourceName, objcSource);
 
       assertEquals(objcCompile.getBuildTarget(), objcCompile2.getBuildTarget());
     }
 
     @Test
-    public void createPreprocessBuildRulePropagatesToolDeps() throws Exception {
+    public void createPreprocessAndCompileBuildRulePropagatesToolDeps() {
       BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
-      BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
-      BuildRuleResolver resolver =
-          new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-      SourcePathResolver pathResolver = new SourcePathResolver(resolver);
+      ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+      SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
+      SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
 
       ShBinary cxxpp =
-          (ShBinary) new ShBinaryBuilder(BuildTargetFactory.newInstance("//:cxxpp"))
-              .setMain(new FakeSourcePath("blah"))
-              .build(resolver);
+          new ShBinaryBuilder(BuildTargetFactory.newInstance("//:cxxpp"))
+              .setMain(FakeSourcePath.of("blah"))
+              .build(graphBuilder);
       ShBinary cxx =
-          (ShBinary) new ShBinaryBuilder(BuildTargetFactory.newInstance("//:cxx"))
-              .setMain(new FakeSourcePath("blah"))
-              .build(resolver);
+          new ShBinaryBuilder(BuildTargetFactory.newInstance("//:cxx"))
+              .setMain(FakeSourcePath.of("blah"))
+              .build(graphBuilder);
 
       CxxPlatform cxxPlatform =
           CXX_PLATFORM
               .withCxxpp(
                   new PreprocessorProvider(
                       new BinaryBuildRuleToolProvider(cxxpp.getBuildTarget(), ""),
-                      CxxToolProvider.Type.DEFAULT))
+                      CxxToolProvider.Type.GCC))
               .withCxx(
                   new CompilerProvider(
                       new BinaryBuildRuleToolProvider(cxx.getBuildTarget(), ""),
-                      CxxToolProvider.Type.DEFAULT));
+                      CxxToolProvider.Type.GCC,
+                      false));
 
       CxxSourceRuleFactory cxxSourceRuleFactory =
           CxxSourceRuleFactory.builder()
-              .setParams(params)
-              .setResolver(resolver)
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
               .setPathResolver(pathResolver)
+              .setRuleFinder(ruleFinder)
               .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
               .setCxxPlatform(cxxPlatform)
-              .addCxxPreprocessorInput(CxxPreprocessorInput.EMPTY)
-              .setPicType(CxxSourceRuleFactory.PicType.PDC)
+              .addCxxPreprocessorInput(CxxPreprocessorInput.of())
+              .setPicType(PicType.PDC)
               .build();
 
       String name = "foo/bar.cpp";
-      SourcePath input = new PathSourcePath(PROJECT_FILESYSTEM, target.getBasePath().resolve(name));
-      CxxSource cxxSource = CxxSource.of(
-          CxxSource.Type.CXX,
-          input,
-          ImmutableList.<String>of());
+      SourcePath input = FakeSourcePath.of(PROJECT_FILESYSTEM, target.getBasePath().resolve(name));
+      CxxSource cxxSource = CxxSource.of(CxxSource.Type.CXX, input, ImmutableList.of());
 
       BuildRule cxxPreprocess =
-          cxxSourceRuleFactory.requirePreprocessBuildRule(
-              name,
-              cxxSource);
-      assertThat(
-          cxxPreprocess.getDeps(),
-          Matchers.<BuildRule>hasItems(cxx, cxxpp));
-      cxxPreprocess =
-          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(
-              name,
-              cxxSource,
-              CxxPreprocessMode.SEPARATE);
-      assertThat(
-          cxxPreprocess.getDeps(),
-          Matchers.<BuildRule>hasItems(cxx, cxxpp));
+          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(name, cxxSource);
+      assertThat(cxxPreprocess.getBuildDeps(), hasItems(cxx, cxxpp));
+      cxxPreprocess = cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(name, cxxSource);
+      assertThat(cxxPreprocess.getBuildDeps(), hasItems(cxx, cxxpp));
     }
-
   }
 
   @RunWith(Parameterized.class)
   public static class RulesForDifferentSourcesShouldCreateSeaparateTargets {
     @SuppressWarnings("serial")
-    Map<String, String[]> testExampleSourceSets = new HashMap<String, String[]>() {
-      {
-        put(
-            "Preprocessable type",
-            new String[]{"1/2/3.c", "1_2/3.c", "1/2_3.c", "1_2_3.c"});
-        put(
-            "Compilable type",
-            new String[]{"1/2/3.i", "1_2/3.i", "1/2_3.i", "1_2_3.i"});
-        put(
-            "Same file in different directories",
-            new String[]{"one-path/file1.c", "another-path/file1.c"});
-        put(
-            "Various ASCII chars",
-            new String[]{"special/chars.c", "special_chars.c", "special chars.c",
-                "special!chars.c", "special(chars.c", "special,chars.c"});
-        put(
-            "Non-ASCII chars",
-            new String[]{"special/chars.c",
-                "specialאchars.c", "special漢chars.c", "specialДchars.c"});
-        put(
-            "One-char names",
-            new String[]{"_.c", ",.c", "漢.c"});
-      }};
+    Map<String, String[]> testExampleSourceSets =
+        new HashMap<String, String[]>() {
+          {
+            put("Preprocessable type", new String[] {"1/2/3.c", "1_2/3.c", "1/2_3.c", "1_2_3.c"});
+            put("Compilable type", new String[] {"1/2/3.i", "1_2/3.i", "1/2_3.i", "1_2_3.i"});
+            put(
+                "Same file in different directories",
+                new String[] {"one-path/file1.c", "another-path/file1.c"});
+            put(
+                "Various ASCII chars",
+                new String[] {
+                  "special/chars.c",
+                  "special_chars.c",
+                  "special chars.c",
+                  "special!chars.c",
+                  "special(chars.c",
+                  "special,chars.c"
+                });
+            put(
+                "Non-ASCII chars",
+                new String[] {
+                  "special/chars.c", "specialאchars.c", "special漢chars.c", "specialДchars.c"
+                });
+            put("One-char names", new String[] {"_.c", ",.c", "漢.c"});
+          }
+        };
 
-    @Parameterized.Parameters(name = "{0}, {1}")
-    public static Collection<Object[]> data() {
+    @Parameterized.Parameters(name = "{0}")
+    public static Collection<Object> data() {
       return Arrays.asList(
-          new Object[][]{
-              {"Preprocessable type", CxxPreprocessMode.COMBINED},
-              {"Preprocessable type", CxxPreprocessMode.PIPED},
-              {"Preprocessable type", CxxPreprocessMode.SEPARATE},
-              {"Compilable type", CxxPreprocessMode.COMBINED},
-              {"Compilable type", CxxPreprocessMode.PIPED},
-              {"Compilable type", CxxPreprocessMode.SEPARATE},
-              {"Same file in different directories", CxxPreprocessMode.COMBINED},
-              {"Various ASCII chars", CxxPreprocessMode.COMBINED},
-              {"Non-ASCII chars", CxxPreprocessMode.COMBINED},
-              {"One-char names", CxxPreprocessMode.COMBINED},
+          new Object[] {
+            "Preprocessable type",
+            "Compilable type",
+            "Same file in different directories",
+            "Various ASCII chars",
+            "Non-ASCII chars",
+            "One-char names",
           });
     }
 
     @Parameterized.Parameter(0)
     public String testExampleSourceSet;
 
-    @Parameterized.Parameter(1)
-    public CxxPreprocessMode strategy;
-
     @Test
     public void test() {
-      BuildRuleResolver buildRuleResolver =
-          new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+      ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+      SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
+      SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
       BuildTarget target = BuildTargetFactory.newInstance("//:target");
-      BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
       ProjectFilesystem filesystem = new AllExistingProjectFilesystem();
 
       BuckConfig buckConfig = FakeBuckConfig.builder().setFilesystem(filesystem).build();
-      CxxPlatform platform = DefaultCxxPlatforms.build(new CxxBuckConfig(buckConfig));
+      CxxPlatform platform = CxxPlatformUtils.build(new CxxBuckConfig(buckConfig));
 
-      CxxSourceRuleFactory cxxSourceRuleFactory = CxxSourceRuleFactory.builder()
-          .setParams(params)
-          .setResolver(buildRuleResolver)
-          .setPathResolver(new SourcePathResolver(buildRuleResolver))
-          .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
-          .setCxxPlatform(platform)
-          .setPicType(CxxSourceRuleFactory.PicType.PDC)
-          .build();
+      CxxSourceRuleFactory cxxSourceRuleFactory =
+          CxxSourceRuleFactory.builder()
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
+              .setPathResolver(pathResolver)
+              .setRuleFinder(ruleFinder)
+              .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
+              .setCxxPlatform(platform)
+              .setPicType(PicType.PDC)
+              .build();
 
       String[] sourceNames = testExampleSourceSets.get(testExampleSourceSet);
       Map<String, CxxSource> sources = new HashMap<>();
       for (String sourceName : sourceNames) {
         sources.put(
             sourceName,
-            CxxSource.of(
-                CxxSource.Type.OBJC,
-                new FakeSourcePath(sourceName),
-                ImmutableList.<String>of())
-        );
+            CxxSource.of(CxxSource.Type.OBJC, FakeSourcePath.of(sourceName), ImmutableList.of()));
       }
 
       ImmutableMap<CxxPreprocessAndCompile, SourcePath> rules =
-          cxxSourceRuleFactory.requirePreprocessAndCompileRules(
-              strategy,
-              ImmutableMap.copyOf(sources));
+          cxxSourceRuleFactory.requirePreprocessAndCompileRules(ImmutableMap.copyOf(sources));
 
       assertEquals(
           String.format("Expected %d rules, but found only %d", sourceNames.length, rules.size()),
-          sourceNames.length, rules.size());
+          sourceNames.length,
+          rules.size());
     }
   }
-
 
   @RunWith(Parameterized.class)
   public static class CorrectFlagsAreUsedForCompileAndPreprocessBuildRules {
@@ -583,21 +556,22 @@ public class CxxSourceRuleFactoryTest {
 
     @Parameterized.Parameters(name = "{0}")
     public static Collection<Object[]> data() {
-      return Arrays.asList(new Object[][]{
-          {"test.i", cflags, explicitCompilerFlags, empty, empty},
-          {"test.c", cflags, explicitCompilerFlags, cppflags, explicitCppflags},
-          {"test.ii", cxxflags, explicitCompilerFlags, empty, empty},
-          {"test.cpp", cxxflags, explicitCompilerFlags, cxxppflags, explicitCxxppflags},
+      return Arrays.asList(
+          new Object[][] {
+            {"test.i", cflags, explicitCompilerFlags, empty, empty},
+            {"test.c", cflags, explicitCompilerFlags, cppflags, explicitCppflags},
+            {"test.ii", cxxflags, explicitCompilerFlags, empty, empty},
+            {"test.cpp", cxxflags, explicitCompilerFlags, cxxppflags, explicitCxxppflags},
 
-          // asm do not have compiler specific flags, nor (non-as) file type specific flags.
-          {"test.s", empty, empty, asppflags, explicitCppflags},
+            // asm do not have compiler specific flags, nor (non-as) file type specific flags.
+            {"test.s", empty, empty, asppflags, explicitCppflags},
 
-          // ObjC
-          {"test.mi", cflags, explicitCompilerFlags, empty, empty},
-          {"test.m", cflags, explicitCompilerFlags, cppflags, explicitCppflags},
-          {"test.mii", cxxflags, explicitCompilerFlags, empty, empty},
-          {"test.mm", cxxflags, explicitCompilerFlags, cxxppflags, explicitCxxppflags},
-      });
+            // ObjC
+            {"test.mi", cflags, explicitCompilerFlags, empty, empty},
+            {"test.m", cflags, explicitCompilerFlags, cppflags, explicitCppflags},
+            {"test.mii", cxxflags, explicitCompilerFlags, empty, empty},
+            {"test.mm", cxxflags, explicitCompilerFlags, cxxppflags, explicitCxxppflags},
+          });
     }
 
     @Parameterized.Parameter(0)
@@ -616,11 +590,12 @@ public class CxxSourceRuleFactoryTest {
     public ImmutableList<String> expectedPreprocessorFlags;
 
     // Some common boilerplate.
-    private BuildRuleResolver buildRuleResolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    private SourcePathResolver sourcePathResolver = new SourcePathResolver(buildRuleResolver);
+    private ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+    private SourcePathRuleFinder sourcePathRuleFinder = new SourcePathRuleFinder(graphBuilder);
+    private SourcePathResolver sourcePathResolver =
+        DefaultSourcePathResolver.from(sourcePathRuleFinder);
+    private BuildContext context = FakeBuildContext.withSourcePathResolver(sourcePathResolver);
     private BuildTarget target = BuildTargetFactory.newInstance("//:target");
-    private BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
     private Joiner space = Joiner.on(" ");
 
     @Test
@@ -631,40 +606,51 @@ public class CxxSourceRuleFactoryTest {
 
       CxxPreprocessorInput cxxPreprocessorInput =
           CxxPreprocessorInput.builder()
-              .putAllPreprocessorFlags(CxxSource.Type.C, explicitCppflags)
-              .putAllPreprocessorFlags(CxxSource.Type.OBJC, explicitCppflags)
-              .putAllPreprocessorFlags(CxxSource.Type.ASSEMBLER_WITH_CPP, explicitCppflags)
-              .putAllPreprocessorFlags(CxxSource.Type.CXX, explicitCxxppflags)
-              .putAllPreprocessorFlags(CxxSource.Type.OBJCXX, explicitCxxppflags)
+              .putAllPreprocessorFlags(CxxSource.Type.C, StringArg.from(explicitCppflags))
+              .putAllPreprocessorFlags(CxxSource.Type.OBJC, StringArg.from(explicitCppflags))
+              .putAllPreprocessorFlags(
+                  CxxSource.Type.ASSEMBLER_WITH_CPP, StringArg.from(explicitCppflags))
+              .putAllPreprocessorFlags(CxxSource.Type.CXX, StringArg.from(explicitCxxppflags))
+              .putAllPreprocessorFlags(CxxSource.Type.OBJCXX, StringArg.from(explicitCxxppflags))
               .build();
-      BuckConfig buckConfig = FakeBuckConfig.builder()
-          .setSections(
-              ImmutableMap.of(
-                  "cxx", ImmutableMap.<String, String>builder()
-                      .put("asppflags", space.join(asppflags))
-                      .put("cppflags", space.join(cppflags))
-                      .put("cxxppflags", space.join(cxxppflags))
-                      .build()))
-          .setFilesystem(PROJECT_FILESYSTEM)
-          .build();
-      CxxPlatform platform = DefaultCxxPlatforms.build(new CxxBuckConfig(buckConfig));
+      BuckConfig buckConfig =
+          FakeBuckConfig.builder()
+              .setSections(
+                  ImmutableMap.of(
+                      "cxx",
+                      ImmutableMap.<String, String>builder()
+                          .put("asppflags", space.join(asppflags))
+                          .put("cppflags", space.join(cppflags))
+                          .put("cxxppflags", space.join(cxxppflags))
+                          .build()))
+              .setFilesystem(PROJECT_FILESYSTEM)
+              .build();
+      CxxPlatform platform = CxxPlatformUtils.build(new CxxBuckConfig(buckConfig));
 
-      CxxSourceRuleFactory cxxSourceRuleFactory = CxxSourceRuleFactory.builder()
-          .setParams(params)
-          .setResolver(buildRuleResolver)
-          .setPathResolver(sourcePathResolver)
-          .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
-          .setCxxPlatform(platform)
-          .addCxxPreprocessorInput(cxxPreprocessorInput)
-          .setPicType(CxxSourceRuleFactory.PicType.PDC)
-          .build();
+      CxxSourceRuleFactory cxxSourceRuleFactory =
+          CxxSourceRuleFactory.builder()
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
+              .setPathResolver(sourcePathResolver)
+              .setRuleFinder(sourcePathRuleFinder)
+              .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
+              .setCxxPlatform(platform)
+              .addCxxPreprocessorInput(cxxPreprocessorInput)
+              .setPicType(PicType.PDC)
+              .build();
 
       List<String> perFileFlags = ImmutableList.of("-per-file-flag", "-and-another-per-file-flag");
-      CxxSource cSource = CxxSource.of(sourceType, new FakeSourcePath(sourceName), perFileFlags);
+      CxxSource cSource = CxxSource.of(sourceType, FakeSourcePath.of(sourceName), perFileFlags);
       CxxPreprocessAndCompile cPreprocess =
-          cxxSourceRuleFactory.requirePreprocessBuildRule(sourceName, cSource);
+          cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(sourceName, cSource);
       ImmutableList<String> cPreprocessCommand =
-          cPreprocess.getPreprocessorDelegate().get().getCommand(CxxToolFlags.of());
+          Arg.stringify(
+              cPreprocess
+                  .getPreprocessorDelegate()
+                  .get()
+                  .getCommand(CxxToolFlags.of(), Optional.empty(), sourcePathResolver),
+              sourcePathResolver);
       assertContains(cPreprocessCommand, expectedTypeSpecificPreprocessorFlags);
       assertContains(cPreprocessCommand, expectedPreprocessorFlags);
       assertContains(cPreprocessCommand, perFileFlags);
@@ -675,65 +661,60 @@ public class CxxSourceRuleFactoryTest {
       CxxSource.Type sourceType =
           CxxSource.Type.fromExtension(MorePaths.getFileExtension(Paths.get(sourceName))).get();
 
-      Path scratchDir = Paths.get("scratchDir");
-      BuckConfig buckConfig = FakeBuckConfig.builder()
-          .setSections(
-              ImmutableMap.of(
-                  "cxx", ImmutableMap.<String, String>builder()
-                      .put("asflags", space.join(asflags))
-                      .put("cflags", space.join(cflags))
-                      .put("cxxflags", space.join(cxxflags))
-                      .build()))
-          .setFilesystem(PROJECT_FILESYSTEM)
-          .build();
-      CxxPlatform platform = DefaultCxxPlatforms.build(
-          new CxxBuckConfig(buckConfig));
+      BuckConfig buckConfig =
+          FakeBuckConfig.builder()
+              .setSections(
+                  ImmutableMap.of(
+                      "cxx",
+                      ImmutableMap.<String, String>builder()
+                          .put("asflags", space.join(asflags))
+                          .put("cflags", space.join(cflags))
+                          .put("cxxflags", space.join(cxxflags))
+                          .build()))
+              .setFilesystem(PROJECT_FILESYSTEM)
+              .build();
+      CxxPlatform platform = CxxPlatformUtils.build(new CxxBuckConfig(buckConfig));
 
-      CxxSourceRuleFactory cxxSourceRuleFactory = CxxSourceRuleFactory.builder()
-          .setParams(params)
-          .setResolver(buildRuleResolver)
-          .setPathResolver(sourcePathResolver)
-          .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
-          .setCxxPlatform(platform)
-          .setCompilerFlags(
-              CxxFlags.getLanguageFlags(
-                  Optional.of(expectedCompilerFlags),
-                  Optional.<PatternMatchedCollection<ImmutableList<String>>>absent(),
-                  Optional.<ImmutableMap<AbstractCxxSource.Type, ImmutableList<String>>>absent(),
-                  platform))
-          .setPicType(CxxSourceRuleFactory.PicType.PDC)
-          .build();
+      CxxSourceRuleFactory cxxSourceRuleFactory =
+          CxxSourceRuleFactory.builder()
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
+              .setPathResolver(sourcePathResolver)
+              .setRuleFinder(sourcePathRuleFinder)
+              .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
+              .setCxxPlatform(platform)
+              .setCompilerFlags(CxxFlags.toLanguageFlags(StringArg.from(expectedCompilerFlags)))
+              .setPicType(PicType.PDC)
+              .build();
 
       List<String> perFileFlags = ImmutableList.of("-per-file-flag");
-      CxxSource source = CxxSource.of(sourceType, new FakeSourcePath(sourceName), perFileFlags);
+      CxxSource source = CxxSource.of(sourceType, FakeSourcePath.of(sourceName), perFileFlags);
       CxxPreprocessAndCompile rule;
       if (source.getType().isPreprocessable()) {
-        rule = cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(
-            sourceName,
-            source,
-            CxxPreprocessMode.SEPARATE);
+        rule = cxxSourceRuleFactory.requirePreprocessAndCompileBuildRule(sourceName, source);
       } else {
         rule = cxxSourceRuleFactory.requireCompileBuildRule(sourceName, source);
       }
-      ImmutableList<String> command = rule.makeMainStep(scratchDir).getCommand();
+      ImmutableList<String> command = rule.makeMainStep(context, false).getCommand();
       assertContains(command, expectedCompilerFlags);
       assertContains(command, expectedTypeSpecificFlags);
       assertContains(command, asflags);
       assertContains(command, perFileFlags);
     }
-
   }
 
   @RunWith(Parameterized.class)
   public static class LanguageFlagsArePassed {
     @Parameterized.Parameters(name = "{0} -> {1}")
     public static Collection<Object[]> data() {
-      return Arrays.asList(new Object[][]{
-          {"foo/bar.ii", "c++-cpp-output"},
-          {"foo/bar.mi", "objective-c-cpp-output"},
-          {"foo/bar.mii", "objective-c++-cpp-output"},
-          {"foo/bar.i", "cpp-output"},
-      });
+      return Arrays.asList(
+          new Object[][] {
+            {"foo/bar.ii", "c++-cpp-output"},
+            {"foo/bar.mi", "objective-c-cpp-output"},
+            {"foo/bar.mii", "objective-c++-cpp-output"},
+            {"foo/bar.i", "cpp-output"},
+          });
     }
 
     @Parameterized.Parameter(0)
@@ -744,30 +725,32 @@ public class CxxSourceRuleFactoryTest {
 
     @Test
     public void test() {
-      BuildRuleResolver buildRuleResolver =
-          new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-      SourcePathResolver sourcePathResolver = new SourcePathResolver(buildRuleResolver);
+      ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
+      SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(graphBuilder);
+      SourcePathResolver sourcePathResolver = DefaultSourcePathResolver.from(ruleFinder);
+      BuildContext context = FakeBuildContext.withSourcePathResolver(sourcePathResolver);
       BuildTarget target = BuildTargetFactory.newInstance("//:target");
-      BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
-      Path scratchDir = Paths.get("scratchDir");
-      CxxSourceRuleFactory cxxSourceRuleFactory = CxxSourceRuleFactory.builder()
-          .setParams(params)
-          .setResolver(buildRuleResolver)
-          .setPathResolver(sourcePathResolver)
-          .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
-          .setCxxPlatform(CXX_PLATFORM)
-          .setPicType(CxxSourceRuleFactory.PicType.PDC)
-          .build();
+      CxxSourceRuleFactory cxxSourceRuleFactory =
+          CxxSourceRuleFactory.builder()
+              .setProjectFilesystem(PROJECT_FILESYSTEM)
+              .setBaseBuildTarget(target)
+              .setActionGraphBuilder(graphBuilder)
+              .setPathResolver(sourcePathResolver)
+              .setRuleFinder(ruleFinder)
+              .setCxxBuckConfig(CxxPlatformUtils.DEFAULT_CONFIG)
+              .setCxxPlatform(CXX_PLATFORM)
+              .setPicType(PicType.PDC)
+              .build();
 
-      SourcePath input = new PathSourcePath(PROJECT_FILESYSTEM, target.getBasePath().resolve(name));
-      CxxSource cxxSource = CxxSource.of(
-          CxxSource.Type.fromExtension(MorePaths.getFileExtension(Paths.get(name))).get(),
-          input,
-          ImmutableList.<String>of());
+      SourcePath input = FakeSourcePath.of(PROJECT_FILESYSTEM, target.getBasePath().resolve(name));
+      CxxSource cxxSource =
+          CxxSource.of(
+              CxxSource.Type.fromExtension(MorePaths.getFileExtension(Paths.get(name))).get(),
+              input,
+              ImmutableList.of());
       CxxPreprocessAndCompile cxxCompile =
-          cxxSourceRuleFactory.createCompileBuildRule(name, cxxSource);
-      assertThat(
-          cxxCompile.makeMainStep(scratchDir).getCommand(), Matchers.hasItems("-x", expected));
+          cxxSourceRuleFactory.requireCompileBuildRule(name, cxxSource);
+      assertThat(cxxCompile.makeMainStep(context, false).getCommand(), hasItems("-x", expected));
     }
   }
 }
