@@ -18,27 +18,26 @@ package com.facebook.buck.rules.coercer;
 
 import static org.junit.Assert.assertEquals;
 
-import com.facebook.buck.io.MorePathsForTests;
-import com.facebook.buck.model.BuildTarget;
-import com.facebook.buck.model.Flavor;
-import com.facebook.buck.model.UnflavoredBuildTarget;
-import com.facebook.buck.rules.BuildTargetSourcePath;
-import com.facebook.buck.rules.CellPathResolver;
-import com.facebook.buck.rules.PathSourcePath;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
-import com.facebook.buck.util.HumanReadableException;
-import com.google.common.base.Optional;
+import com.facebook.buck.core.cell.CellPathResolver;
+import com.facebook.buck.core.cell.TestCellPathResolver;
+import com.facebook.buck.core.cell.impl.DefaultCellPathResolver;
+import com.facebook.buck.core.model.impl.ImmutableBuildTarget;
+import com.facebook.buck.core.model.impl.ImmutableUnflavoredBuildTarget;
+import com.facebook.buck.core.sourcepath.DefaultBuildTargetSourcePath;
+import com.facebook.buck.core.sourcepath.PathSourcePath;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.io.file.MorePathsForTests;
+import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
-
+import java.io.IOException;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Optional;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
-
-import java.io.IOException;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class SourcePathTypeCoercerTest {
   private FakeProjectFilesystem projectFilesystem;
@@ -50,119 +49,74 @@ public class SourcePathTypeCoercerTest {
   @Before
   public void setUp() {
     projectFilesystem = new FakeProjectFilesystem();
-
-    cellRoots = new CellPathResolver() {
-      @Override
-      public Path getCellPath(Optional<String> cellName) {
-        if (cellName.isPresent()) {
-          throw new HumanReadableException("Boom");
-        }
-        return projectFilesystem.getRootPath();
-      }
-    };
-
+    cellRoots = TestCellPathResolver.get(projectFilesystem);
   }
 
   @Before
-  public void setUpCellRoots() {
-  }
+  public void setUpCellRoots() {}
 
-
-
-  @Rule
-  public ExpectedException exception = ExpectedException.none();
+  @Rule public ExpectedException exception = ExpectedException.none();
 
   @Test
   public void coercePath() throws CoerceFailedException, IOException {
     String path = "hello.a";
     projectFilesystem.touch(Paths.get(path));
 
-    SourcePath sourcePath = sourcePathTypeCoercer.coerce(
-        cellRoots,
-        projectFilesystem,
-        pathRelativeToProjectRoot,
-        path);
+    SourcePath sourcePath =
+        sourcePathTypeCoercer.coerce(cellRoots, projectFilesystem, pathRelativeToProjectRoot, path);
 
-    assertEquals(new PathSourcePath(projectFilesystem, Paths.get(path)), sourcePath);
+    assertEquals(PathSourcePath.of(projectFilesystem, Paths.get(path)), sourcePath);
   }
 
   @Test
-  public void coerceAbsoluteBuildTarget() throws CoerceFailedException, IOException {
-    SourcePath sourcePath = sourcePathTypeCoercer.coerce(
-        cellRoots,
-        projectFilesystem,
-        pathRelativeToProjectRoot,
-        "//:hello");
+  public void coerceAbsoluteBuildTarget() throws CoerceFailedException {
+    SourcePath sourcePath =
+        sourcePathTypeCoercer.coerce(
+            cellRoots, projectFilesystem, pathRelativeToProjectRoot, "//:hello");
 
     assertEquals(
-        new BuildTargetSourcePath(
-            BuildTarget.of(
-                UnflavoredBuildTarget.of(
-                    projectFilesystem.getRootPath(),
-                    Optional.<String>absent(),
-                    "//",
-                    "hello"),
-                ImmutableSortedSet.<Flavor>of())),
+        DefaultBuildTargetSourcePath.of(
+            ImmutableBuildTarget.of(
+                ImmutableUnflavoredBuildTarget.of(
+                    projectFilesystem.getRootPath(), Optional.empty(), "//", "hello"),
+                ImmutableSortedSet.of())),
         sourcePath);
   }
 
   @Test
-  public void coerceRelativeBuildTarget() throws CoerceFailedException, IOException {
-    SourcePath sourcePath = sourcePathTypeCoercer.coerce(
-        cellRoots,
-        projectFilesystem,
-        pathRelativeToProjectRoot,
-        ":hello");
+  public void coerceRelativeBuildTarget() throws CoerceFailedException {
+    SourcePath sourcePath =
+        sourcePathTypeCoercer.coerce(
+            cellRoots, projectFilesystem, pathRelativeToProjectRoot, ":hello");
 
     assertEquals(
-        new BuildTargetSourcePath(
-            BuildTarget.of(
-                UnflavoredBuildTarget.of(
-                    projectFilesystem.getRootPath(),
-                      Optional.<String>absent(),
-                      "//",
-                      "hello"),
-                ImmutableSortedSet.<Flavor>of())),
+        DefaultBuildTargetSourcePath.of(
+            ImmutableBuildTarget.of(
+                ImmutableUnflavoredBuildTarget.of(
+                    projectFilesystem.getRootPath(), Optional.empty(), "//", "hello"),
+                ImmutableSortedSet.of())),
         sourcePath);
   }
 
   @Test
-  public void coerceCrossRepoBuildTarget() throws CoerceFailedException, IOException {
-    final Path helloRoot = Paths.get("/opt/src/hello");
+  public void coerceCrossRepoBuildTarget() throws CoerceFailedException {
+    Path helloRoot = Paths.get("/opt/src/hello");
+    cellRoots =
+        DefaultCellPathResolver.of(
+            projectFilesystem.getRootPath(), ImmutableMap.of("hello", helloRoot));
 
-    cellRoots = new CellPathResolver() {
-      @Override
-      public Path getCellPath(Optional<String> input) {
-        if (!input.isPresent()) {
-          return projectFilesystem.getRootPath();
-        }
-
-        if ("hello".equals(input.get())) {
-          return helloRoot;
-        }
-
-        throw new RuntimeException("Boom!");
-      }
-    };
-
-    SourcePath sourcePath = sourcePathTypeCoercer.coerce(
-        cellRoots,
-        projectFilesystem,
-        pathRelativeToProjectRoot,
-        "hello//:hello");
+    SourcePath sourcePath =
+        sourcePathTypeCoercer.coerce(
+            cellRoots, projectFilesystem, pathRelativeToProjectRoot, "hello//:hello");
 
     // Note that the important thing is that the root of the target has been set to `helloRoot` so
     // the cell name should be absent (otherwise, we'd look for a cell named `@hello` from the
     // `@hello` cell. Yeah. My head hurts a little too.
     assertEquals(
-        new BuildTargetSourcePath(
-            BuildTarget.of(
-                UnflavoredBuildTarget.of(
-                    helloRoot,
-                    Optional.of("hello"),
-                    "//",
-                    "hello"),
-                ImmutableSortedSet.<Flavor>of())),
+        DefaultBuildTargetSourcePath.of(
+            ImmutableBuildTarget.of(
+                ImmutableUnflavoredBuildTarget.of(helloRoot, Optional.of("hello"), "//", "hello"),
+                ImmutableSortedSet.of())),
         sourcePath);
   }
 
@@ -172,13 +126,9 @@ public class SourcePathTypeCoercerTest {
     projectFilesystem.touch(path);
 
     exception.expect(CoerceFailedException.class);
-    exception.expectMessage(
-        "SourcePath cannot contain an absolute path");
+    exception.expectMessage("SourcePath cannot contain an absolute path");
 
     sourcePathTypeCoercer.coerce(
-        cellRoots,
-        projectFilesystem,
-        pathRelativeToProjectRoot,
-        path.toString());
+        cellRoots, projectFilesystem, pathRelativeToProjectRoot, path.toString());
   }
 }
